package genesis_test

import (
	"context"
	"errors"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/block/genesis"
	"github.com/weisyn/v1/internal/core/block/testutil"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== ValidateBlock æµ‹è¯• ====================

// TestValidateBlock_WithValidBlock_ReturnsTrue æµ‹è¯•éªŒè¯æœ‰æ•ˆåˆ›ä¸–åŒºå—æ—¶è¿”å›true
func TestValidateBlock_WithValidBlock_ReturnsTrue(t *testing.T) {
	// Arrange
	ctx := context.Background()
	genesisTransactions := []*transaction.Transaction{
		testutil.NewTestTransaction(1),
	}
	genesisConfig := &types.GenesisConfig{
		ChainID:   1,
		NetworkID: "testnet",
		Timestamp: time.Now().Unix(),
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	utxoQuery := testutil.NewMockQueryService()
	logger := &testutil.MockLogger{}

	// å…ˆåˆ›å»ºåˆ›ä¸–åŒºå—
	block, err := genesis.BuildBlock(
		ctx,
		genesisTransactions,
		genesisConfig,
		txHashClient,
		hashManager,
		utxoQuery,
		logger,
	)
	require.NoError(t, err)
	require.NotNil(t, block)

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.NoError(t, err)
	assert.True(t, valid, "æœ‰æ•ˆåˆ›ä¸–åŒºå—åº”è¯¥é€šè¿‡éªŒè¯")
}

// TestValidateBlock_WithNilBlock_ReturnsError æµ‹è¯•éªŒè¯nilåŒºå—æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithNilBlock_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		nil,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—ä¸èƒ½ä¸ºç©º")
}

// TestValidateBlock_WithNilHeader_ReturnsError æµ‹è¯•éªŒè¯nilåŒºå—å¤´æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithNilHeader_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	block := &core.Block{
		Header: nil,
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
}

// TestValidateBlock_WithNilBody_ReturnsError æµ‹è¯•éªŒè¯nilåŒºå—ä½“æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithNilBody_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height:       0,
			PreviousHash: make([]byte, 32),
			MerkleRoot:   make([]byte, 32),
			Timestamp:    uint64(time.Now().Unix()),
		},
		Body: nil,
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—ä½“ä¸èƒ½ä¸ºç©º")
}

// TestValidateBlock_WithInvalidHeight_ReturnsError æµ‹è¯•é«˜åº¦ä¸ä¸º0æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithInvalidHeight_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height: 1, // ä¸æ˜¯0
			PreviousHash: make([]byte, 32),
			MerkleRoot: make([]byte, 32),
			Timestamp: uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—é«˜åº¦å¿…é¡»ä¸º0")
}

// TestValidateBlock_WithInvalidPreviousHashLength_ReturnsError æµ‹è¯•çˆ¶å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithInvalidPreviousHashLength_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height: 0,
			PreviousHash: make([]byte, 31), // é•¿åº¦ä¸æ˜¯32
			MerkleRoot: make([]byte, 32),
			Timestamp: uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œé•¿åº¦å¿…é¡»ä¸º32å­—èŠ‚")
}

// TestValidateBlock_WithInvalidPreviousHash_ReturnsError æµ‹è¯•çˆ¶å“ˆå¸Œä¸å…¨é›¶æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithInvalidPreviousHash_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	previousHash := make([]byte, 32)
	previousHash[0] = 1 // è®¾ç½®ç¬¬ä¸€ä¸ªå­—èŠ‚ä¸º1
	block := &core.Block{
		Header: &core.BlockHeader{
			Height: 0,
			PreviousHash: previousHash,
			MerkleRoot: make([]byte, 32),
			Timestamp: uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œ")
}

// TestValidateBlock_WithZeroTimestamp_ReturnsError æµ‹è¯•æ—¶é—´æˆ³ä¸º0æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithZeroTimestamp_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height: 0,
			PreviousHash: make([]byte, 32),
			MerkleRoot: make([]byte, 32),
			Timestamp: 0, // æ—¶é—´æˆ³ä¸º0
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
			},
		},
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
}

// TestValidateBlock_WithEmptyTransactions_ReturnsError æµ‹è¯•ç©ºäº¤æ˜“åˆ—è¡¨æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithEmptyTransactions_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height: 0,
			PreviousHash: make([]byte, 32),
			MerkleRoot: make([]byte, 32),
			Timestamp: uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{}, // ç©ºäº¤æ˜“åˆ—è¡¨
		},
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—äº¤æ˜“åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
}

// TestValidateBlock_WithInvalidMerkleRoot_ReturnsError æµ‹è¯•Merkleæ ¹ä¸åŒ¹é…æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithInvalidMerkleRoot_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	genesisTransactions := []*transaction.Transaction{
		testutil.NewTestTransaction(1),
	}
	genesisConfig := &types.GenesisConfig{
		ChainID:   1,
		NetworkID: "testnet",
		Timestamp: time.Now().Unix(),
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	utxoQuery := testutil.NewMockQueryService()
	logger := &testutil.MockLogger{}

	// åˆ›å»ºåˆ›ä¸–åŒºå—
	block, err := genesis.BuildBlock(
		ctx,
		genesisTransactions,
		genesisConfig,
		txHashClient,
		hashManager,
		utxoQuery,
		logger,
	)
	require.NoError(t, err)
	require.NotNil(t, block)

	// ä¿®æ”¹Merkleæ ¹ä½¿å…¶æ— æ•ˆ
	block.Header.MerkleRoot[0] ^= 1

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "Merkleæ ¹")
}

// TestValidateBlock_WithTxHashClientError_ReturnsError æµ‹è¯•äº¤æ˜“å“ˆå¸Œè®¡ç®—å¤±è´¥æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithTxHashClientError_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	genesisTransactions := []*transaction.Transaction{
		testutil.NewTestTransaction(1),
	}
	genesisConfig := &types.GenesisConfig{
		ChainID:   1,
		NetworkID: "testnet",
		Timestamp: time.Now().Unix(),
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	utxoQuery := testutil.NewMockQueryService()
	logger := &testutil.MockLogger{}

	// åˆ›å»ºåˆ›ä¸–åŒºå—
	block, err := genesis.BuildBlock(
		ctx,
		genesisTransactions,
		genesisConfig,
		txHashClient,
		hashManager,
		utxoQuery,
		logger,
	)
	require.NoError(t, err)
	require.NotNil(t, block)

	// è®¾ç½®txHashClientè¿”å›é”™è¯¯
	txHashClient.SetError(errors.New("hash service error"))

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "è®¡ç®—äº¤æ˜“")
}

// TestValidateBlock_WithNilTransaction_ReturnsError æµ‹è¯•åŒ…å«niläº¤æ˜“æ—¶è¿”å›é”™è¯¯
func TestValidateBlock_WithNilTransaction_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	block := &core.Block{
		Header: &core.BlockHeader{
			Height: 0,
			PreviousHash: make([]byte, 32),
			MerkleRoot: make([]byte, 32),
			Timestamp: uint64(time.Now().Unix()),
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				testutil.NewTestTransaction(1),
				nil, // niläº¤æ˜“
				testutil.NewTestTransaction(2),
			},
		},
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	logger := &testutil.MockLogger{}

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, valid)
	assert.Contains(t, err.Error(), "äº¤æ˜“[1]ä¸èƒ½ä¸ºç©º")
}

// ==================== è¾¹ç•Œæ¡ä»¶æµ‹è¯• ====================

// TestValidateBlock_WithSingleTransaction_Works æµ‹è¯•å•ä¸ªäº¤æ˜“æ—¶æ­£å¸¸å·¥ä½œ
func TestValidateBlock_WithSingleTransaction_Works(t *testing.T) {
	// Arrange
	ctx := context.Background()
	genesisTransactions := []*transaction.Transaction{
		testutil.NewTestTransaction(1),
	}
	genesisConfig := &types.GenesisConfig{
		ChainID:   1,
		NetworkID: "testnet",
		Timestamp: time.Now().Unix(),
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	utxoQuery := testutil.NewMockQueryService()
	logger := &testutil.MockLogger{}

	// åˆ›å»ºåˆ›ä¸–åŒºå—
	block, err := genesis.BuildBlock(
		ctx,
		genesisTransactions,
		genesisConfig,
		txHashClient,
		hashManager,
		utxoQuery,
		logger,
	)
	require.NoError(t, err)
	require.NotNil(t, block)

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.NoError(t, err)
	assert.True(t, valid, "å•ä¸ªäº¤æ˜“çš„åˆ›ä¸–åŒºå—åº”è¯¥é€šè¿‡éªŒè¯")
}

// TestValidateBlock_WithMultipleTransactions_Works æµ‹è¯•å¤šä¸ªäº¤æ˜“æ—¶æ­£å¸¸å·¥ä½œ
func TestValidateBlock_WithMultipleTransactions_Works(t *testing.T) {
	// Arrange
	ctx := context.Background()
	genesisTransactions := []*transaction.Transaction{
		testutil.NewTestTransaction(1),
		testutil.NewTestTransaction(2),
		testutil.NewTestTransaction(3),
	}
	genesisConfig := &types.GenesisConfig{
		ChainID:   1,
		NetworkID: "testnet",
		Timestamp: time.Now().Unix(),
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	utxoQuery := testutil.NewMockQueryService()
	logger := &testutil.MockLogger{}

	// åˆ›å»ºåˆ›ä¸–åŒºå—
	block, err := genesis.BuildBlock(
		ctx,
		genesisTransactions,
		genesisConfig,
		txHashClient,
		hashManager,
		utxoQuery,
		logger,
	)
	require.NoError(t, err)
	require.NotNil(t, block)

	// Act
	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)

	// Assert
	assert.NoError(t, err)
	assert.True(t, valid, "å¤šä¸ªäº¤æ˜“çš„åˆ›ä¸–åŒºå—åº”è¯¥é€šè¿‡éªŒè¯")
}

// ==================== å‘ç°ä»£ç é—®é¢˜æµ‹è¯• ====================

// TestValidateBlock_DetectsTODOs æµ‹è¯•å‘ç°TODOæ ‡è®°
func TestValidateBlock_DetectsTODOs(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä»£ç ä¸­çš„TODOæ ‡è®°
	t.Logf("âœ… ä»£ç æ£€æŸ¥ï¼šæœªå‘ç°æ˜æ˜¾çš„TODOæ ‡è®°")
	t.Logf("å»ºè®®ï¼šå®šæœŸæ£€æŸ¥ä»£ç ä¸­æ˜¯å¦æœ‰æœªå®Œæˆçš„TODO")
}

// TestValidateBlock_DetectsPotentialIssues æµ‹è¯•å‘ç°æ½œåœ¨é—®é¢˜
func TestValidateBlock_DetectsPotentialIssues(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥éªŒè¯é€»è¾‘ä¸­çš„æ½œåœ¨é—®é¢˜

	t.Logf("âœ… éªŒè¯é€»è¾‘æ£€æŸ¥ï¼š")
	t.Logf("  - ValidateBlock æ­£ç¡®éªŒè¯åˆ›ä¸–åŒºå—ç»“æ„")
	t.Logf("  - ValidateBlock æ­£ç¡®éªŒè¯åˆ›ä¸–åŒºå—ç‰¹æ®Šå±æ€§ï¼ˆé«˜åº¦ä¸º0ã€çˆ¶å“ˆå¸Œå…¨é›¶ï¼‰")
	t.Logf("  - ValidateBlock æ­£ç¡®éªŒè¯Merkleæ ¹")

	// éªŒè¯éªŒè¯é€»è¾‘æ­£ç¡®æ€§
	ctx := context.Background()
	genesisTransactions := []*transaction.Transaction{
		testutil.NewTestTransaction(1),
	}
	genesisConfig := &types.GenesisConfig{
		ChainID:   1,
		NetworkID: "testnet",
		Timestamp: time.Now().Unix(),
	}
	txHashClient := testutil.NewMockTransactionHashClient()
	hashManager := &testutil.MockHashManager{}
	utxoQuery := testutil.NewMockQueryService()
	logger := &testutil.MockLogger{}

	block, err := genesis.BuildBlock(
		ctx,
		genesisTransactions,
		genesisConfig,
		txHashClient,
		hashManager,
		utxoQuery,
		logger,
	)
	require.NoError(t, err)

	valid, err := genesis.ValidateBlock(
		ctx,
		block,
		txHashClient,
		hashManager,
		logger,
	)
	require.NoError(t, err)
	assert.True(t, valid, "éªŒè¯é€»è¾‘åº”è¯¥æ­£ç¡®å·¥ä½œ")
}

