// Package event æä¾› Block æ¨¡å—çš„äº‹ä»¶é›†æˆ
//
// ğŸ¯ **äº‹ä»¶å‘å¸ƒå¸®åŠ©å‡½æ•°**
//
// æœ¬æ–‡ä»¶æä¾›äº†ä¾¿æ·çš„äº‹ä»¶å‘å¸ƒå‡½æ•°ï¼Œç”¨äºåœ¨åŒºå—å¤„ç†å®Œæˆåå‘å¸ƒäº‹ä»¶ã€‚
package event

import (
	"context"

	eventconstants "github.com/weisyn/v1/pkg/constants/events"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/types"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"google.golang.org/protobuf/proto"
)

// PublishBlockProcessedEvent å‘å¸ƒåŒºå—å¤„ç†å®Œæˆäº‹ä»¶
//
// ğŸ¯ **å‡ºç«™äº‹ä»¶**ï¼šEventTypeBlockProcessed
//
// ç”¨é€”ï¼š
// - é€šçŸ¥ Chain æ¨¡å—æ›´æ–°é“¾å°–çŠ¶æ€
// - é€šçŸ¥å…¶ä»–è®¢é˜…è€…åŒºå—å·²æˆåŠŸå¤„ç†
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - eventBus: äº‹ä»¶æ€»çº¿
//   - logger: æ—¥å¿—è®°å½•å™¨
//   - block: å·²å¤„ç†çš„åŒºå—
//   - blockHash: åŒºå—å“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//
// è¿”å›ï¼š
//   - error: å‘å¸ƒé”™è¯¯
func PublishBlockProcessedEvent(
	ctx context.Context,
	eventBus event.EventBus,
	logger log.Logger,
	block *core.Block,
	blockHash []byte,
) error {
	if eventBus == nil {
		if logger != nil {
			logger.Debug("EventBusä¸å¯ç”¨ï¼Œè·³è¿‡äº‹ä»¶å‘å¸ƒ")
		}
		return nil
	}

	// æ£€æŸ¥åŒºå—æ˜¯å¦ä¸º nil
	if block == nil {
		if logger != nil {
			logger.Warn("åŒºå—ä¸ºnilï¼Œè·³è¿‡äº‹ä»¶å‘å¸ƒ")
		}
		return nil
	}

	// æ£€æŸ¥åŒºå—å¤´å’ŒåŒºå—ä½“æ˜¯å¦ä¸º nil
	if block.Header == nil || block.Body == nil {
		if logger != nil {
			logger.Warn("åŒºå—å¤´æˆ–åŒºå—ä½“ä¸ºnilï¼Œè·³è¿‡äº‹ä»¶å‘å¸ƒ")
		}
		return nil
	}

	// åˆ›å»ºäº‹ä»¶æ•°æ®
	eventData := &types.BlockProcessedEventData{
		Height:           block.Header.Height,
		Hash:             string(blockHash), // ä½¿ç”¨å®é™…åŒºå—å“ˆå¸Œ
		ParentHash:       string(block.Header.PreviousHash),
		StateRoot:        string(block.Header.StateRoot),
		TxCount:          len(block.Body.Transactions),
		TransactionCount: len(block.Body.Transactions),
		Timestamp:        int64(block.Header.Timestamp),
		Size:             int64(proto.Size(block)), // è®¡ç®—åŒºå—å¤§å°
	}

	// å‘å¸ƒäº‹ä»¶ï¼ˆEventBus.Publish æ— è¿”å›å€¼ï¼‰
	// âš ï¸ æ³¨æ„ï¼šè®¢é˜…è€…æœŸæœ› (ctx context.Context, data interface{}) ä¸¤ä¸ªå‚æ•°
	eventBus.Publish(eventconstants.EventTypeBlockProcessed, ctx, eventData)

	if logger != nil {
		logger.Debugf("âœ… å·²å‘å¸ƒBlockProcessedäº‹ä»¶ï¼Œé«˜åº¦: %d",
			block.Header.Height)
	}

	return nil
}

// PublishForkDetectedEvent å‘å¸ƒåˆ†å‰æ£€æµ‹äº‹ä»¶
//
// ğŸ¯ **å‡ºç«™äº‹ä»¶**ï¼šEventTypeForkDetected
//
// ç”¨é€”ï¼š
// - é€šçŸ¥ Chain/Fork æ¨¡å—å¤„ç†åˆ†å‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - eventBus: äº‹ä»¶æ€»çº¿
//   - logger: æ—¥å¿—è®°å½•å™¨
//   - forkBlock: åˆ†å‰åŒºå—
//   - localBlockHash: æœ¬åœ°åŒºå—å“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//   - forkBlockHash: åˆ†å‰åŒºå—å“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//
// è¿”å›ï¼š
//   - error: å‘å¸ƒé”™è¯¯
func PublishForkDetectedEvent(
	ctx context.Context,
	eventBus event.EventBus,
	logger log.Logger,
	forkBlock *core.Block,
	localBlockHash []byte,
	forkBlockHash []byte,
) error {
	if eventBus == nil {
		if logger != nil {
			logger.Debug("EventBusä¸å¯ç”¨ï¼Œè·³è¿‡äº‹ä»¶å‘å¸ƒ")
		}
		return nil
	}

	// æ£€æŸ¥åˆ†å‰åŒºå—æ˜¯å¦ä¸º nil
	if forkBlock == nil {
		if logger != nil {
			logger.Warn("åˆ†å‰åŒºå—ä¸ºnilï¼Œè·³è¿‡äº‹ä»¶å‘å¸ƒ")
		}
		return nil
	}

	// æ£€æŸ¥åŒºå—å¤´æ˜¯å¦ä¸º nil
	if forkBlock.Header == nil {
		if logger != nil {
			logger.Warn("åˆ†å‰åŒºå—å¤´ä¸ºnilï¼Œè·³è¿‡äº‹ä»¶å‘å¸ƒ")
		}
		return nil
	}

	// åˆ›å»ºäº‹ä»¶æ•°æ®
	eventData := &types.ForkDetectedEventData{
		Height:         forkBlock.Header.Height,
		ForkHeight:     forkBlock.Header.Height,
		LocalBlockHash: string(localBlockHash), // ä½¿ç”¨å®é™…æœ¬åœ°åŒºå—å“ˆå¸Œ
		ForkBlockHash:  string(forkBlockHash), // ä½¿ç”¨å®é™…åˆ†å‰åŒºå—å“ˆå¸Œ
		ConflictType:   "block_hash",
		ForkType:       "block_hash",
		Source:         "validation",
		DetectedAt:     int64(forkBlock.Header.Timestamp),
		Message:        "æ£€æµ‹åˆ°åˆ†å‰åŒºå—",
	}

	// å‘å¸ƒäº‹ä»¶ï¼ˆEventBus.Publish æ— è¿”å›å€¼ï¼‰
	// âš ï¸ æ³¨æ„ï¼šè®¢é˜…è€…æœŸæœ› (ctx context.Context, data interface{}) ä¸¤ä¸ªå‚æ•°
	eventBus.Publish(eventconstants.EventTypeForkDetected, ctx, eventData)

	if logger != nil {
		logger.Warnf("âš ï¸ å·²å‘å¸ƒForkDetectedäº‹ä»¶ï¼Œåˆ†å‰åŒºå—é«˜åº¦: %d",
			forkBlock.Header.Height)
	}

	return nil
}

