// Package processor å®ç°åŒºå—å¤„ç†æœåŠ¡
package processor

import (
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/types"
)

// executeBlock æ‰§è¡ŒåŒºå—å¤„ç†
//
// ğŸ¯ **åŒºå—æ‰§è¡Œæµç¨‹**ï¼š
// 1. æ‰§è¡Œå¹¶éªŒè¯æ‰€æœ‰äº¤æ˜“ï¼ˆä¸šåŠ¡éªŒè¯ï¼ŒåŒ…æ‹¬ ZK / èµ„æº / å¼•ç”¨UTXO ç­‰ï¼‰
// 2. å­˜å‚¨åŒºå—æ•°æ®ï¼ˆé€šè¿‡ DataWriterï¼ŒåŸå­æ€§æ›´æ–°åŒºå—/ç´¢å¼•/UTXO/é“¾çŠ¶æ€ï¼‰
// 3. æ›´æ–°å¼•ç”¨è®¡æ•°ä¸çŠ¶æ€æ ¹ï¼ˆé€šè¿‡ UTXOWriterï¼‰
// 4. æ¸…ç†äº¤æ˜“æ± 
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…æ‰§è¡ŒåŒºå—
//
// è¿”å›ï¼š
//   - error: æ‰§è¡Œé”™è¯¯
func (s *Service) executeBlock(ctx context.Context, block *core.Block) error {
	if s.logger != nil {
		s.logger.Debugf("å¼€å§‹æ‰§è¡ŒåŒºå—ï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d",
			block.Header.Height, len(block.Body.Transactions))
	}

	// 1. éªŒè¯æ‰€æœ‰äº¤æ˜“æ‰§è¡Œç»“æœï¼ˆexecuteTransactionsï¼ŒS1ï¼‰
	// âœ… **èŒè´£åˆ†ç¦»**ï¼šUTXO å˜æ›´ç”± DataWriter å¤„ç†ï¼ŒéªŒè¯ç”± executeTransactions å¤„ç†
	// âŒ **ä¸é‡æ–°æ‰§è¡Œæ™ºèƒ½åˆçº¦**ï¼ˆåˆçº¦å·²åœ¨ TX å±‚æ‰§è¡Œï¼‰
	if err := s.executeTransactions(ctx, block); err != nil {
		return fmt.Errorf("äº¤æ˜“éªŒè¯å¤±è´¥: %w", err)
	}

	// 2. å­˜å‚¨åŒºå—æ•°æ®ï¼ˆé€šè¿‡ DataWriterï¼Œä¼šè‡ªåŠ¨å¤„ç† UTXO å˜æ›´ï¼ŒS2-S5ï¼‰
	//    åªæœ‰åœ¨ä¸šåŠ¡éªŒè¯å…¨éƒ¨é€šè¿‡åæ‰å†™å…¥ï¼Œç¡®ä¿å¯¹å¤–è¯­ä¹‰ä¸Šçš„â€œåŸå­æ€§â€
	if err := s.storeBlock(ctx, block); err != nil {
		return fmt.Errorf("å­˜å‚¨åŒºå—å¤±è´¥: %w", err)
	}

	// 3. âœ… æ¶æ„ä¿®å¤ï¼šå¤„ç†å¼•ç”¨è®¡æ•°ç®¡ç†ï¼ˆä¸šåŠ¡é€»è¾‘ï¼Œåº”åœ¨ DataWriter å†™å…¥åå¤„ç†ï¼‰
	if err := s.processReferenceCounts(ctx, block); err != nil {
		// å¼•ç”¨è®¡æ•°ç®¡ç†å¤±è´¥ä¸å½±å“åŒºå—å¤„ç†ï¼Œåªè®°å½•è­¦å‘Š
		if s.logger != nil {
			s.logger.Warnf("âš ï¸ å¼•ç”¨è®¡æ•°ç®¡ç†å¤±è´¥: %v", err)
		}
	}

	// 4. âœ… æ¶æ„ä¿®å¤ï¼šæ›´æ–°çŠ¶æ€æ ¹ï¼ˆä¸šåŠ¡é€»è¾‘ï¼Œåº”åœ¨ UTXO å˜æ›´åå¤„ç†ï¼‰
	if err := s.updateStateRoot(ctx, block); err != nil {
		// çŠ¶æ€æ ¹æ›´æ–°å¤±è´¥ä¸å½±å“åŒºå—å¤„ç†ï¼Œä½†è¿™é€šå¸¸æ„å‘³ç€ UTXO/çŠ¶æ€ä¸ä¸€è‡´ï¼Œéœ€è¦è‡ªæ„ˆé“¾è·¯ä»‹å…¥
		h := block.Header.Height
		s.publishCorruptionDetected(ctx, types.CorruptionPhaseApply, types.CorruptionSeverityWarning, &h, "", "utxo:state_root", err)

		if s.logger != nil {
			s.logger.Warnf("âš ï¸ çŠ¶æ€æ ¹æ›´æ–°å¤±è´¥: %v", err)
		}
	}

	// 5. æ¸…ç†äº¤æ˜“æ± 
	if err := s.cleanMempool(ctx, block); err != nil {
		// æ¸…ç†å¤±è´¥ä¸å½±å“åŒºå—å¤„ç†ï¼Œåªè®°å½•è­¦å‘Š
		if s.logger != nil {
			s.logger.Warnf("æ¸…ç†äº¤æ˜“æ± å¤±è´¥: %v", err)
		}
	}

	return nil
}

// processReferenceCounts å¤„ç†å¼•ç”¨è®¡æ•°ç®¡ç†
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// åœ¨ DataWriter å†™å…¥åŒºå—åï¼Œæ‰«æåŒºå—ä¸­çš„äº¤æ˜“ï¼Œè¯†åˆ«å¼•ç”¨å‹è¾“å…¥å’Œè¢«æ¶ˆè´¹çš„å¼•ç”¨äº¤æ˜“ï¼Œ
// ç„¶åé€šè¿‡ eutxo.UTXOWriter å¤„ç†å¼•ç”¨è®¡æ•°ã€‚
//
// âœ… **æ¶æ„ä¿®å¤**ï¼š
// å¼•ç”¨è®¡æ•°ç®¡ç†æ˜¯ä¸šåŠ¡é€»è¾‘ï¼Œåº”è¯¥åœ¨ä¸šåŠ¡å±‚ï¼ˆBlockProcessorï¼‰å¤„ç†ï¼Œè€Œä¸æ˜¯åœ¨åŸºç¡€è®¾æ–½å±‚ï¼ˆPersistenceï¼‰ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. æ‰«æåŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// 2. è¯†åˆ«å¼•ç”¨å‹è¾“å…¥ï¼ˆis_reference_only=trueï¼‰ï¼Œå¢åŠ å¼•ç”¨è®¡æ•°
// 3. è¯†åˆ«è¢«æ¶ˆè´¹çš„å¼•ç”¨äº¤æ˜“ï¼Œå‡å°‘å¼•ç”¨è®¡æ•°
func (s *Service) processReferenceCounts(ctx context.Context, block *core.Block) error {
	if s.utxoWriter == nil {
		// utxoWriter ä¸å¯ç”¨ï¼Œè·³è¿‡å¼•ç”¨è®¡æ•°ç®¡ç†
		if s.logger != nil {
			s.logger.Debug("âš ï¸ utxoWriter ä¸å¯ç”¨ï¼Œè·³è¿‡å¼•ç”¨è®¡æ•°ç®¡ç†")
		}
		return nil
	}

	if block == nil || block.Body == nil || len(block.Body.Transactions) == 0 {
		return nil
	}

	// å½»åº•è¿­ä»£ï¼š
	// - å¼•ç”¨å‹è¾“å…¥ï¼ˆis_reference_onlyï¼‰æ˜¯â€œåªè¯»ä¾èµ–â€ï¼Œä¸å½¢æˆè·¨åŒºå—é”å®šè¯­ä¹‰ï¼›
	// - é“¾ä¸ŠæŒä¹…åŒ–çš„ä¸€è‡´æ€§ç”± DataWriter åœ¨åŒä¸€ Badger äº‹åŠ¡å†…ä¿è¯ï¼ˆåŒºå—/UTXO/ç´¢å¼•ï¼‰ï¼›
	// - å¼•ç”¨è®¡æ•°ï¼ˆref:*ï¼‰ä¸åº”ä½œä¸ºå…±è¯†é—¨é—¸ï¼Œå› æ­¤ä¸åœ¨åŒºå—å¤„ç†é˜¶æ®µåšæŒä¹…åŒ–å†™å…¥ï¼Œé¿å…å‡ºç°â€œå†™ä¸€åŠå¯¼è‡´è®¡æ•°æ®‹ç•™â€çš„è‡ªè¿è¡Œé—®é¢˜ã€‚
	//
	// ç»“è®ºï¼šè¿™é‡Œä¿æŒ no-opï¼Œä»…ä¿ç•™å‡½æ•°ä»¥å…¼å®¹ç°æœ‰è°ƒç”¨é“¾ä¸æ—¥å¿—è¯­ä¹‰ã€‚
	if s.logger != nil {
		s.logger.Debug("å¼•ç”¨è®¡æ•°ç®¡ç†ï¼ˆæŒä¹…åŒ–ï¼‰å·²åœ¨å½»åº•è¿­ä»£ä¸­ç¦ç”¨ï¼šreference_only ä»…ä½œä¸ºéªŒè¯è¯­ä¹‰ï¼Œä¸è½ ref:*")
	}
	return nil
}

// updateStateRoot æ›´æ–°çŠ¶æ€æ ¹
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// åœ¨ UTXO å˜æ›´å®Œæˆåï¼Œé‡æ–°è®¡ç®—çŠ¶æ€æ ¹å¹¶æ›´æ–°åˆ° EUTXO æ¨¡å—ã€‚
//
// âœ… **æ¶æ„ä¿®å¤**ï¼š
// çŠ¶æ€æ ¹æ›´æ–°æ˜¯ä¸šåŠ¡é€»è¾‘ï¼Œåº”è¯¥åœ¨ä¸šåŠ¡å±‚ï¼ˆBlockProcessorï¼‰å¤„ç†ï¼Œè€Œä¸æ˜¯åœ¨åŸºç¡€è®¾æ–½å±‚ï¼ˆPersistenceï¼‰ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. ä½¿ç”¨ UTXOQuery è®¡ç®—å½“å‰çŠ¶æ€æ ¹
// 2. é€šè¿‡ eutxo.UTXOWriter.UpdateStateRoot æ›´æ–°çŠ¶æ€æ ¹
func (s *Service) updateStateRoot(ctx context.Context, block *core.Block) error {
	if s.utxoWriter == nil {
		// utxoWriter ä¸å¯ç”¨ï¼Œè·³è¿‡çŠ¶æ€æ ¹æ›´æ–°
		if s.logger != nil {
			s.logger.Debug("âš ï¸ utxoWriter ä¸å¯ç”¨ï¼Œè·³è¿‡çŠ¶æ€æ ¹æ›´æ–°")
		}
		return nil
	}

	if s.utxoQuery == nil {
		// utxoQuery ä¸å¯ç”¨ï¼Œè·³è¿‡çŠ¶æ€æ ¹æ›´æ–°
		if s.logger != nil {
			s.logger.Debug("âš ï¸ utxoQuery ä¸å¯ç”¨ï¼Œè·³è¿‡çŠ¶æ€æ ¹æ›´æ–°")
		}
		return nil
	}

	// 1. è®¡ç®—æ–°çš„çŠ¶æ€æ ¹
	stateRoot, err := s.utxoQuery.GetCurrentStateRoot(ctx)
	if err != nil {
		return fmt.Errorf("è®¡ç®—çŠ¶æ€æ ¹å¤±è´¥: %w", err)
	}

	// 2. éªŒè¯çŠ¶æ€æ ¹é•¿åº¦
	if len(stateRoot) != 32 {
		return fmt.Errorf("çŠ¶æ€æ ¹é•¿åº¦é”™è¯¯: æœŸæœ›32å­—èŠ‚, å¾—åˆ°%då­—èŠ‚", len(stateRoot))
	}

	// 3. æ›´æ–°çŠ¶æ€æ ¹åˆ° EUTXO æ¨¡å—
	if err := s.utxoWriter.UpdateStateRoot(ctx, stateRoot); err != nil {
		return fmt.Errorf("æ›´æ–° EUTXO çŠ¶æ€æ ¹å¤±è´¥: %w", err)
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… EUTXO çŠ¶æ€æ ¹å·²æ›´æ–°: %x", stateRoot[:minHelper(8, len(stateRoot))])
	}

	return nil
}

// calculateTxHash è®¡ç®—äº¤æ˜“å“ˆå¸Œ
func (s *Service) calculateTxHash(ctx context.Context, txProto *transaction.Transaction) ([]byte, error) {
	if txProto == nil {
		return nil, fmt.Errorf("äº¤æ˜“ä¸ºç©º")
	}
	if s.txHashClient == nil {
		return nil, fmt.Errorf("txHashClient æœªåˆå§‹åŒ–")
	}

	req := &transaction.ComputeHashRequest{
		Transaction: txProto,
	}
	resp, err := s.txHashClient.ComputeHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return nil, fmt.Errorf("äº¤æ˜“ç»“æ„æ— æ•ˆ")
	}

	return resp.Hash, nil
}

// storeBlock å­˜å‚¨åŒºå—æ•°æ®ï¼ˆP3-6ï¼šå®Œæ•´åŒºå—å­˜å‚¨ï¼‰
//
// ğŸ¯ **å­˜å‚¨ç­–ç•¥**ï¼š
// 1. åºåˆ—åŒ–å®Œæ•´åŒºå—æ•°æ®
// 2. å­˜å‚¨åŒºå—æ•°æ®ï¼ˆblock:data:{hash}ï¼‰
// 3. å­˜å‚¨åŒºå—ç´¢å¼•ï¼ˆblock:height:{height} -> hashï¼‰
// 4. å­˜å‚¨åŒºå—å“ˆå¸Œç´¢å¼•ï¼ˆblock:hash:{hash} -> heightï¼‰
// 5. æ›´æ–°é“¾å°–çŠ¶æ€
func (s *Service) storeBlock(ctx context.Context, block *core.Block) error {
	// 1. è®¡ç®—åŒºå—å“ˆå¸Œ
	if s.blockHashClient == nil {
		// åŒºå—å“ˆå¸Œæ˜¯é“¾ä¸€è‡´æ€§çš„æ ¹åŸºï¼šä¸å…è®¸â€œä¸´æ—¶å€¼/å ä½ç¬¦â€å›é€€ã€‚
		return fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–ï¼šæ‹’ç»å­˜å‚¨åŒºå—ï¼ˆheight=%dï¼‰", block.Header.Height)
	}

	blockHash, err := s.calculateBlockHash(ctx, block.Header)
	if err != nil {
		return fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥ï¼šæ‹’ç»å­˜å‚¨åŒºå—ï¼ˆheight=%dï¼‰: %w", block.Header.Height, err)
	}
	if len(blockHash) == 0 {
		return fmt.Errorf("åŒºå—å“ˆå¸Œä¸ºç©ºï¼šæ‹’ç»å­˜å‚¨åŒºå—ï¼ˆheight=%dï¼‰", block.Header.Height)
	}

	// 2. å­˜å‚¨åŒºå—æ•°æ®ï¼ˆé€šè¿‡ DataWriterï¼Œå†…éƒ¨ä¼šå¤„ç†æ‰€æœ‰ç´¢å¼•å’ŒçŠ¶æ€æ›´æ–°ï¼‰
	// DataWriter.WriteBlock ä¼šè‡ªåŠ¨å¤„ç†ï¼š
	// - å­˜å‚¨åŒºå—æ•°æ®
	// - æ›´æ–°åŒºå—ç´¢å¼•ï¼ˆé«˜åº¦ç´¢å¼•ã€å“ˆå¸Œç´¢å¼•ï¼‰
	// - æ›´æ–°é“¾å°–çŠ¶æ€
	// - æ›´æ–°äº¤æ˜“ç´¢å¼•
	// - å¤„ç† UTXO å˜æ›´
	if err := s.dataWriter.WriteBlock(ctx, block); err != nil {
		return fmt.Errorf("å­˜å‚¨åŒºå—æ•°æ®å¤±è´¥: %w", err)
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… åŒºå—å·²å­˜å‚¨: height=%d, hash=%x",
			block.Header.Height, blockHash[:8])
	}

	return nil
}

// cleanMempool æ¸…ç†äº¤æ˜“æ± 
//
// ğŸ¯ **ç§»é™¤å·²å¤„ç†çš„äº¤æ˜“**
//
// ä»äº¤æ˜“æ± ä¸­ç§»é™¤åŒºå—ä¸­å·²å¤„ç†çš„äº¤æ˜“
func (s *Service) cleanMempool(ctx context.Context, block *core.Block) error {
	if s.mempool == nil {
		// å†…å­˜æ± ä¸å¯ç”¨ï¼Œè·³è¿‡æ¸…ç†
		return nil
	}

	if block == nil || block.Body == nil || len(block.Body.Transactions) == 0 {
		// æ²¡æœ‰äº¤æ˜“éœ€è¦æ¸…ç†
		return nil
	}

	// è®¡ç®—æ‰€æœ‰äº¤æ˜“çš„å“ˆå¸Œ
	txIDs := make([][]byte, 0, len(block.Body.Transactions))
	for _, tx := range block.Body.Transactions {
		if s.txHashClient == nil {
			if s.logger != nil {
				s.logger.Warnf("txHashClient æœªåˆå§‹åŒ–ï¼Œè·³è¿‡äº¤æ˜“å“ˆå¸Œè®¡ç®—")
			}
			continue
		}

		// ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		req := &transaction.ComputeHashRequest{
			Transaction: tx,
		}
		resp, err := s.txHashClient.ComputeHash(ctx, req)
		if err != nil {
			if s.logger != nil {
				s.logger.Warnf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼Œè·³è¿‡æ¸…ç†: %v", err)
			}
			continue
		}

		if !resp.IsValid {
			if s.logger != nil {
				s.logger.Warnf("äº¤æ˜“ç»“æ„æ— æ•ˆï¼Œè·³è¿‡æ¸…ç†")
			}
			continue
		}

		txIDs = append(txIDs, resp.Hash)
	}

	// ç¡®è®¤äº¤æ˜“ï¼ˆä»äº¤æ˜“æ± ç§»é™¤ï¼‰
	if len(txIDs) > 0 {
		if err := s.mempool.ConfirmTransactions(txIDs, block.Header.Height); err != nil {
			return fmt.Errorf("ç¡®è®¤äº¤æ˜“å¤±è´¥: %w", err)
		}

		if s.logger != nil {
			s.logger.Debugf("âœ… å·²ä»äº¤æ˜“æ± ç§»é™¤ %d ä¸ªå·²å¤„ç†äº¤æ˜“", len(txIDs))
		}
	}

	return nil
}

// uint64ToBytes uint64è½¬å­—èŠ‚
func uint64ToBytes(n uint64) []byte {
	b := make([]byte, 8)
	b[0] = byte(n >> 56)
	b[1] = byte(n >> 48)
	b[2] = byte(n >> 40)
	b[3] = byte(n >> 32)
	b[4] = byte(n >> 24)
	b[5] = byte(n >> 16)
	b[6] = byte(n >> 8)
	b[7] = byte(n)
	return b
}

// minHelper è¿”å›ä¸¤ä¸ªæ•´æ•°ä¸­çš„è¾ƒå°å€¼
func minHelper(a, b int) int {
	if a < b {
		return a
	}
	return b
}
