// Package processor å®ç°åŒºå—å¤„ç†æœåŠ¡
//
// ğŸ¯ **BlockProcessor æœåŠ¡å®ç°**
//
// æœ¬åŒ…å®ç°äº†åŒºå—å¤„ç†æœåŠ¡ï¼Œè´Ÿè´£å¤„ç†éªŒè¯é€šè¿‡çš„åŒºå—ã€‚
// é‡‡ç”¨åŸå­æ€§å¤„ç†ç­–ç•¥ï¼Œç¡®ä¿çŠ¶æ€ä¸€è‡´æ€§ã€‚
//
// ğŸ’¡ **æ ¸å¿ƒèŒè´£**ï¼š
// - å¤„ç†éªŒè¯é€šè¿‡çš„åŒºå—
// - æ‰§è¡ŒåŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// - æ›´æ–°UTXOçŠ¶æ€
// - æ¸…ç†äº¤æ˜“æ± 
// - å‘å¸ƒåŒºå—å¤„ç†å®Œæˆäº‹ä»¶
package processor

import (
	"context"
	"fmt"
	"sync"
	"time"

	eventIntegration "github.com/weisyn/v1/internal/core/block/integration/event"
	"github.com/weisyn/v1/internal/core/block/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/eutxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	wgif "github.com/weisyn/v1/pkg/interfaces/infrastructure/writegate"
	"github.com/weisyn/v1/pkg/interfaces/ispc"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/interfaces/tx"
	"github.com/weisyn/v1/pkg/types"
	corruptutil "github.com/weisyn/v1/pkg/utils/corruption"
)

// Service åŒºå—å¤„ç†æœåŠ¡
//
// ğŸ¯ **è®¾è®¡ç†å¿µ**ï¼š
// - åŸå­æ€§ï¼šæ‰€æœ‰æ“ä½œåœ¨äº‹åŠ¡ä¸­å®Œæˆ
// - ä¸€è‡´æ€§ï¼šç¡®ä¿çŠ¶æ€çš„ä¸¥æ ¼ä¸€è‡´æ€§
// - å¹¶å‘æ§åˆ¶ï¼šåŒä¸€æ—¶é—´åªå¤„ç†ä¸€ä¸ªåŒºå—
// - äº‹ä»¶é©±åŠ¨ï¼šå®Œæˆåå‘å¸ƒäº‹ä»¶é€šçŸ¥
//
// ğŸ“¦ **æœåŠ¡èŒè´£**ï¼š
// - ProcessBlock: å¤„ç†åŒºå—
// - GetProcessorMetrics: è·å–å¤„ç†æ€§èƒ½æŒ‡æ ‡
type Service struct {
	// ==================== ä¾èµ–æ³¨å…¥ ====================

	// dataWriter ç»Ÿä¸€æ•°æ®å†™å…¥æœåŠ¡ï¼ˆç»Ÿä¸€å†™å…¥å…¥å£ï¼‰
	// âš ï¸ é‡è¦ï¼šæ‰€æœ‰æ•°æ®å†™å…¥éƒ½é€šè¿‡ DataWriter å®Œæˆ
	dataWriter persistence.DataWriter

	// txProcessor äº¤æ˜“å¤„ç†å™¨ï¼ˆæ‰§è¡Œäº¤æ˜“ï¼‰
	txProcessor tx.TxProcessor

	// utxoWriter UTXOå†™å…¥æœåŠ¡ï¼ˆç”¨äºä¸šåŠ¡é€»è¾‘ï¼šå¼•ç”¨è®¡æ•°ç®¡ç†å’ŒçŠ¶æ€æ ¹æ›´æ–°ï¼‰
	// âœ… **æ¶æ„ä¿®å¤**ï¼š
	// - å¼•ç”¨è®¡æ•°ç®¡ç†å’ŒçŠ¶æ€æ ¹æ›´æ–°æ˜¯ä¸šåŠ¡é€»è¾‘ï¼Œåº”è¯¥åœ¨ä¸šåŠ¡å±‚ï¼ˆBlockProcessorï¼‰å¤„ç†
	// - Persistence åªè´Ÿè´£æŒä¹…åŒ–æ“ä½œï¼Œä¸å¤„ç†ä¸šåŠ¡é€»è¾‘
	// - utxoWriter ç”¨äºä¸šåŠ¡é€»è¾‘æ“ä½œï¼Œä¸ç”¨äºæŒä¹…åŒ–
	utxoWriter eutxo.UTXOWriter

	// utxoQuery UTXOæŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºè®¡ç®—çŠ¶æ€æ ¹ï¼‰
	// âœ… **æ¶æ„ä¿®å¤**ï¼š
	// - çŠ¶æ€æ ¹è®¡ç®—éœ€è¦åœ¨ UTXO å˜æ›´åæ‰§è¡Œï¼Œå±äºä¸šåŠ¡é€»è¾‘
	// - BlockProcessor é€šè¿‡ utxoQuery è®¡ç®—çŠ¶æ€æ ¹ï¼Œç„¶åé€šè¿‡ utxoWriter æ›´æ–°
	utxoQuery persistence.UTXOQuery

	// mempool äº¤æ˜“æ± ï¼ˆæ¸…ç†å·²å¤„ç†äº¤æ˜“ï¼‰
	mempool mempool.TxPool

	// hasher å“ˆå¸ŒæœåŠ¡ï¼ˆç”¨äºå…¶ä»–å“ˆå¸Œè®¡ç®—ï¼‰
	hasher crypto.HashManager

	// blockHashClient åŒºå—å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºè®¡ç®—åŒºå—å“ˆå¸Œï¼‰
	blockHashClient core.BlockHashServiceClient

	// txHashClient äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºè®¡ç®—äº¤æ˜“å“ˆå¸Œï¼‰
	txHashClient transaction.TransactionHashServiceClient

	// zkProofService ZKè¯æ˜æœåŠ¡ï¼ˆç”¨äºéªŒè¯StateOutputçš„ZKè¯æ˜ï¼‰
	// âœ… **ç”¨é€”**ï¼šéªŒè¯åŒºå—ä¸­StateOutputçš„ZKè¯æ˜æœ‰æ•ˆæ€§
	zkProofService ispc.ZKProofService

	// eventBus äº‹ä»¶æ€»çº¿ï¼ˆå‘å¸ƒäº‹ä»¶ï¼‰
	eventBus event.EventBus

	// logger æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
	logger log.Logger

	// writeGate å…¨å±€å†™é—¨é—¸ï¼ˆå¯é€‰ï¼Œç”¨äºåªè¯»æ¨¡å¼å’Œ REORG å†™æ§åˆ¶ï¼‰
	writeGate wgif.WriteGate

	// ==================== å»¶è¿Ÿæ³¨å…¥ ====================

	// validator éªŒè¯å™¨ï¼ˆå»¶è¿Ÿæ³¨å…¥ï¼Œé¿å…å¾ªç¯ä¾èµ–ï¼‰
	validator interfaces.InternalBlockValidator

	// ==================== å¹¶å‘æ§åˆ¶ ====================

	// mu äº’æ–¥é”
	mu sync.Mutex

	// processing æ˜¯å¦æ­£åœ¨å¤„ç†
	processing bool

	// ==================== æŒ‡æ ‡æ”¶é›† ====================

	// metrics å¤„ç†æœåŠ¡æŒ‡æ ‡
	metrics *interfaces.ProcessorMetrics

	// metricsMu æŒ‡æ ‡è¯»å†™é”
	metricsMu sync.Mutex

	// ==================== çŠ¶æ€ç®¡ç† ====================

	// isHealthy å¥åº·çŠ¶æ€
	isHealthy bool

	// lastError æœ€åé”™è¯¯
	lastError error

	// ==================== ç¯å¢ƒæ ‡è¯† ====================
	//
	// isDevOrTest æ ‡è®°å½“å‰æ˜¯å¦å¤„äºå¼€å‘/æµ‹è¯•ç¯å¢ƒï¼ˆç”±ä¸Šå±‚é€šè¿‡é…ç½®æ³¨å…¥ï¼‰
	// - åœ¨ç”Ÿäº§ç¯å¢ƒä¸­ï¼ŒæŸäº›ä¾èµ–ç¼ºå¤±ï¼ˆå¦‚ zkProofService / utxoQueryï¼‰å°†è§†ä¸ºè‡´å‘½é”™è¯¯
	// - åœ¨å¼€å‘/æµ‹è¯•ç¯å¢ƒä¸­ï¼Œå…è®¸é™çº§ä¸ºâ€œwarn + è·³è¿‡éªŒè¯â€
	isDevOrTest bool
}

func (s *Service) publishCorruptionDetected(ctx context.Context, phase types.CorruptionPhase, severity types.CorruptionSeverity, height *uint64, hashHex string, key string, err error) {
	if s == nil || s.eventBus == nil || err == nil {
		return
	}
	data := types.CorruptionEventData{
		Component: types.CorruptionComponentUTXO,
		Phase:     phase,
		Severity:  severity,
		Height:    height,
		Hash:      hashHex,
		Key:       key,
		ErrClass:  corruptutil.ClassifyErr(err),
		Error:     err.Error(),
		At:        types.RFC3339Time(time.Now()),
	}
	s.eventBus.Publish(event.EventTypeCorruptionDetected, ctx, data)
}

// NewService åˆ›å»ºåŒºå—å¤„ç†æœåŠ¡
//
// ğŸ”§ **åˆå§‹åŒ–æµç¨‹**ï¼š
// 1. éªŒè¯å¿…éœ€ä¾èµ–
// 2. åˆå§‹åŒ–æŒ‡æ ‡
// 3. è®¾ç½®é»˜è®¤é…ç½®
//
// å‚æ•°ï¼š
//   - dataWriter: ç»Ÿä¸€æ•°æ®å†™å…¥æœåŠ¡ï¼ˆå¿…éœ€ï¼Œç»Ÿä¸€å†™å…¥å…¥å£ï¼‰
//   - txProcessor: äº¤æ˜“å¤„ç†å™¨ï¼ˆå¿…éœ€ï¼‰
//   - utxoWriter: UTXOå†™å…¥æœåŠ¡ï¼ˆå¯é€‰ï¼Œç”¨äºä¸šåŠ¡é€»è¾‘ï¼šå¼•ç”¨è®¡æ•°ç®¡ç†å’ŒçŠ¶æ€æ ¹æ›´æ–°ï¼‰
//   - utxoQuery: UTXOæŸ¥è¯¢æœåŠ¡ï¼ˆå¯é€‰ï¼Œç”¨äºè®¡ç®—çŠ¶æ€æ ¹ï¼‰
//   - mempool: äº¤æ˜“æ± ï¼ˆå¿…éœ€ï¼‰
//   - hasher: å“ˆå¸ŒæœåŠ¡ï¼ˆå¿…éœ€ï¼‰
//   - blockHashClient: åŒºå—å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆå¿…éœ€ï¼‰
//   - txHashClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆå¿…éœ€ï¼‰
//   - zkProofService: ZKè¯æ˜æœåŠ¡ï¼ˆå¯é€‰ï¼Œç”¨äºéªŒè¯StateOutputçš„ZKè¯æ˜ï¼‰
//   - eventBus: äº‹ä»¶æ€»çº¿ï¼ˆå¯é€‰ï¼‰
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//   - writeGate: å…¨å±€å†™é—¨é—¸ï¼ˆå¯é€‰ï¼Œç”¨äºåªè¯»æ¨¡å¼å’Œ REORG å†™æ§åˆ¶ï¼‰
//
// è¿”å›ï¼š
//   - interfaces.InternalBlockProcessor: åŒºå—å¤„ç†æœåŠ¡å®ä¾‹
//   - error: åˆ›å»ºé”™è¯¯
func NewService(
	dataWriter persistence.DataWriter,
	txProcessor tx.TxProcessor,
	utxoWriter eutxo.UTXOWriter,
	utxoQuery persistence.UTXOQuery,
	mempool mempool.TxPool,
	hasher crypto.HashManager,
	blockHashClient core.BlockHashServiceClient,
	txHashClient transaction.TransactionHashServiceClient,
	zkProofService ispc.ZKProofService,
	eventBus event.EventBus,
	logger log.Logger,
	writeGate wgif.WriteGate,
) (interfaces.InternalBlockProcessor, error) {
	// éªŒè¯å¿…éœ€ä¾èµ–
	if dataWriter == nil {
		return nil, fmt.Errorf("dataWriter ä¸èƒ½ä¸ºç©º")
	}
	if txProcessor == nil {
		return nil, fmt.Errorf("txProcessor ä¸èƒ½ä¸ºç©º")
	}
	if mempool == nil {
		return nil, fmt.Errorf("mempool ä¸èƒ½ä¸ºç©º")
	}
	if hasher == nil {
		return nil, fmt.Errorf("hasher ä¸èƒ½ä¸ºç©º")
	}
	if blockHashClient == nil {
		return nil, fmt.Errorf("blockHashClient ä¸èƒ½ä¸ºç©º")
	}
	if txHashClient == nil {
		return nil, fmt.Errorf("txHashClient ä¸èƒ½ä¸ºç©º")
	}

	// ç”Ÿäº§ç¯å¢ƒå®‰å…¨çº¦æŸï¼š
	// - ç›®å‰ Block æ¨¡å—å¹¶æœªç›´æ¥æ³¨å…¥ config.Providerï¼Œå› æ­¤æ— æ³•åœ¨æ­¤ç²¾ç¡®åŒºåˆ† prod/devã€‚
	// - ä¸ºé¿å…è¯¯å°†å…³é”®éªŒè¯ä¾èµ–å½“ä½œâ€œå¯é€‰â€ï¼Œè¿™é‡Œé‡‡å–ä¿å®ˆç­–ç•¥ï¼šzkProofService å’Œ utxoQuery ç¼ºå¤±ä»…è®°å½•è­¦å‘Šï¼Œ
	//   ä½†åœ¨äº¤æ˜“éªŒè¯è·¯å¾„ä¸­ä¼šä½¿ç”¨ä¸¥æ ¼çš„å¤±è´¥ç­–ç•¥ï¼ˆå‚è§ verifyStateOutput / verifyReferenceUTXOï¼‰ï¼Œ
	//   å³ï¼šæ˜¾å¼ä¾èµ–ç¼ºå¤±æˆ–éªŒè¯å‡ºé”™æ—¶ï¼ŒåŒºå—å¤„ç†å¤±è´¥ï¼Œä¸ä¼šé™é»˜æ”¾è¡Œã€‚
	// - è‹¥æœªæ¥éœ€è¦åŸºäºé…ç½®åŒºåˆ†ç¯å¢ƒï¼Œå¯é€šè¿‡é¢å¤–å‚æ•°æ³¨å…¥ isDevOrTest æ ‡å¿—ï¼Œå¹¶åœ¨æ­¤å¤„å¼ºåˆ¶è¦æ±‚ä¾èµ–éç©ºã€‚

	// åˆ›å»ºæœåŠ¡å®ä¾‹
	s := &Service{
		dataWriter:      dataWriter,
		txProcessor:     txProcessor,
		utxoWriter:      utxoWriter, // âœ… ç”¨äºä¸šåŠ¡é€»è¾‘ï¼šå¼•ç”¨è®¡æ•°ç®¡ç†å’ŒçŠ¶æ€æ ¹æ›´æ–°
		utxoQuery:       utxoQuery,  // âœ… ç”¨äºè®¡ç®—çŠ¶æ€æ ¹
		mempool:         mempool,
		hasher:          hasher,
		blockHashClient: blockHashClient,
		txHashClient:    txHashClient,
		zkProofService:  zkProofService, // âœ… ç”¨äºéªŒè¯StateOutputçš„ZKè¯æ˜
		eventBus:        eventBus,
		logger:          logger,
		writeGate:       writeGate, // å¯é€‰ï¼Œç”¨äºåªè¯»æ¨¡å¼å’Œ REORG å†™æ§åˆ¶
		metrics:         &interfaces.ProcessorMetrics{},
		isHealthy:       true,
	}

	if logger != nil {
		logger.Info("âœ… BlockProcessor æœåŠ¡åˆå§‹åŒ–æˆåŠŸï¼ˆå·²è¿ç§»åˆ° DataWriterï¼‰")
	}

	return s, nil
}

// ProcessBlock å¤„ç†åŒºå—
//
// ğŸ¯ **å¤„ç†æµç¨‹ï¼ˆå¯¹å¤–è¯­ä¹‰â€œåŸå­â€ï¼‰**ï¼š
// 1. å¹¶å‘æ§åˆ¶æ£€æŸ¥
// 2. åŒºå—ç»“æ„å’ŒåŸºæœ¬å­—æ®µæ ¡éªŒ
// 3. åŒºå—çº§éªŒè¯ï¼ˆè°ƒç”¨ Validatorï¼‰
// 4. ä¸šåŠ¡çº§äº¤æ˜“éªŒè¯ï¼ˆZK / èµ„æºç”Ÿå‘½å‘¨æœŸ / å¼•ç”¨UTXO ç­‰ï¼‰
// 5. é€šè¿‡ DataWriter åœ¨å•ä¸€äº‹åŠ¡ä¸­æŒä¹…åŒ–åŒºå—åŠå…¶ UTXO / ç´¢å¼• / é“¾çŠ¶æ€
// 6. åœ¨æŒä¹…åŒ–æˆåŠŸåï¼ŒæŒ‰éœ€æ›´æ–°å¼•ç”¨è®¡æ•°å’ŒçŠ¶æ€æ ¹ã€æ¸…ç†äº¤æ˜“æ± 
// 7. å‘å¸ƒ BlockProcessed äº‹ä»¶å¹¶è®°å½•æŒ‡æ ‡
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…å¤„ç†åŒºå—
//
// è¿”å›ï¼š
//   - error: å¤„ç†é”™è¯¯
func (s *Service) ProcessBlock(ctx context.Context, block *core.Block) error {
	// 0. WriteGate æ£€æŸ¥ï¼ˆåªè¯»æ¨¡å¼/å†™å›´æ ä¿æŠ¤ï¼‰
	if s.writeGate != nil {
		if err := s.writeGate.AssertWriteAllowed(ctx, "block.ProcessBlock"); err != nil {
			return fmt.Errorf("å†™æ“ä½œè¢«é˜»æ­¢: %w", err)
		}
	}

	// 1. å¹¶å‘æ§åˆ¶
	s.mu.Lock()
	if s.processing {
		s.mu.Unlock()
		return fmt.Errorf("æ­£åœ¨å¤„ç†å…¶ä»–åŒºå—ï¼Œè¯·ç¨åå†è¯•")
	}
	s.processing = true
	s.mu.Unlock()

	defer func() {
		s.mu.Lock()
		s.processing = false
		s.mu.Unlock()
	}()

	startTime := time.Now()
	defer func() {
		s.recordProcess(time.Since(startTime))
	}()

	// æ£€æŸ¥åŒºå—æ˜¯å¦ä¸º nil
	if block == nil {
		return s.recordProcessError(fmt.Errorf("åŒºå—ä¸èƒ½ä¸ºç©º"))
	}

	// æ£€æŸ¥åŒºå—å¤´å’ŒåŒºå—ä½“æ˜¯å¦ä¸º nil
	if block.Header == nil || block.Body == nil {
		return s.recordProcessError(fmt.Errorf("åŒºå—å¤´æˆ–åŒºå—ä½“ä¸èƒ½ä¸ºç©º"))
	}

	if s.logger != nil {
		s.logger.Infof("å¼€å§‹å¤„ç†åŒºå—ï¼Œé«˜åº¦: %d",
			block.Header.Height)
	}

	// 2. éªŒè¯åŒºå—ï¼ˆå¦‚æœæœ‰éªŒè¯å™¨ï¼‰
	if s.validator != nil {
		valid, err := s.validator.ValidateBlock(ctx, block)
		if err != nil || !valid {
			return s.recordProcessError(fmt.Errorf("åŒºå—éªŒè¯å¤±è´¥: %w", err))
		}
	}

	// 3. å¤„ç†åŒºå—ï¼ˆè¯¦ç»†å®ç°åœ¨ execute.goï¼‰
	if err := s.executeBlock(ctx, block); err != nil {
		return s.recordProcessError(err)
	}

	// 4. å‘å¸ƒäº‹ä»¶ï¼ˆå¦‚æœæœ‰äº‹ä»¶æ€»çº¿ï¼‰
	if s.eventBus != nil {
		// è®¡ç®—åŒºå—å“ˆå¸Œ
		blockHash, err := s.calculateBlockHash(ctx, block.Header)
		if err != nil {
			if s.logger != nil {
				s.logger.Warnf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥ï¼Œè·³è¿‡äº‹ä»¶å‘å¸ƒ: %v", err)
			}
		} else {
			if err := eventIntegration.PublishBlockProcessedEvent(ctx, s.eventBus, s.logger, block, blockHash); err != nil {
				// äº‹ä»¶å‘å¸ƒå¤±è´¥ä¸å½±å“åŒºå—å¤„ç†ï¼Œåªè®°å½•è­¦å‘Š
				if s.logger != nil {
					s.logger.Warnf("å‘å¸ƒBlockProcessedäº‹ä»¶å¤±è´¥: %v", err)
				}
			}
		}
	}

	// 5. è®°å½•æˆåŠŸ
	s.recordProcessSuccess(block)

	if s.logger != nil {
		s.logger.Infof("âœ… åŒºå—å¤„ç†å®Œæˆï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d",
			block.Header.Height, len(block.Body.Transactions))
	}

	return nil
}

// ==================== å†…éƒ¨ç®¡ç†æ–¹æ³• ====================

// GetProcessorMetrics è·å–å¤„ç†æœåŠ¡æŒ‡æ ‡
func (s *Service) GetProcessorMetrics(ctx context.Context) (*interfaces.ProcessorMetrics, error) {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	// æ›´æ–°å¤„ç†çŠ¶æ€
	s.mu.Lock()
	s.metrics.IsProcessing = s.processing
	s.mu.Unlock()

	// æ›´æ–°å¥åº·çŠ¶æ€
	s.metrics.IsHealthy = s.isHealthy
	if s.lastError != nil {
		s.metrics.ErrorMessage = s.lastError.Error()
	}

	return s.metrics, nil
}

// SetValidator è®¾ç½®éªŒè¯å™¨ï¼ˆå»¶è¿Ÿæ³¨å…¥ï¼‰
func (s *Service) SetValidator(validator interfaces.InternalBlockValidator) {
	s.validator = validator

	if s.logger != nil {
		s.logger.Info("ğŸ”— Validator å·²æ³¨å…¥åˆ° Processor")
	}
}

// ==================== è¾…åŠ©æ–¹æ³• ====================

// recordProcess è®°å½•å¤„ç†æŒ‡æ ‡
func (s *Service) recordProcess(duration time.Duration) {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.LastProcessTime = time.Now().Unix()

	// æ›´æ–°å¹³å‡å¤„ç†è€—æ—¶ï¼ˆæ»‘åŠ¨å¹³å‡ï¼‰
	alpha := 0.1
	newTime := duration.Seconds()
	if s.metrics.AvgProcessTime == 0 {
		s.metrics.AvgProcessTime = newTime
	} else {
		s.metrics.AvgProcessTime = alpha*newTime + (1-alpha)*s.metrics.AvgProcessTime
	}

	// æ›´æ–°æœ€å¤§å¤„ç†è€—æ—¶
	if newTime > s.metrics.MaxProcessTime {
		s.metrics.MaxProcessTime = newTime
	}
}

// recordProcessSuccess è®°å½•å¤„ç†æˆåŠŸ
func (s *Service) recordProcessSuccess(block *core.Block) {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.BlocksProcessed++
	s.metrics.SuccessCount++

	// æ£€æŸ¥åŒºå—å’ŒåŒºå—ä½“æ˜¯å¦ä¸º nil
	if block != nil && block.Body != nil {
		s.metrics.TransactionsExecuted += uint64(len(block.Body.Transactions))
	}

	if block != nil && block.Header != nil {
		s.metrics.LastBlockHeight = block.Header.Height

		// è®¡ç®—åŒºå—å“ˆå¸Œå¹¶ä¿å­˜åˆ°æŒ‡æ ‡
		if s.blockHashClient != nil {
			// ä½¿ç”¨ context.Background() å› ä¸ºè¿™æ˜¯æŒ‡æ ‡æ›´æ–°ï¼Œä¸éœ€è¦å–æ¶ˆ
			if blockHash, err := s.calculateBlockHash(context.Background(), block.Header); err == nil {
				s.metrics.LastBlockHash = blockHash
			}
		}
	}

	s.isHealthy = true
}

// recordProcessError è®°å½•å¤„ç†é”™è¯¯
func (s *Service) recordProcessError(err error) error {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.FailureCount++
	s.isHealthy = false
	s.lastError = err

	return err
}

// calculateBlockHash è®¡ç®—åŒºå—å“ˆå¸Œ
func (s *Service) calculateBlockHash(ctx context.Context, header *core.BlockHeader) ([]byte, error) {
	if header == nil {
		return nil, fmt.Errorf("åŒºå—å¤´ä¸ºç©º")
	}
	if s.blockHashClient == nil {
		return nil, fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}

	// æ„å»ºåŒºå—ï¼ˆåªæœ‰Headerï¼ŒBodyå¯ä»¥ä¸ºç©ºï¼‰
	block := &core.Block{
		Header: header,
	}

	// ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—åŒºå—å“ˆå¸Œ
	req := &core.ComputeBlockHashRequest{
		Block: block,
	}
	resp, err := s.blockHashClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return nil, fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	return resp.Hash, nil
}

// ç¼–è¯‘æ—¶æ£€æŸ¥æ¥å£å®ç°
var _ interfaces.InternalBlockProcessor = (*Service)(nil)
