// Package validator å®ç°åŒºå—éªŒè¯æœåŠ¡
package validator

import (
	"context"
	"fmt"
	"math/big"

	"github.com/weisyn/v1/internal/core/block/difficulty"
	core "github.com/weisyn/v1/pb/blockchain/block"
)

// mtpCache å…¨å±€MTPç¼“å­˜å®ä¾‹
//
// ä½¿ç”¨å…¨å±€ç¼“å­˜å¯ä»¥åœ¨å¤šä¸ªéªŒè¯è°ƒç”¨ä¹‹é—´å…±äº«MTPè®¡ç®—ç»“æœï¼Œ
// æ˜¾è‘—å‡å°‘åŒæ­¥è¿‡ç¨‹ä¸­çš„æ•°æ®åº“æŸ¥è¯¢æ¬¡æ•°ã€‚
//
// ç¼“å­˜å®¹é‡ä¸º10000ï¼Œè¶³å¤Ÿè¦†ç›–å¤§å¤šæ•°åŒæ­¥åœºæ™¯ã€‚
// é“¾é‡ç»„æ—¶éœ€è¦è°ƒç”¨ InvalidateAbove æ¸…é™¤å—å½±å“çš„ç¼“å­˜ã€‚
var mtpCache = difficulty.GlobalMTPCache

// validateConsensus éªŒè¯å…±è¯†è§„åˆ™
//
// ğŸ¯ **å…±è¯†éªŒè¯æ£€æŸ¥é¡¹**ï¼š
// 1. PoWéªŒè¯ï¼ˆWES ä½¿ç”¨ PoW+XOR æ··åˆå…±è¯†ï¼ŒPoW æ˜¯åŸºç¡€å±‚ï¼‰
// 2. éš¾åº¦éªŒè¯
// 3. åŒºå—å“ˆå¸ŒéªŒè¯ï¼ˆHash < Targetï¼‰
//
// âš ï¸ **åˆ›ä¸–åŒºå—å¤„ç†**ï¼š
// - åˆ›ä¸–åŒºå—ï¼ˆé«˜åº¦=0ï¼‰ä¹Ÿéœ€è¦é€šè¿‡PoWéªŒè¯
// - åˆ›ä¸–åŒºå—æ„å»ºåéœ€è¦è¿›è¡ŒæŒ–çŸ¿æ¥æ‰¾åˆ°æ»¡è¶³éš¾åº¦è¦æ±‚çš„Nonce
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…éªŒè¯åŒºå—
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯ï¼ˆnilè¡¨ç¤ºé€šè¿‡ï¼‰
func (s *Service) validateConsensus(ctx context.Context, block *core.Block) error {
	if block == nil || block.Header == nil {
		return fmt.Errorf("åŒºå—æˆ–åŒºå—å¤´ä¸ºç©º")
	}

	// 0. è·å– v2 å…±è¯†å‚æ•°ï¼ˆéå‘åå…¼å®¹ï¼šå¼ºåˆ¶å­˜åœ¨ï¼‰
	if s.configProvider == nil {
		return fmt.Errorf("configProvider æœªæ³¨å…¥ï¼ˆv2 è§„åˆ™è¦æ±‚å¿…éœ€ï¼‰")
	}
	consensusOpts := s.configProvider.GetConsensus()
	if consensusOpts == nil {
		return fmt.Errorf("æ— æ³•è·å–å…±è¯†é…ç½®ï¼ˆGetConsensus è¿”å› nilï¼‰")
	}
	chainOpts := s.configProvider.GetBlockchain()
	if chainOpts == nil {
		return fmt.Errorf("æ— æ³•è·å–åŒºå—é“¾é…ç½®ï¼ˆGetBlockchain è¿”å› nilï¼‰")
	}

	// ç›®æ ‡å‡ºå—æ—¶é—´ï¼ˆç§’ï¼Œè‡³å°‘ 1sï¼‰
	targetSec := uint64(consensusOpts.TargetBlockTime.Seconds())
	if targetSec == 0 {
		targetSec = 1
	}

	params := difficulty.Params{
		TargetBlockTimeSeconds:             targetSec,
		DifficultyWindow:                   consensusOpts.POW.DifficultyWindow,
		MaxAdjustUpPPM:                     consensusOpts.POW.MaxAdjustUpPPM,
		MaxAdjustDownPPM:                   consensusOpts.POW.MaxAdjustDownPPM,
		EMAAlphaPPM:                        consensusOpts.POW.EMAAlphaPPM,
		MinDifficulty:                      consensusOpts.POW.MinDifficulty,
		MaxDifficulty:                      consensusOpts.POW.MaxDifficulty,
		MTPWindow:                          consensusOpts.POW.MTPWindow,
		MinBlockIntervalSeconds:            uint64(chainOpts.Block.MinBlockInterval),
		MaxFutureDriftSeconds:              consensusOpts.POW.MaxFutureDriftSeconds,
		EmergencyDownshiftThresholdSeconds: consensusOpts.POW.EmergencyDownshiftThresholdSeconds,
		MaxEmergencyDownshiftBits:          consensusOpts.POW.MaxEmergencyDownshiftBits,
	}

	// 1. éªŒè¯éš¾åº¦å­—æ®µé 0
	if block.Header.Difficulty == 0 {
		return fmt.Errorf("åŒºå—éš¾åº¦ä¸èƒ½ä¸º0")
	}

	// 2. v2 æ—¶é—´æˆ³æœ‰æ•ˆæ€§è§„åˆ™ï¼ˆMTP + æœ€å°é—´éš” + future driftï¼‰
	// ä½¿ç”¨å¸¦ç¼“å­˜çš„ç‰ˆæœ¬å‡å°‘IOå‹åŠ›ï¼Œé¿å…MTPè®¡ç®—è¶…æ—¶
	if err := difficulty.ValidateTimestampRulesWithCache(ctx, s.queryService, block.Header, params, mtpCache); err != nil {
		return fmt.Errorf("æ—¶é—´æˆ³è§„åˆ™æ ¡éªŒå¤±è´¥: %w", err)
	}

	// 3. v2 éš¾åº¦æ­£ç¡®æ€§æ ¡éªŒï¼ˆexpectedDifficulty å¿…é¡»åŒ¹é…ï¼‰
	if block.Header.Height == 0 {
		// åˆ›ä¸–åŒºå—ï¼šéš¾åº¦å¿…é¡»ç­‰äºé…ç½®çš„ initial_difficulty
		if block.Header.Difficulty != consensusOpts.POW.InitialDifficulty {
			return fmt.Errorf("åˆ›ä¸–åŒºå—éš¾åº¦ä¸åŒ¹é…: got=%d expected=%d",
				block.Header.Difficulty, consensusOpts.POW.InitialDifficulty)
		}
	} else {
		parentBlock, err := s.queryService.GetBlockByHash(ctx, block.Header.PreviousHash)
		if err != nil || parentBlock == nil || parentBlock.Header == nil {
			return fmt.Errorf("è·å–çˆ¶åŒºå—å¤±è´¥ï¼Œæ— æ³•æ ¡éªŒéš¾åº¦: %w", err)
		}
		expected, err := difficulty.NextDifficultyForTimestamp(ctx, s.queryService, parentBlock.Header, block.Header.Timestamp, params)
		if err != nil {
			return fmt.Errorf("è®¡ç®— expectedDifficulty å¤±è´¥: %w", err)
		}
		if block.Header.Difficulty != expected {
			return fmt.Errorf("åŒºå—éš¾åº¦ä¸åŒ¹é…: got=%d expected=%d height=%d",
				block.Header.Difficulty, expected, block.Header.Height)
		}
	}

	// 4. è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆä½¿ç”¨ gRPC æœåŠ¡ï¼‰
	if s.blockHashClient == nil {
		return fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}

	req := &core.ComputeBlockHashRequest{
		Block: block,
	}
	resp, err := s.blockHashClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return fmt.Errorf("è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	blockHash := resp.Hash

	// 5. éªŒè¯ PoWï¼ˆåŒºå—å“ˆå¸Œå¿…é¡»å°äºç›®æ ‡å€¼ï¼‰
	// Target = 2^(256 - Difficulty)
	// å“ˆå¸Œå€¼å¿…é¡»å°äº Target æ‰æ»¡è¶³ PoW è¦æ±‚
	target := s.calculateTarget(block.Header.Difficulty)
	hashInt := new(big.Int).SetBytes(blockHash)

	if hashInt.Cmp(target) >= 0 {
		if s.logger != nil {
			s.logger.Warnf("âš ï¸ PoWéªŒè¯å¤±è´¥: åŒºå—å“ˆå¸Œ %x >= ç›®æ ‡å€¼ï¼ˆéš¾åº¦=%dï¼‰",
				blockHash[:min(8, len(blockHash))], block.Header.Difficulty)
		}
		return fmt.Errorf("PoWéªŒè¯å¤±è´¥: åŒºå—å“ˆå¸Œä¸æ»¡è¶³éš¾åº¦è¦æ±‚ï¼ˆéš¾åº¦=%dï¼‰", block.Header.Difficulty)
	}

	if s.logger != nil {
		if block.Header.Height == 0 {
			s.logger.Debugf("âœ… åˆ›ä¸–åŒºå—PoWéªŒè¯é€šè¿‡: éš¾åº¦=%d, Nonce=%x", block.Header.Difficulty, block.Header.Nonce)
		} else {
			s.logger.Debugf("âœ… PoWéªŒè¯é€šè¿‡: éš¾åº¦=%d", block.Header.Difficulty)
		}
	}

	return nil
}

// calculateTarget è®¡ç®— PoW ç›®æ ‡å€¼
//
// ğŸ¯ **PoW ç›®æ ‡å€¼è®¡ç®—**
//
// WES ä½¿ç”¨æ ‡å‡† PoW éš¾åº¦è®¡ç®—ï¼š
// Target = 2^(256 - Difficulty)
//
// åŒºå—å“ˆå¸Œå¿…é¡»å°äº Target æ‰æ»¡è¶³ PoW è¦æ±‚
//
// å‚æ•°ï¼š
//   - difficulty: åŒºå—éš¾åº¦å€¼
//
// è¿”å›ï¼š
//   - *big.Int: PoW ç›®æ ‡å€¼
func (s *Service) calculateTarget(difficulty uint64) *big.Int {
	// æ ‡å‡† PoW ç›®æ ‡å€¼è®¡ç®—
	// Target = 2^(256 - Difficulty)
	// éš¾åº¦è¶Šå¤§ï¼Œç›®æ ‡å€¼è¶Šå°ï¼ŒæŒ–çŸ¿è¶Šéš¾

	// æœ€å¤§éš¾åº¦ï¼š256ï¼ˆç›®æ ‡å€¼ä¸º1ï¼‰
	// æœ€å°éš¾åº¦ï¼š0ï¼ˆç›®æ ‡å€¼ä¸º 2^256ï¼‰
	maxDifficulty := uint64(256)
	if difficulty > maxDifficulty {
		difficulty = maxDifficulty
	}

	// è®¡ç®—ç›®æ ‡å€¼
	// Target = 2^(256 - Difficulty)
	exp := uint64(256) - difficulty
	target := new(big.Int)
	target.Exp(big.NewInt(2), big.NewInt(int64(exp)), nil)

	return target
}

// min è¿”å›ä¸¤ä¸ªæ•´æ•°ä¸­çš„è¾ƒå°å€¼
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}

// InvalidateMTPCacheAbove ä½¿æŒ‡å®šé«˜åº¦ä»¥ä¸Šçš„MTPç¼“å­˜å¤±æ•ˆ
//
// åœ¨é“¾é‡ç»„æ—¶è°ƒç”¨æ­¤å‡½æ•°ï¼Œç¡®ä¿ç¼“å­˜ä¸ä¼šè¿”å›è¿‡æœŸçš„MTPå€¼ã€‚
//
// å‚æ•°ï¼š
//   - height: åˆ†å‰ç‚¹é«˜åº¦ï¼Œè¯¥é«˜åº¦ä»¥ä¸Šçš„æ‰€æœ‰ç¼“å­˜éƒ½ä¼šè¢«æ¸…é™¤
func InvalidateMTPCacheAbove(height uint64) {
	if mtpCache != nil {
		mtpCache.InvalidateAbove(height)
	}
}

// GetMTPCacheStats è·å–MTPç¼“å­˜ç»Ÿè®¡ä¿¡æ¯
//
// ç”¨äºç›‘æ§å’Œè°ƒè¯•ç¼“å­˜æ€§èƒ½ã€‚
//
// è¿”å›ï¼š
//   - size: å½“å‰ç¼“å­˜å¤§å°
//   - capacity: ç¼“å­˜å®¹é‡
//   - hits: ç¼“å­˜å‘½ä¸­æ¬¡æ•°
//   - misses: ç¼“å­˜æœªå‘½ä¸­æ¬¡æ•°
//   - hitRate: ç¼“å­˜å‘½ä¸­ç‡
func GetMTPCacheStats() (size int, capacity int, hits uint64, misses uint64, hitRate float64) {
	if mtpCache != nil {
		return mtpCache.Stats()
	}
	return 0, 0, 0, 0, 0
}
