// Package block æä¾›åŒºå—ç®¡ç†çš„æ ¸å¿ƒå®ç°
//
// ğŸ“‹ **cache_utils.go - ç¼“å­˜å·¥å…·å®ç°**
//
// æœ¬æ–‡ä»¶æä¾›åŒºå—ç®¡ç†æ‰€éœ€çš„ç¼“å­˜å·¥å…·æ–¹æ³•ï¼Œæ”¯æŒå“ˆå¸Œ+ç¼“å­˜æ¶æ„æ¨¡å¼ã€‚
// ä¸“æ³¨äºåŒºå—æ•°æ®çš„åºåˆ—åŒ–ã€ååºåˆ—åŒ–ã€ç¼“å­˜ç®¡ç†å’Œ TTL æ§åˆ¶ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - åŒºå—åºåˆ—åŒ–ï¼šå°†åŒºå—å¯¹è±¡è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„å­˜å‚¨
// - åŒºå—ååºåˆ—åŒ–ï¼šä»å­—èŠ‚æ•°ç»„æ¢å¤åŒºå—å¯¹è±¡
// - ç¼“å­˜é”®ç®¡ç†ï¼šæ ‡å‡†åŒ–ç¼“å­˜é”®çš„ç”Ÿæˆå’Œç®¡ç†
// - TTL ç”Ÿå‘½å‘¨æœŸï¼šç®¡ç†ç¼“å­˜é¡¹çš„ç”Ÿå­˜æ—¶é—´
// - ç¼“å­˜æ€§èƒ½ä¼˜åŒ–ï¼šæä¾›é«˜æ•ˆçš„ç¼“å­˜è¯»å†™æ“ä½œ
//
// ğŸ—ï¸ **æ¶æ„ç‰¹ç‚¹**ï¼š
// - å“ˆå¸Œ+ç¼“å­˜æ¨¡å¼ï¼šæ”¯æŒè½»é‡çº§å“ˆå¸Œå’Œå¤æ‚å¯¹è±¡ç¼“å­˜
// - æ ‡å‡†åŒ–åºåˆ—åŒ–ï¼šä½¿ç”¨ Protobuf ç¡®ä¿è·¨å¹³å°å…¼å®¹æ€§
// - å†…å­˜ç®¡ç†ä¼˜åŒ–ï¼šé€šè¿‡ TTL é˜²æ­¢å†…å­˜æ³„æ¼
// - å¹¶å‘å®‰å…¨ï¼šæ”¯æŒå¤šåç¨‹å®‰å…¨è®¿é—®ç¼“å­˜
//
// è¯¦ç»†è®¾è®¡æ–‡æ¡£ï¼šinternal/core/blockchain/block/README.md
package block

import (
	"context"
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"google.golang.org/protobuf/proto"
)

// ==================== ç¼“å­˜é”®ç®¡ç† ====================

// CacheKeyPrefix å®šä¹‰ç¼“å­˜é”®å‰ç¼€å¸¸é‡
const (
	// å€™é€‰åŒºå—ç¼“å­˜å‰ç¼€
	CandidateBlockPrefix = "candidate_block:"
)

// CacheConfig ç¼“å­˜é…ç½®ç»“æ„
type CacheConfig struct {
	// å€™é€‰åŒºå— TTLï¼ˆçŸ¿å·¥åˆ›å»ºçš„å€™é€‰åŒºå—ï¼‰
	CandidateBlockTTL time.Duration

	// æœ€å¤§ç¼“å­˜å¤§å°ï¼ˆå­—èŠ‚ï¼‰
	MaxCacheSize int64
}

// getDefaultCacheConfig è·å–é»˜è®¤ç¼“å­˜é…ç½®
//
// ğŸ¯ **ç¼“å­˜é…ç½®ç®¡ç†**
//
// æä¾›åŒºå—ç®¡ç†çš„é»˜è®¤ç¼“å­˜é…ç½®ï¼Œä¸“æ³¨äºå€™é€‰åŒºå—ç¼“å­˜ã€‚
//
// é…ç½®ç­–ç•¥ï¼š
// - å€™é€‰åŒºå—ï¼šè¾ƒçŸ­ TTLï¼Œå› ä¸ºæŒ–çŸ¿å®Œæˆåä¸å†éœ€è¦
// - å†…å­˜é™åˆ¶ï¼šé˜²æ­¢ç¼“å­˜å ç”¨è¿‡å¤šå†…å­˜
//
// è¿”å›å€¼ï¼š
//
//	*CacheConfig: é»˜è®¤é…ç½®å¯¹è±¡
func (m *Manager) getDefaultCacheConfig() *CacheConfig {
	return &CacheConfig{
		CandidateBlockTTL: 5 * time.Minute,   // å€™é€‰åŒºå—5åˆ†é’ŸTTL
		MaxCacheSize:      512 * 1024 * 1024, // 512MBæœ€å¤§ç¼“å­˜
	}
}

// generateCacheKey ç”Ÿæˆæ ‡å‡†åŒ–ç¼“å­˜é”®
//
// ğŸ¯ **ç¼“å­˜é”®æ ‡å‡†åŒ–**
//
// æ ¹æ®å‰ç¼€å’Œå“ˆå¸Œç”Ÿæˆæ ‡å‡†åŒ–çš„ç¼“å­˜é”®ï¼Œç¡®ä¿é”®çš„å”¯ä¸€æ€§å’Œå¯è¯»æ€§ã€‚
//
// é”®æ ¼å¼ï¼š{prefix}{hash_hex}
// ç¤ºä¾‹ï¼šcandidate_block:abc123def456...
//
// å‚æ•°ï¼š
//
//	prefix: ç¼“å­˜é”®å‰ç¼€
//	hash: å“ˆå¸Œå­—èŠ‚æ•°ç»„
//
// è¿”å›å€¼ï¼š
//
//	string: æ ‡å‡†åŒ–çš„ç¼“å­˜é”®
func (m *Manager) generateCacheKey(prefix string, hash []byte) string {
	return fmt.Sprintf("%s%x", prefix, hash)
}

// ==================== åŒºå—åºåˆ—åŒ–å·¥å…· ====================

// serializeBlock åºåˆ—åŒ–åŒºå—ä¸ºå­—èŠ‚æ•°ç»„
//
// ğŸ¯ **åŒºå—æ•°æ®åºåˆ—åŒ–**
//
// å°†åŒºå—å¯¹è±¡åºåˆ—åŒ–ä¸ºå­—èŠ‚æ•°ç»„ï¼Œç”¨äºç¼“å­˜å­˜å‚¨ã€‚
// ä½¿ç”¨ Protobuf åºåˆ—åŒ–ç¡®ä¿æ•°æ®çš„ç´§å‡‘æ€§å’Œè·¨å¹³å°å…¼å®¹æ€§ã€‚
//
// åºåˆ—åŒ–ç‰¹ç‚¹ï¼š
// - ä½¿ç”¨æ ‡å‡† Protobuf åºåˆ—åŒ–
// - ä¿æŒæ•°æ®å®Œæ•´æ€§
// - ä¼˜åŒ–å­˜å‚¨ç©ºé—´
// - ç¡®ä¿è·¨å¹³å°å…¼å®¹æ€§
//
// å‚æ•°ï¼š
//
//	block: å¾…åºåˆ—åŒ–çš„åŒºå—å¯¹è±¡
//
// è¿”å›å€¼ï¼š
//
//	[]byte: åºåˆ—åŒ–åçš„å­—èŠ‚æ•°ç»„
//	error: åºåˆ—åŒ–è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnil è¡¨ç¤ºæˆåŠŸ
func (m *Manager) serializeBlock(block *core.Block) ([]byte, error) {
	if block == nil {
		return nil, fmt.Errorf("åŒºå—å¯¹è±¡ä¸èƒ½ä¸ºç©º")
	}

	if block.Header == nil {
		return nil, fmt.Errorf("åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	if m.logger != nil {
		m.logger.Debugf("åºåˆ—åŒ–åŒºå—ï¼Œé«˜åº¦: %d", block.Header.Height)
	}

	// ä½¿ç”¨ Protobuf åºåˆ—åŒ–
	data, err := proto.Marshal(block)
	if err != nil {
		if m.logger != nil {
			m.logger.Errorf("åŒºå—åºåˆ—åŒ–å¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("åŒºå—åºåˆ—åŒ–å¤±è´¥: %w", err)
	}

	if len(data) == 0 {
		return nil, fmt.Errorf("åºåˆ—åŒ–ç»“æœä¸ºç©º")
	}

	if m.logger != nil {
		m.logger.Debugf("åŒºå—åºåˆ—åŒ–æˆåŠŸï¼Œæ•°æ®å¤§å°: %d å­—èŠ‚", len(data))
	}

	return data, nil
}

// deserializeBlock ååºåˆ—åŒ–å­—èŠ‚æ•°ç»„ä¸ºåŒºå—
//
// ğŸ¯ **åŒºå—æ•°æ®ååºåˆ—åŒ–**
//
// å°†å­—èŠ‚æ•°ç»„ååºåˆ—åŒ–ä¸ºåŒºå—å¯¹è±¡ï¼Œä»ç¼“å­˜ä¸­æ¢å¤åŒºå—æ•°æ®ã€‚
// ç¡®ä¿ååºåˆ—åŒ–åçš„åŒºå—å¯¹è±¡å®Œæ•´å’Œæœ‰æ•ˆã€‚
//
// ååºåˆ—åŒ–ç‰¹ç‚¹ï¼š
// - ä½¿ç”¨æ ‡å‡† Protobuf ååºåˆ—åŒ–
// - éªŒè¯æ•°æ®å®Œæ•´æ€§
// - å¤„ç†å…¼å®¹æ€§é—®é¢˜
// - ä¼˜åŒ–å†…å­˜ä½¿ç”¨
//
// å‚æ•°ï¼š
//
//	data: åºåˆ—åŒ–çš„å­—èŠ‚æ•°ç»„
//
// è¿”å›å€¼ï¼š
//
//	*core.Block: ååºåˆ—åŒ–åçš„åŒºå—å¯¹è±¡
//	error: ååºåˆ—åŒ–è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnil è¡¨ç¤ºæˆåŠŸ
func (m *Manager) deserializeBlock(data []byte) (*core.Block, error) {
	if len(data) == 0 {
		return nil, fmt.Errorf("æ— æ³•ååºåˆ—åŒ–ç©ºæ•°æ®")
	}

	if m.logger != nil {
		m.logger.Debugf("ååºåˆ—åŒ–åŒºå—ï¼Œæ•°æ®å¤§å°: %d å­—èŠ‚", len(data))
	}

	// åˆ›å»ºåŒºå—å¯¹è±¡
	block := &core.Block{}

	// ä½¿ç”¨ Protobuf ååºåˆ—åŒ–
	err := proto.Unmarshal(data, block)
	if err != nil {
		if m.logger != nil {
			m.logger.Errorf("åŒºå—ååºåˆ—åŒ–å¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("åŒºå—ååºåˆ—åŒ–å¤±è´¥: %w", err)
	}

	// éªŒè¯åŸºæœ¬å­—æ®µ
	if block.Header == nil {
		return nil, fmt.Errorf("ååºåˆ—åŒ–çš„åŒºå—ç¼ºå°‘åŒºå—å¤´")
	}

	if block.Body == nil {
		return nil, fmt.Errorf("ååºåˆ—åŒ–çš„åŒºå—ç¼ºå°‘åŒºå—ä½“")
	}

	if m.logger != nil {
		m.logger.Debugf("åŒºå—ååºåˆ—åŒ–æˆåŠŸï¼Œé«˜åº¦: %d", block.Header.Height)
	}

	return block, nil
}

// ==================== å€™é€‰åŒºå—ç¼“å­˜æ“ä½œ ====================

// storeCandidateBlock å­˜å‚¨å€™é€‰åŒºå—åˆ°ç¼“å­˜å¹¶è¿”å›åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **å€™é€‰åŒºå—ç¼“å­˜å­˜å‚¨**
//
// å°†åˆ›å»ºçš„å€™é€‰åŒºå—å­˜å‚¨åˆ°å†…å­˜ç¼“å­˜ä¸­ï¼Œä¾›åç»­æŒ–çŸ¿ä½¿ç”¨ã€‚
// åœ¨å†…éƒ¨è®¡ç®—åŒºå—å“ˆå¸Œï¼Œä½¿ç”¨å“ˆå¸Œä½œä¸ºç¼“å­˜é”®ï¼Œå¹¶è¿”å›å“ˆå¸Œå€¼ã€‚
//
// å­˜å‚¨ç­–ç•¥ï¼š
// - å†…éƒ¨è®¡ç®—åŒºå—å“ˆå¸Œ
// - ä½¿ç”¨åŒºå—å“ˆå¸Œä½œä¸ºç¼“å­˜é”®
// - è®¾ç½®è¾ƒçŸ­çš„ TTLï¼ˆå€™é€‰åŒºå—æœ‰æ—¶æ•ˆæ€§ï¼‰
// - åºåˆ—åŒ–åå­˜å‚¨ä»¥èŠ‚çœå†…å­˜
// - æ”¯æŒå¹¶å‘å®‰å…¨æ“ä½œ
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	block: å€™é€‰åŒºå—å¯¹è±¡
//
// è¿”å›å€¼ï¼š
//
//	[]byte: è®¡ç®—å‡ºçš„åŒºå—å“ˆå¸Œ
//	error: å­˜å‚¨è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnil è¡¨ç¤ºå­˜å‚¨æˆåŠŸ
func (m *Manager) storeCandidateBlock(ctx context.Context, block *core.Block) ([]byte, error) {
	if m.logger != nil {
		m.logger.Debugf("å­˜å‚¨å€™é€‰åŒºå—åˆ°ç¼“å­˜ï¼Œé«˜åº¦: %d", block.Header.Height)
	}

	// 1. è®¡ç®—åŒºå—å“ˆå¸Œ
	hashResponse, err := m.blockHashServiceClient.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{
		Block: block,
	})
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	blockHash := hashResponse.Hash
	if len(blockHash) != 32 {
		return nil, fmt.Errorf("åŒºå—å“ˆå¸Œé•¿åº¦å¼‚å¸¸ï¼ŒæœŸæœ›32å­—èŠ‚ï¼Œå®é™…: %d", len(blockHash))
	}

	// 2. åºåˆ—åŒ–åŒºå—
	blockData, err := m.serializeBlock(block)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–å€™é€‰åŒºå—å¤±è´¥: %w", err)
	}

	// 3. ç”Ÿæˆç¼“å­˜é”®
	cacheKey := m.generateCacheKey(CandidateBlockPrefix, blockHash)

	// 4. è·å–é…ç½®
	config := m.getDefaultCacheConfig()

	// 5. å­˜å‚¨åˆ°ç¼“å­˜ï¼ˆè®¾ç½®TTLï¼‰
	err = m.cacheStore.Set(ctx, cacheKey, blockData, config.CandidateBlockTTL)
	if err != nil {
		if m.logger != nil {
			m.logger.Errorf("å­˜å‚¨å€™é€‰åŒºå—åˆ°ç¼“å­˜å¤±è´¥: %v", err)
		}
		return nil, fmt.Errorf("å­˜å‚¨å€™é€‰åŒºå—åˆ°ç¼“å­˜å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("å€™é€‰åŒºå—ç¼“å­˜å­˜å‚¨æˆåŠŸï¼Œå“ˆå¸Œ: %x, é«˜åº¦: %d, ç¼“å­˜é”®: %s, TTL: %v",
			blockHash, block.Header.Height, cacheKey, config.CandidateBlockTTL)
	}

	return blockHash, nil
}

// ==================== åºåˆ—åŒ–å·¥å…·æ–¹æ³• ====================

// ==================== æ–‡ä»¶ç»“æŸ ====================
//
// æœ¬æ–‡ä»¶ä¸“æ³¨äºåŒºå—ç¼“å­˜çš„æ ¸å¿ƒåŠŸèƒ½ï¼š
// 1. åŒºå—åºåˆ—åŒ–/ååºåˆ—åŒ–
// 2. å€™é€‰åŒºå—å­˜å‚¨ï¼ˆå«å“ˆå¸Œè®¡ç®—ï¼‰
// 3. ç¼“å­˜é”®ç®¡ç†å’Œé…ç½®
//
// éµå¾ªå•ä¸€èŒè´£åŸåˆ™ï¼Œåªä¿ç•™blockchainç»„ä»¶å¿…éœ€çš„åŠŸèƒ½
