// Package block æä¾›åŒºå—ç®¡ç†çš„æ ¸å¿ƒå®ç°
//
// ğŸ“‹ **create.go - æŒ–çŸ¿å€™é€‰åŒºå—åˆ›å»ºå®ç°**
//
// æœ¬æ–‡ä»¶å®ç° CreateMiningCandidate æ–¹æ³•çš„å®Œæ•´ä¸šåŠ¡é€»è¾‘ï¼Œé‡‡ç”¨å“ˆå¸Œ+ç¼“å­˜æ¶æ„æ¨¡å¼ã€‚
// ä¸“æ³¨äºä¸ºçŸ¿å·¥åˆ›å»ºé«˜è´¨é‡çš„å€™é€‰åŒºå—ï¼Œæ”¯æŒä¼ä¸šçº§å¹¶å‘æŒ–çŸ¿åœºæ™¯ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - ä»äº¤æ˜“æ± è·å–ä¼˜è´¨äº¤æ˜“
// - æŒ‰ä»£å¸ç±»å‹èšåˆæ‰‹ç»­è´¹
// - åˆ›å»ºåŒ…å«æŒ–çŸ¿å¥–åŠ±çš„ Coinbase äº¤æ˜“
// - æ„é€ å®Œæ•´çš„å€™é€‰åŒºå—ç»“æ„
// - è®¡ç®—åŒºå—å“ˆå¸Œå¹¶ç¼“å­˜å€™é€‰åŒºå—
// - è¿”å›è½»é‡çº§å“ˆå¸Œæ ‡è¯†ç¬¦
//
// ğŸ—ï¸ **æ¶æ„ç‰¹ç‚¹**ï¼š
// - å“ˆå¸Œ+ç¼“å­˜æ¨¡å¼ï¼šè¿”å›32å­—èŠ‚å“ˆå¸Œï¼Œå¤æ‚å¯¹è±¡å­˜å‚¨åœ¨å†…å­˜ç¼“å­˜
// - ä¼ä¸šçº§å¹¶å‘ï¼šæ”¯æŒå¤šä¸ªçŸ¿å·¥åŒæ—¶åˆ›å»ºå€™é€‰åŒºå—
// - æ™ºèƒ½è´¹ç”¨èšåˆï¼šè‡ªåŠ¨æŒ‰ä»£å¸ç±»å‹è®¡ç®—å’Œèšåˆæ‰‹ç»­è´¹
// - TTLç¼“å­˜ç®¡ç†ï¼šè‡ªåŠ¨æ¸…ç†è¿‡æœŸçš„å€™é€‰åŒºå—ç¼“å­˜
//
// è¯¦ç»†è®¾è®¡æ–‡æ¡£ï¼šinternal/core/blockchain/block/README.md
package block

import (
	"context"
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== æŒ–çŸ¿å€™é€‰åŒºå—åˆ›å»º ====================

// createMiningCandidate åˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—å¹¶è¿”å›åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **æ ¸å¿ƒä¸šåŠ¡é€»è¾‘å®ç°**
//
// è¿™æ˜¯ BlockService.CreateMiningCandidate çš„å®Œæ•´å®ç°ï¼Œé‡‡ç”¨å“ˆå¸Œ+ç¼“å­˜æ¶æ„æ¨¡å¼ã€‚
// ä»äº¤æ˜“æ± è·å–æœ€ä¼˜äº¤æ˜“ï¼Œæ„å»ºå€™é€‰åŒºå—ä¾›çŸ¿å·¥æŒ–çŸ¿ï¼Œè¿”å›åŒºå—å“ˆå¸Œä½œä¸ºæ ‡è¯†ç¬¦ã€‚
//
// ğŸ”„ **å®Œæ•´ä¸šåŠ¡æµç¨‹**ï¼š
//
// 1. **è·å–æŒ–çŸ¿æ¨¡æ¿**ï¼š
//   - è°ƒç”¨ TransactionService.GetMiningTemplate() è·å–å®Œæ•´çš„äº¤æ˜“æ¨¡æ¿
//   - å†…éƒ¨è‡ªåŠ¨å®Œæˆï¼šçŸ¿å·¥çŠ¶æ€æ£€æŸ¥ã€å†…å­˜æ± äº¤æ˜“è·å–ã€æ‰‹ç»­è´¹èšåˆã€åŒºå—å¥–åŠ±è®¡ç®—ã€Coinbaseç”Ÿæˆ
//   - è¿”å›å®Œæ•´çš„äº¤æ˜“åˆ—è¡¨ï¼ˆCoinbaseäº¤æ˜“åœ¨é¦–ä½ï¼‰
//
// 2. **æ„å»ºåŒºå—å¤´**ï¼š
//   - è°ƒç”¨ buildCandidateBlockHeader() ä¸€ç«™å¼æ„å»ºåŒºå—å¤´
//   - å†…éƒ¨è‡ªåŠ¨å®Œæˆï¼šçˆ¶åŒºå—ä¿¡æ¯è·å–ã€Merkleæ ¹è®¡ç®—ã€æ—¶é—´æˆ³ç”Ÿæˆã€çŠ¶æ€æ ¹è·å–
//   - è¿”å›å®Œæ•´çš„åŒºå—å¤´ç»“æ„
//
// 3. **ç»„è£…å€™é€‰åŒºå—**ï¼š
//   - å°†åŒºå—å¤´å’Œäº¤æ˜“åˆ—è¡¨ç»„è£…æˆå®Œæ•´çš„åŒºå—ç»“æ„
//   - éªŒè¯åŒºå—æ ¼å¼çš„åè®®å…¼å®¹æ€§
//
// 4. **åŒºå—å“ˆå¸Œè®¡ç®—**ï¼š
//   - ä½¿ç”¨ BlockHashServiceClient.ComputeBlockHash() è®¡ç®—æ ‡å‡†å“ˆå¸Œ
//   - åŸºäºåŒºå—å¤´å†…å®¹ï¼Œä¸åŒ…å« POW å­—æ®µ
//   - ç¡®ä¿å“ˆå¸Œè®¡ç®—çš„ç¡®å®šæ€§å’Œè·¨å¹³å°ä¸€è‡´æ€§
//
// 5. **ç¼“å­˜å­˜å‚¨ç®¡ç†**ï¼š
//   - å°†å€™é€‰åŒºå—åºåˆ—åŒ–å¹¶å­˜å‚¨åˆ° MemoryStore
//   - è®¾ç½®åˆç†çš„ TTLï¼ˆTime To Liveï¼‰é˜²æ­¢å†…å­˜æ³„æ¼
//   - æ”¯æŒå¹¶å‘è®¿é—®å’Œä¿®æ”¹ï¼ˆåç»­ POW è®¡ç®—ï¼‰
//
// ğŸ¯ **æ€§èƒ½ä¼˜åŒ–ç­–ç•¥**ï¼š
// - èŒè´£åˆ†ç¦»ï¼šäº¤æ˜“é€»è¾‘åœ¨transactionæœåŠ¡ï¼ŒåŒºå—å¤´é€»è¾‘åœ¨buildCandidateBlockHeaderå†…éƒ¨
// - å‚æ•°å†…èšï¼šé¿å…äº†5ä¸ªå‚æ•°çš„é•¿é“¾ä¼ é€’ï¼Œç®€åŒ–äº†æ¥å£è°ƒç”¨
// - ä¸€æ¬¡è°ƒç”¨ï¼šGetMiningTemplateå’ŒbuildCandidateBlockHeaderéƒ½æ˜¯ä¸€ç«™å¼æœåŠ¡
// - å¹¶å‘å®‰å…¨ï¼šæ”¯æŒå¤šçŸ¿å·¥åŒæ—¶åˆ›å»ºå€™é€‰åŒºå—
// - ç¼“å­˜å¤ç”¨ï¼šé¿å…é‡å¤è®¡ç®—ç›¸åŒçš„å€™é€‰åŒºå—
// - å†…å­˜ç®¡ç†ï¼šé€šè¿‡ TTL è‡ªåŠ¨æ¸…ç†è¿‡æœŸç¼“å­˜
//
// ğŸ›¡ï¸ **é”™è¯¯å¤„ç†æœºåˆ¶**ï¼š
// - æŒ–çŸ¿æ¨¡æ¿è·å–å¤±è´¥ï¼štransactionæœåŠ¡å†…éƒ¨å¤„ç†çŸ¿å·¥çŠ¶æ€ã€äº¤æ˜“è·å–ç­‰é”™è¯¯
// - åŒºå—å¤´æ„å»ºå¤±è´¥ï¼šå†…éƒ¨å¤„ç†çˆ¶åŒºå—è·å–ã€Merkleè®¡ç®—ã€çŠ¶æ€æ ¹è·å–ç­‰é”™è¯¯
// - åŒºå—ç»„è£…å¤±è´¥ï¼šç»“æ„å¼‚å¸¸ï¼Œéœ€è¦æ£€æŸ¥æ•°æ®å®Œæ•´æ€§
// - ç¼“å­˜å­˜å‚¨å¤±è´¥ï¼šè®°å½•é”™è¯¯ä½†ä»è¿”å›å“ˆå¸Œ
// - å“ˆå¸Œè®¡ç®—å¤±è´¥ï¼šç³»ç»Ÿæ€§é”™è¯¯ï¼Œéœ€è¦æ’æŸ¥
//
// ğŸ”„ **ä¸çŸ¿å·¥çš„åä½œæµç¨‹**ï¼š
// 1. çŸ¿å·¥è°ƒç”¨æ­¤æ–¹æ³•è·å–å€™é€‰åŒºå—å“ˆå¸Œ
// 2. çŸ¿å·¥é€šè¿‡å“ˆå¸Œä»ç¼“å­˜è·å–å®Œæ•´å€™é€‰åŒºå—
// 3. çŸ¿å·¥æ‰§è¡Œ POW è®¡ç®—ï¼Œä¿®æ”¹åŒºå—çš„ nonce å­—æ®µ
// 4. æ‰¾åˆ°æœ‰æ•ˆ nonce åï¼ŒçŸ¿å·¥å¹¿æ’­å®Œæ•´åŒºå—
// 5. å…¶ä»–èŠ‚ç‚¹é€šè¿‡ ValidateBlock å’Œ ProcessBlock å¤„ç†
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼Œç”¨äºè¶…æ—¶æ§åˆ¶å’Œå–æ¶ˆæ“ä½œ
//
// è¿”å›å€¼ï¼š
//
//	[]byte: 32å­—èŠ‚å€™é€‰åŒºå—å“ˆå¸Œï¼Œç”¨äºæ ‡è¯†ç¼“å­˜ä¸­çš„å€™é€‰åŒºå—
//	error: åˆ›å»ºè¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnil è¡¨ç¤ºåˆ›å»ºæˆåŠŸ
//
// ä½¿ç”¨ç¤ºä¾‹ï¼š
//
//	blockHash, err := manager.CreateMiningCandidate(ctx)
//	if err != nil {
//	  logger.Errorf("åˆ›å»ºå€™é€‰åŒºå—å¤±è´¥: %v", err)
//	  return err
//	}
//
//	logger.Infof("å€™é€‰åŒºå—åˆ›å»ºæˆåŠŸï¼Œå“ˆå¸Œ: %x", blockHash)
//	// çŸ¿å·¥å¯é€šè¿‡ blockHash ä»ç¼“å­˜è·å–å®Œæ•´åŒºå—è¿›è¡ŒæŒ–çŸ¿
func (m *Manager) createMiningCandidate(ctx context.Context) ([]byte, error) {
	if m.logger != nil {
		m.logger.Debugf("å¼€å§‹åˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—")
	}

	// 1. è·å–å®Œæ•´çš„æŒ–çŸ¿æ¨¡æ¿ï¼ˆåŒ…å«Coinbase + æ‰€æœ‰æ™®é€šäº¤æ˜“ï¼‰
	allTransactions, err := m.transactionService.GetMiningTemplate(ctx)
	if err != nil {
		return nil, fmt.Errorf("è·å–æŒ–çŸ¿æ¨¡æ¿å¤±è´¥: %w", err)
	}

	// 2. æ„å»ºå€™é€‰åŒºå—å¤´ï¼ˆå†…éƒ¨å¤„ç†æ‰€æœ‰å¿…è¦çš„è®¡ç®—ï¼‰
	blockHeader, err := m.buildCandidateBlockHeader(ctx, allTransactions)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºåŒºå—å¤´å¤±è´¥: %w", err)
	}

	// 3. ç»„è£…å®Œæ•´çš„å€™é€‰åŒºå—
	candidateBlock, err := m.assembleCandidateBlock(blockHeader, allTransactions)
	if err != nil {
		return nil, fmt.Errorf("ç»„è£…å€™é€‰åŒºå—å¤±è´¥: %w", err)
	}

	// 4. å­˜å‚¨å€™é€‰åŒºå—åˆ°ç¼“å­˜å¹¶è·å–å“ˆå¸Œ
	blockHash, err := m.storeCandidateBlock(ctx, candidateBlock)
	if err != nil {
		return nil, fmt.Errorf("å­˜å‚¨å€™é€‰åŒºå—å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("æˆåŠŸåˆ›å»ºæŒ–çŸ¿å€™é€‰åŒºå—ï¼Œå“ˆå¸Œ: %x, é«˜åº¦: %d, äº¤æ˜“æ•°: %d",
			blockHash, blockHeader.Height, len(allTransactions))
	}

	return blockHash, nil
}

// ==================== å†…éƒ¨è¾…åŠ©æ–¹æ³• ====================

// buildCandidateBlockHeader æ„å»ºå€™é€‰åŒºå—å¤´
//
// ğŸ¯ **ä¸€ç«™å¼åŒºå—å¤´æ„é€ **
//
// å†…éƒ¨å®Œæˆæ‰€æœ‰åŒºå—å¤´æ„é€ æ‰€éœ€çš„æ“ä½œï¼Œå®ç°èŒè´£å†…èšï¼š
// 1. è·å–çˆ¶åŒºå—ä¿¡æ¯ï¼ˆé«˜åº¦å’Œå“ˆå¸Œï¼‰
// 2. è®¡ç®—å½“å‰åŒºå—é«˜åº¦
// 3. è®¡ç®—äº¤æ˜“Merkleæ ¹
// 4. ç”Ÿæˆå½“å‰æ—¶é—´æˆ³
// 5. è·å–å½“å‰UTXOçŠ¶æ€æ ¹
// 6. æ„å»ºå®Œæ•´çš„åŒºå—å¤´ç»“æ„
//
// ğŸ¯ **è®¾è®¡ä¼˜åŠ¿**ï¼š
// - èŒè´£å†…èšï¼šæ‰€æœ‰åŒºå—å¤´ç›¸å…³é€»è¾‘é›†ä¸­åœ¨ä¸€ä¸ªæ–¹æ³•
// - ç®€åŒ–è°ƒç”¨ï¼šå¤–éƒ¨åªéœ€ä¼ å…¥äº¤æ˜“åˆ—è¡¨å³å¯
// - å‡å°‘å‚æ•°ï¼šé¿å…äº†5ä¸ªå‚æ•°çš„é•¿é“¾ä¼ é€’
// - æ˜“äºç»´æŠ¤ï¼šåŒºå—å¤´æ„é€ é€»è¾‘çš„å˜æ›´ä¸å½±å“è°ƒç”¨æ–¹
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	transactions: äº¤æ˜“åˆ—è¡¨ï¼ˆç”¨äºè®¡ç®—Merkleæ ¹ï¼‰
//
// è¿”å›å€¼ï¼š
//
//	*BlockHeader: æ„é€ å®Œæˆçš„åŒºå—å¤´
//	error: æ„å»ºè¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) buildCandidateBlockHeader(ctx context.Context, transactions []*transaction.Transaction) (*core.BlockHeader, error) {

	if m.logger != nil {
		m.logger.Debugf("å¼€å§‹æ„å»ºå€™é€‰åŒºå—å¤´ï¼Œäº¤æ˜“æ•°é‡: %d", len(transactions))
	}

	// 1. è·å–çˆ¶åŒºå—ä¿¡æ¯
	parentHeight, parentHash, err := m.repo.GetHighestBlock(ctx)
	if err != nil {
		return nil, fmt.Errorf("è·å–çˆ¶åŒºå—ä¿¡æ¯å¤±è´¥: %w", err)
	}

	currentHeight := parentHeight + 1

	// 2. è®¡ç®—é€‚åº”æ€§éš¾åº¦ï¼ˆä¸ºäº¤æ˜“æ”¶é›†ä¼˜åŒ–ï¼‰
	//
	// ğŸ¯ **éš¾åº¦è°ƒæ•´ç­–ç•¥**ï¼š
	// - ç›®æ ‡ï¼šè®©çŸ¿å·¥æœ‰è¶³å¤Ÿæ—¶é—´æ”¶é›†æ›´å¤šäº¤æ˜“ï¼Œæé«˜åŒºå—äº¤æ˜“å¯†åº¦
	// - æ–¹æ³•ï¼šæ ¹æ®äº¤æ˜“æ± çŠ¶æ€å’Œå†å²åŒºå—é—´éš”åŠ¨æ€è°ƒæ•´éš¾åº¦
	// - åŸåˆ™ï¼šæ›´å¤šäº¤æ˜“ = é™ä½éš¾åº¦ï¼Œæ›´å°‘äº¤æ˜“ = ä¿æŒæˆ–æé«˜éš¾åº¦
	currentDifficulty, err := m.calculateAdaptiveDifficulty(ctx, parentHeight, parentHash, len(transactions))
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—é€‚åº”æ€§éš¾åº¦å¤±è´¥: %w", err)
	}

	// 3. è®¡ç®—äº¤æ˜“Merkleæ ¹ï¼ˆä½¿ç”¨æ ‡å‡†åŒ–å†…éƒ¨æ¥å£æ–¹æ³•ï¼‰
	merkleRoot, err := m.CalculateMerkleRoot(ctx, transactions)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—Merkleæ ¹å¤±è´¥: %w", err)
	}

	// 4. ç”ŸæˆçœŸå®æ—¶é—´æˆ³ï¼ˆå¿…é¡»åæ˜ çœŸå®åˆ›å»ºæ—¶é—´ï¼‰
	//
	// âš ï¸ **åŒºå—é“¾æ—¶é—´æˆ³å®Œæ•´æ€§åŸåˆ™**ï¼š
	// - æ—¶é—´æˆ³å¿…é¡»åæ˜ åŒºå—çœŸå®åˆ›å»ºæ—¶é—´ï¼Œç»ä¸å…è®¸äººä¸ºè°ƒæ•´
	// - ä»»ä½•åŸºäº"æ™ºèƒ½æ—¶é—´æˆ³"æˆ–æ—¶é—´æˆ³è°ƒæ•´çš„è®¾è®¡éƒ½è¿èƒŒåŒºå—é“¾åŸºæœ¬åŸåˆ™
	// - å‡ºå—é¢‘ç‡æ§åˆ¶é€šè¿‡ä»¥ä¸‹æ­£ç¡®æ–¹å¼å®ç°ï¼š
	//   1. çŸ¿å·¥ä¾§ï¼šè°ƒæ•´æŒ–çŸ¿éš¾åº¦ç³»æ•°ï¼Œè®©çŸ¿å·¥æœ‰è¶³å¤Ÿæ—¶é—´æ”¶é›†æ›´å¤šäº¤æ˜“
	//   2. èšåˆå™¨ä¾§ï¼šè®¾ç½®å›ºå®šæ”¶é›†çª—å£ï¼Œç»™è¶³å¤Ÿæ—¶é—´æ”¶é›†å€™é€‰åŒºå—è¿›è¡Œé€‰æ‹©
	// - æ—¶é—´æˆ³çš„å”¯ä¸€ä½œç”¨æ˜¯è®°å½•åŒºå—çœŸå®åˆ›å»ºæ—¶é—´ï¼Œç”¨äºå®¡è®¡å’Œæ’åº
	timestamp := uint64(time.Now().Unix())

	// 5. è·å–é“¾IDé…ç½®
	var chainId uint64 = 1 // å®‰å…¨é»˜è®¤å€¼
	if m.configManager != nil {
		if blockchainConfig := m.configManager.GetBlockchain(); blockchainConfig != nil {
			chainId = blockchainConfig.ChainID
		} else if m.logger != nil {
			m.logger.Warn("æ— æ³•è·å–åŒºå—é“¾é…ç½®ï¼Œä½¿ç”¨é»˜è®¤é“¾ID: 1")
		}
	} else if m.logger != nil {
		m.logger.Warn("é…ç½®ç®¡ç†å™¨æœªåˆå§‹åŒ–ï¼Œä½¿ç”¨é»˜è®¤é“¾ID: 1")
	}

	// 6. è·å–å½“å‰UTXOçŠ¶æ€æ ¹
	stateRoot, err := m.utxoManager.GetCurrentStateRoot(ctx)
	if err != nil {
		return nil, fmt.Errorf("è·å–UTXOçŠ¶æ€æ ¹å¤±è´¥: %w", err)
	}

	// 7. æ„å»ºåŒºå—å¤´
	header := &core.BlockHeader{
		ChainId: chainId, // âœ… ä»é…ç½®è·å–é“¾IDï¼Œé˜²æ­¢è·¨é“¾é‡æ”¾æ”»å‡»
		Version: 1,       // åè®®ç‰ˆæœ¬å·
		// åˆ›ä¸–å—ï¼šçˆ¶å“ˆå¸Œä½¿ç”¨32å­—èŠ‚å…¨é›¶ï¼›å¦åˆ™ä½¿ç”¨æœ€é«˜å—å“ˆå¸Œ
		PreviousHash: func() []byte {
			if parentHeight == 0 && len(parentHash) == 0 {
				return make([]byte, 32)
			}
			return parentHash
		}(),
		MerkleRoot: merkleRoot,        // äº¤æ˜“Merkleæ ¹
		Timestamp:  timestamp,         // å½“å‰æ—¶é—´æˆ³
		Height:     currentHeight,     // åŒºå—é«˜åº¦
		Nonce:      make([]byte, 8),   // åˆå§‹nonceï¼ˆæŒ–çŸ¿æ—¶è®¾ç½®ï¼‰
		Difficulty: currentDifficulty, // é€‚åº”æ€§éš¾åº¦ï¼ˆä¸ºäº¤æ˜“æ”¶é›†ä¼˜åŒ–ï¼‰
		StateRoot:  stateRoot,         // UTXOçŠ¶æ€æ ¹
		// æ‰§è¡Œè´¹ç”¨ç›¸å…³å­—æ®µä¿æŒä¸ºç©ºï¼Œå€™é€‰åŒºå—ä¸è®¾ç½®è¿™äº›å€¼
	}

	if m.logger != nil {
		m.logger.Debugf("åŒºå—å¤´æ„å»ºå®Œæˆï¼Œçˆ¶å“ˆå¸Œ: %x, é«˜åº¦: %d, éš¾åº¦: %d, Merkleæ ¹: %x",
			parentHash, currentHeight, currentDifficulty, merkleRoot)
	}

	return header, nil
}

// assembleCandidateBlock ç»„è£…å®Œæ•´çš„å€™é€‰åŒºå—
//
// ğŸ¯ **å€™é€‰åŒºå—å®Œæ•´æ„é€ **
//
// å°†åŒºå—å¤´å’Œäº¤æ˜“åˆ—è¡¨ç»„è£…æˆå®Œæ•´çš„å€™é€‰åŒºå—ç»“æ„ã€‚
// ç¡®ä¿åŒºå—æ ¼å¼ç¬¦åˆåè®®è¦æ±‚ï¼Œå¯ä¾›åç»­çš„æŒ–çŸ¿å’ŒéªŒè¯ä½¿ç”¨ã€‚
//
// ç»„è£…è¦ç‚¹ï¼š
// - åŒºå—å¤´å®Œæ•´æ€§ï¼šç¡®ä¿æ‰€æœ‰å¿…è¦å­—æ®µå·²è®¾ç½®
// - äº¤æ˜“é¡ºåºï¼šCoinbase äº¤æ˜“åœ¨é¦–ä½ï¼Œå…¶ä»–äº¤æ˜“æŒ‰ä¼˜åŒ–é¡ºåºæ’åˆ—
// - å¤§å°éªŒè¯ï¼šç¡®ä¿åŒºå—å¤§å°åœ¨åè®®é™åˆ¶å†…
// - æ ¼å¼æ£€æŸ¥ï¼šéªŒè¯åŒºå—ç»“æ„çš„åè®®å…¼å®¹æ€§
//
// å‚æ•°ï¼š
//
//	header: å·²æ„å»ºçš„åŒºå—å¤´
//	transactions: äº¤æ˜“åˆ—è¡¨ï¼ˆåŒ…å«Coinbaseäº¤æ˜“ï¼‰
//
// è¿”å›å€¼ï¼š
//
//	*Block: ç»„è£…å®Œæˆçš„å€™é€‰åŒºå—
//	error: ç»„è£…è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) assembleCandidateBlock(header *core.BlockHeader,
	transactions []*transaction.Transaction) (*core.Block, error) {

	if m.logger != nil {
		m.logger.Debugf("ç»„è£…å®Œæ•´çš„å€™é€‰åŒºå—ï¼Œäº¤æ˜“æ•°: %d", len(transactions))
	}

	// 1. éªŒè¯è¾“å…¥å‚æ•°
	if header == nil {
		return nil, fmt.Errorf("åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	if len(transactions) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
	}

	// 2. åˆ›å»ºåŒºå—ä½“
	blockBody := &core.BlockBody{
		Transactions: transactions,
	}

	// 3. åˆ›å»ºå®Œæ•´çš„åŒºå—ç»“æ„
	candidateBlock := &core.Block{
		Header: header,
		Body:   blockBody,
	}

	// 4. åŸºç¡€æ ¼å¼æ£€æŸ¥
	if candidateBlock.Header.Height == 0 && len(candidateBlock.Header.PreviousHash) != 32 {
		return nil, fmt.Errorf("åˆ›ä¸–åŒºå—çš„çˆ¶åŒºå—å“ˆå¸Œå¿…é¡»ä¸º32å­—èŠ‚å…¨é›¶")
	}

	if candidateBlock.Header.Height > 0 && len(candidateBlock.Header.PreviousHash) == 0 {
		return nil, fmt.Errorf("éåˆ›ä¸–åŒºå—å¿…é¡»æœ‰çˆ¶åŒºå—å“ˆå¸Œ")
	}

	// 5. éªŒè¯Coinbaseäº¤æ˜“åœ¨é¦–ä½ï¼ˆå¦‚æœæœ‰å¤šä¸ªäº¤æ˜“ï¼‰
	// è¯´æ˜ï¼šæŒ–çŸ¿æ¨¡æ¿ç”Ÿæˆé€»è¾‘ä¿è¯ coinbase ä½äºäº¤æ˜“åˆ—è¡¨é¦–ä½ï¼›
	// coinbase çš„è¯†åˆ«ä»¥"æ²¡æœ‰ä»»ä½•è¾“å…¥"ä¸ºå‡†ï¼ˆè§ pkg/utils/transaction.go çš„ IsCoinbaseTxï¼‰ã€‚
	if len(transactions) > 1 {
		firstTx := transactions[0]
		if len(firstTx.Inputs) != 0 {
			return nil, fmt.Errorf("é¦–ä¸ªäº¤æ˜“åº”è¯¥æ˜¯Coinbaseäº¤æ˜“ï¼ˆæ²¡æœ‰è¾“å…¥ï¼‰")
		}
	}

	if m.logger != nil {
		m.logger.Debugf("å€™é€‰åŒºå—ç»„è£…å®Œæˆï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d",
			header.Height, len(transactions))
	}

	return candidateBlock, nil
}

// calculateAdaptiveDifficulty è®¡ç®—é€‚åº”æ€§éš¾åº¦ï¼ˆä¸ºäº¤æ˜“æ”¶é›†ä¼˜åŒ–ï¼‰
//
// ğŸ¯ **é€‚åº”æ€§éš¾åº¦è°ƒæ•´ç­–ç•¥**ï¼š
//
// ç›®æ ‡ï¼šè®©çŸ¿å·¥æœ‰è¶³å¤Ÿæ—¶é—´æ”¶é›†æ›´å¤šäº¤æ˜“ï¼Œæé«˜åŒºå—åˆ©ç”¨ç‡
//
// è°ƒæ•´é€»è¾‘ï¼š
// 1. äº¤æ˜“æ•°é‡å› å­ï¼šæ›´å¤šäº¤æ˜“ â†’ ç¨å¾®é™ä½éš¾åº¦ï¼ˆå¥–åŠ±é«˜æ•ˆæ‰“åŒ…ï¼‰
// 2. äº¤æ˜“æ± çŠ¶æ€ï¼šäº¤æ˜“æ± é¥±æ»¡ â†’ é™ä½éš¾åº¦ï¼ˆåŠ å¿«å‡ºå—æ¶ˆè´¹äº¤æ˜“ï¼‰
// 3. åŸºç¡€éš¾åº¦ä¿æŠ¤ï¼šé˜²æ­¢éš¾åº¦è¿‡ä½å½±å“å®‰å…¨æ€§
// 4. æ¸è¿›è°ƒæ•´ï¼šé¿å…éš¾åº¦å‰§çƒˆæ³¢åŠ¨
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡
//	parentHeight: çˆ¶åŒºå—é«˜åº¦
//	parentHash: çˆ¶åŒºå—å“ˆå¸Œ
//	currentTxCount: å½“å‰åŒºå—äº¤æ˜“æ•°é‡
//
// è¿”å›å€¼ï¼š
//
//	uint64: è°ƒæ•´åçš„é€‚åº”æ€§éš¾åº¦
//	error: è®¡ç®—é”™è¯¯
func (m *Manager) calculateAdaptiveDifficulty(ctx context.Context, parentHeight uint64, parentHash []byte, currentTxCount int) (uint64, error) {
	// 1. è·å–åŸºç¡€éš¾åº¦ï¼ˆä»çˆ¶åŒºå—æˆ–é»˜è®¤å€¼ï¼‰
	baseDifficulty := uint64(1) // åˆ›ä¸–åŒºå—é»˜è®¤éš¾åº¦
	if parentHeight > 0 && len(parentHash) > 0 {
		parentBlock, err := m.repo.GetBlock(ctx, parentHash)
		if err != nil {
			return 0, fmt.Errorf("è·å–çˆ¶åŒºå—å¤±è´¥: %w", err)
		}
		if parentBlock.Header != nil {
			baseDifficulty = parentBlock.Header.Difficulty
		}
	}

	// 2. è·å–é…ç½®å‚æ•°
	var (
		targetTxCount     = 50          // ç›®æ ‡äº¤æ˜“æ•°é‡
		maxDifficultyDown = 0.8         // æœ€å¤§éš¾åº¦ä¸‹è°ƒæ¯”ä¾‹ï¼ˆ20%ä¸‹è°ƒï¼‰
		minDifficultyUp   = 1.1         // æœ€å°éš¾åº¦ä¸Šè°ƒæ¯”ä¾‹ï¼ˆ10%ä¸Šè°ƒï¼‰
		minDifficulty     = uint64(1)   // æœ€å°éš¾åº¦ä¿æŠ¤
		maxDifficulty     = uint64(100) // æœ€å¤§éš¾åº¦é™åˆ¶
	)

	// ä»é…ç½®è·å–å‚æ•°ï¼ˆå¦‚æœå¯ç”¨ï¼‰
	if m.configManager != nil {
		if blockchainConfig := m.configManager.GetBlockchain(); blockchainConfig != nil {
			// TODO: ä»é…ç½®ä¸­è¯»å–éš¾åº¦è°ƒæ•´å‚æ•°
			// targetTxCount = blockchainConfig.Difficulty.TargetTxCount
		}
	}

	// 3. è®¡ç®—äº¤æ˜“æ•°é‡å› å­
	txFactor := 1.0
	if currentTxCount > targetTxCount {
		// äº¤æ˜“å¤š â†’ ç¨å¾®é™ä½éš¾åº¦ï¼ˆå¥–åŠ±é«˜æ•ˆæ‰“åŒ…ï¼‰
		txFactor = maxDifficultyDown + 0.2*float64(targetTxCount)/float64(currentTxCount)
		if txFactor < maxDifficultyDown {
			txFactor = maxDifficultyDown
		}
	} else if currentTxCount < targetTxCount/2 {
		// äº¤æ˜“å°‘ â†’ ç¨å¾®æé«˜éš¾åº¦ï¼ˆé¼“åŠ±ç­‰å¾…æ›´å¤šäº¤æ˜“ï¼‰
		txFactor = minDifficultyUp
	}

	// 4. åº”ç”¨è°ƒæ•´å› å­
	newDifficulty := uint64(float64(baseDifficulty) * txFactor)

	// 5. è¾¹ç•Œä¿æŠ¤
	if newDifficulty < minDifficulty {
		newDifficulty = minDifficulty
	}
	if newDifficulty > maxDifficulty {
		newDifficulty = maxDifficulty
	}

	// 6. è®°å½•è°ƒæ•´ä¿¡æ¯
	if m.logger != nil {
		if newDifficulty != baseDifficulty {
			m.logger.Infof("é€‚åº”æ€§éš¾åº¦è°ƒæ•´ï¼š%d â†’ %d (äº¤æ˜“æ•°: %d, ç›®æ ‡: %d, å› å­: %.2f)",
				baseDifficulty, newDifficulty, currentTxCount, targetTxCount, txFactor)
		} else {
			m.logger.Debugf("éš¾åº¦ä¿æŒä¸å˜ï¼š%d (äº¤æ˜“æ•°: %d)", baseDifficulty, currentTxCount)
		}
	}

	return newDifficulty, nil
}
