// Package block æä¾›åŒºå—ç®¡ç†çš„æ ¸å¿ƒå®ç°
//
// ğŸ“‹ **processing.go - åŒºå—å¤„ç†å®ç°**
//
// æœ¬æ–‡ä»¶å®ç° ProcessBlock æ–¹æ³•çš„å®Œæ•´ä¸šåŠ¡é€»è¾‘ï¼Œè´Ÿè´£å¤„ç†éªŒè¯é€šè¿‡çš„åŒºå—ã€‚
// é‡‡ç”¨åŸå­äº‹åŠ¡æ¨¡å¼ï¼Œç¡®ä¿åŒºå—å¤„ç†çš„æ•°æ®ä¸€è‡´æ€§å’Œç³»ç»Ÿç¨³å®šæ€§ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - åŸå­äº‹åŠ¡å¤„ç†ï¼šç¡®ä¿æ‰€æœ‰çŠ¶æ€å˜æ›´åœ¨å•ä¸€äº‹åŠ¡ä¸­å®Œæˆ
// - äº¤æ˜“æ‰§è¡Œç®¡ç†ï¼šæŒ‰é¡ºåºæ‰§è¡ŒåŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// - UTXO çŠ¶æ€æ›´æ–°ï¼šç»´æŠ¤å‡†ç¡®çš„ UTXO é›†åˆçŠ¶æ€
// - é“¾çŠ¶æ€ç»´æŠ¤ï¼šæ›´æ–°åŒºå—é“¾çš„æœ€æ–°çŠ¶æ€ä¿¡æ¯
// - äº‹ä»¶é€šçŸ¥å‘å¸ƒï¼šå‘å…¶ä»–ç»„ä»¶é€šçŸ¥åŒºå—å¤„ç†å®Œæˆ
//
// ğŸ—ï¸ **æ¶æ„ç‰¹ç‚¹**ï¼š
// - åŸå­äº‹åŠ¡ä¿è¯ï¼šå¤±è´¥æ—¶å®Œå…¨å›æ»šï¼ŒæˆåŠŸæ—¶å®Œå…¨æäº¤
// - çŠ¶æ€ä¸€è‡´æ€§ï¼šç¡®ä¿ UTXOã€è´¦æˆ·ã€é“¾çŠ¶æ€çš„ä¸¥æ ¼ä¸€è‡´
// - é”™è¯¯æ¢å¤æœºåˆ¶ï¼šæä¾›å®Œæ•´çš„é”™è¯¯å¤„ç†å’Œæ¢å¤èƒ½åŠ›
// - æ€§èƒ½ä¼˜åŒ–ï¼šæ”¯æŒæ‰¹é‡å¤„ç†å’Œå¹¶å‘ä¼˜åŒ–
//
// è¯¦ç»†è®¾è®¡æ–‡æ¡£ï¼šinternal/core/blockchain/block/README.md
package block

import (
	"bytes"
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== åŒºå—å¤„ç†å®ç° ====================

// processBlock å¤„ç†éªŒè¯é€šè¿‡çš„åŒºå—
//
// ğŸ¯ **åŸå­äº‹åŠ¡å¤„ç†å®ç°**
//
// è¿™æ˜¯ BlockService.ProcessBlock çš„å®Œæ•´å®ç°ï¼Œé‡‡ç”¨åŸå­äº‹åŠ¡æ¨¡å¼ã€‚
// å¤„ç†éªŒè¯é€šè¿‡çš„åŒºå—ï¼Œæ‰§è¡Œæ‰€æœ‰äº¤æ˜“å¹¶æ›´æ–°åŒºå—é“¾çŠ¶æ€ã€‚
//
// ğŸ”„ **å®Œæ•´å¤„ç†æµç¨‹**ï¼š
//
// **é˜¶æ®µä¸€ï¼šé¢„å¤„ç†å’Œäº‹åŠ¡å‡†å¤‡**
// 1. **æœ€ç»ˆéªŒè¯æ£€æŸ¥**ï¼š
//   - å†æ¬¡ç¡®è®¤åŒºå—å·²é€šè¿‡å®Œæ•´éªŒè¯
//   - æ£€æŸ¥åŒºå—æ˜¯å¦å·²è¢«å¤„ç†ï¼ˆé˜²é‡å¤ï¼‰
//   - éªŒè¯å½“å‰é“¾çŠ¶æ€æ˜¯å¦å…è®¸å¤„ç†æ­¤åŒºå—
//
// 2. **åŸå­äº‹åŠ¡å¯åŠ¨**ï¼š
//   - å¼€å¯æ•°æ®åº“äº‹åŠ¡ï¼Œç¡®ä¿åŸå­æ€§
//   - å»ºç«‹äº‹åŠ¡éš”ç¦»çº§åˆ«å’Œé”å®šç­–ç•¥
//   - å‡†å¤‡å›æ»šç‚¹å’Œé”™è¯¯æ¢å¤æœºåˆ¶
//
// 3. **å¤„ç†ç¯å¢ƒå‡†å¤‡**ï¼š
//   - åˆ›å»ºä¸´æ—¶çŠ¶æ€å®¹å™¨
//   - å‡†å¤‡ UTXO çŠ¶æ€å¿«ç…§
//   - åˆå§‹åŒ–äº¤æ˜“æ‰§è¡Œç¯å¢ƒ
//
// **é˜¶æ®µäºŒï¼šäº¤æ˜“æ‰§è¡Œå¾ªç¯**
// 4. **Coinbase äº¤æ˜“å¤„ç†**ï¼š
//
//   - å¤„ç†åŒºå—çš„ç¬¬ä¸€ä¸ªäº¤æ˜“ï¼ˆCoinbaseï¼‰
//
//   - åˆ›å»ºæŒ–çŸ¿å¥–åŠ±å’Œæ‰‹ç»­è´¹çš„æ–° UTXO
//
//   - æ›´æ–°çŸ¿å·¥è´¦æˆ·ä½™é¢
//
//   - è®°å½•å¥–åŠ±åˆ†é…ä¿¡æ¯
//
//     5. **æ™®é€šäº¤æ˜“æ‰§è¡Œå¾ªç¯**ï¼š
//     ```
//     for æ¯ä¸ªæ™®é€šäº¤æ˜“ {
//     a. æ ‡è®°è¾“å…¥ UTXO ä¸ºå·²èŠ±è´¹
//     b. åˆ›å»ºæ–°çš„è¾“å‡º UTXO
//     c. æ›´æ–°ç›¸å…³è´¦æˆ·ä½™é¢
//     d. æ‰§è¡Œæ™ºèƒ½åˆçº¦ï¼ˆå¦‚æœåŒ…å«ï¼‰
//     e. è®°å½•äº¤æ˜“æ‰§è¡Œç»“æœ
//     f. æ›´æ–°äº¤æ˜“çŠ¶æ€ä¸ºå·²ç¡®è®¤
//     }
//     ```
//
// 6. **UTXO é›†åˆæ›´æ–°**ï¼š
//   - æ‰¹é‡æ ‡è®°å·²èŠ±è´¹çš„ UTXO
//   - æ‰¹é‡åˆ›å»ºæ–°çš„ UTXO è®°å½•
//   - æ›´æ–° UTXO ç´¢å¼•å’Œç»Ÿè®¡ä¿¡æ¯
//   - è®¡ç®—æ–°çš„ UTXO çŠ¶æ€æ ¹å“ˆå¸Œ
//
// **é˜¶æ®µä¸‰ï¼šçŠ¶æ€æ›´æ–°å’ŒæŒä¹…åŒ–**
// 7. **åŒºå—æ•°æ®æŒä¹…åŒ–**ï¼š
//   - å°†åŒºå—æ•°æ®å†™å…¥æŒä¹…å­˜å‚¨
//   - æ›´æ–°åŒºå—ç´¢å¼•ï¼ˆæŒ‰é«˜åº¦ã€å“ˆå¸Œç­‰ï¼‰
//   - å»ºç«‹åŒºå—ä¸äº¤æ˜“çš„å…³è”å…³ç³»
//
// 8. **é“¾çŠ¶æ€æ›´æ–°**ï¼š
//   - æ›´æ–°æœ€æ–°åŒºå—é«˜åº¦
//   - æ›´æ–°æœ€ä½³åŒºå—å“ˆå¸Œ
//   - æ›´æ–°é“¾éš¾åº¦å’Œç´¯ç§¯å·¥ä½œé‡
//   - æ›´æ–°é“¾ç»Ÿè®¡ä¿¡æ¯
//
// 9. **è´¦æˆ·ä½™é¢æ›´æ–°**ï¼š
//   - æ‰¹é‡æ›´æ–°æ‰€æœ‰ç›¸å…³è´¦æˆ·ä½™é¢
//   - æ›´æ–°è´¦æˆ·äº¤æ˜“å†å²è®°å½•
//   - ç»´æŠ¤è´¦æˆ· UTXO ç´¢å¼•
//
// 10. **äº¤æ˜“æ± æ›´æ–°**ï¼š
//   - ä»äº¤æ˜“æ± ä¸­ç§»é™¤å·²ç¡®è®¤çš„äº¤æ˜“
//   - æ›´æ–°ç›¸å…³äº¤æ˜“çš„çŠ¶æ€
//   - å¤„ç†å¯èƒ½çš„äº¤æ˜“ä¾èµ–æ›´æ–°
//
// **é˜¶æ®µå››ï¼šäº‹åŠ¡æäº¤å’Œé€šçŸ¥**
// 11. **äº‹åŠ¡å®Œæ•´æ€§éªŒè¯**ï¼š
//   - éªŒè¯æ‰€æœ‰çŠ¶æ€æ›´æ–°çš„ä¸€è‡´æ€§
//   - æ£€æŸ¥æ•°æ®å®Œæ•´æ€§çº¦æŸ
//   - ç¡®è®¤äº‹åŠ¡å¯ä»¥å®‰å…¨æäº¤
//
// 12. **åŸå­äº‹åŠ¡æäº¤**ï¼š
//   - æäº¤æ‰€æœ‰æ•°æ®åº“å˜æ›´
//   - é‡Šæ”¾äº‹åŠ¡é”å’Œèµ„æº
//   - ç¡®è®¤çŠ¶æ€æ›´æ–°ç”Ÿæ•ˆ
//
// 13. **äº‹ä»¶é€šçŸ¥å‘å¸ƒ**ï¼š
//   - å‘å¸ƒåŒºå—å¤„ç†å®Œæˆäº‹ä»¶
//   - é€šçŸ¥å…¶ä»–ç»„ä»¶çŠ¶æ€å˜æ›´
//   - è§¦å‘ç›¸å…³çš„ä¸šåŠ¡æµç¨‹
//
// **é˜¶æ®µäº”ï¼šåå¤„ç†å’Œæ¸…ç†**
// 14. **ç¼“å­˜æ›´æ–°**ï¼š
//   - æ›´æ–°åŒºå—æŸ¥è¯¢ç¼“å­˜
//   - åˆ·æ–°ç›¸å…³ç»Ÿè®¡ç¼“å­˜
//   - ä¼˜åŒ–æŸ¥è¯¢ç´¢å¼•
//
// 15. **æ€§èƒ½ç›‘æ§**ï¼š
//   - è®°å½•å¤„ç†æ—¶é—´å’Œèµ„æºä½¿ç”¨
//   - æ›´æ–°æ€§èƒ½ç›‘æ§æŒ‡æ ‡
//   - ç”Ÿæˆå¤„ç†æŠ¥å‘Š
//
// ğŸ¯ **åŸå­äº‹åŠ¡ä¿è¯**ï¼š
// - **äº‹åŠ¡è¾¹ç•Œ**ï¼šæ•´ä¸ªåŒºå—å¤„ç†åœ¨å•ä¸ªæ•°æ®åº“äº‹åŠ¡ä¸­å®Œæˆ
// - **å›æ»šæœºåˆ¶**ï¼šä»»ä½•æ­¥éª¤å¤±è´¥éƒ½ä¼šå®Œå…¨å›æ»šåˆ°åˆå§‹çŠ¶æ€
// - **ä¸€è‡´æ€§æ£€æŸ¥**ï¼šåœ¨æäº¤å‰éªŒè¯æ‰€æœ‰çŠ¶æ€çš„ä¸€è‡´æ€§
// - **éš”ç¦»æ€§ä¿è¯**ï¼šä½¿ç”¨é€‚å½“çš„äº‹åŠ¡éš”ç¦»çº§åˆ«é˜²æ­¢å¹¶å‘å†²çª
//
// ğŸ›¡ï¸ **é”™è¯¯å¤„ç†å’Œæ¢å¤**ï¼š
// - **é¢„é˜²æ€§æ£€æŸ¥**ï¼šåœ¨å…³é”®æ“ä½œå‰è¿›è¡ŒçŠ¶æ€éªŒè¯
// - **å¼‚å¸¸æ•è·**ï¼šæ•è·å¹¶å¤„ç†æ‰€æœ‰å¯èƒ½çš„å¼‚å¸¸æƒ…å†µ
// - **é”™è¯¯åˆ†ç±»**ï¼šåŒºåˆ†ä¸´æ—¶é”™è¯¯å’Œæ°¸ä¹…é”™è¯¯
// - **æ¢å¤ç­–ç•¥**ï¼šæä¾›è‡ªåŠ¨é‡è¯•å’Œæ‰‹åŠ¨æ¢å¤é€‰é¡¹
// - **é”™è¯¯æŠ¥å‘Š**ï¼šç”Ÿæˆè¯¦ç»†çš„é”™è¯¯è¯Šæ–­ä¿¡æ¯
//
// ğŸ“Š **æ€§èƒ½ä¼˜åŒ–ç­–ç•¥**ï¼š
// - **æ‰¹é‡æ“ä½œ**ï¼šä½¿ç”¨æ‰¹é‡æ•°æ®åº“æ“ä½œå‡å°‘ I/O
// - **å¹¶è¡Œå¤„ç†**ï¼šåœ¨å®‰å…¨çš„å‰æä¸‹å¹¶è¡Œæ‰§è¡Œç‹¬ç«‹æ“ä½œ
// - **ç¼“å­˜åˆ©ç”¨**ï¼šå……åˆ†åˆ©ç”¨å†…å­˜ç¼“å­˜å‡å°‘æ•°æ®åº“è®¿é—®
// - **ç´¢å¼•ä¼˜åŒ–**ï¼šç»´æŠ¤é«˜æ•ˆçš„æ•°æ®åº“ç´¢å¼•
// - **èµ„æºç®¡ç†**ï¼šåˆç†ç®¡ç†å†…å­˜å’Œæ•°æ®åº“è¿æ¥èµ„æº
//
// ğŸ”„ **ä¸å…¶ä»–ç»„ä»¶çš„åä½œ**ï¼š
// - **RepositoryManager**ï¼šæŒä¹…åŒ–åŒºå—å’ŒçŠ¶æ€æ•°æ®
// - **UTXOManager**ï¼šç®¡ç† UTXO é›†åˆçŠ¶æ€
// - **TransactionService**ï¼šè·å–äº¤æ˜“è¯¦ç»†ä¿¡æ¯
// - **EventService**ï¼šå‘å¸ƒåŒºå—å¤„ç†äº‹ä»¶
// - **NetworkService**ï¼šå¹¿æ’­åŒºå—å¤„ç†ç»“æœ
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼Œç”¨äºè¶…æ—¶æ§åˆ¶å’Œå–æ¶ˆæ“ä½œ
//	block: å·²éªŒè¯çš„åŒºå—ï¼ŒåŒ…å«æ‰€æœ‰äº¤æ˜“æ•°æ®
//
// è¿”å›å€¼ï¼š
//
//	error: å¤„ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnil è¡¨ç¤ºå¤„ç†æˆåŠŸ
//
// ä½¿ç”¨ç¤ºä¾‹ï¼š
//
//	// éªŒè¯åŒºå—
//	valid, err := manager.ValidateBlock(ctx, receivedBlock)
//	if err != nil || !valid {
//	  logger.Errorf("åŒºå—éªŒè¯å¤±è´¥: %v", err)
//	  return err
//	}
//
//	// å¤„ç†éªŒè¯é€šè¿‡çš„åŒºå—
//	err = manager.ProcessBlock(ctx, receivedBlock)
//	if err != nil {
//	  logger.Errorf("åŒºå—å¤„ç†å¤±è´¥: %v", err)
//	  return err
//	}
//
//	logger.Infof("åŒºå—å¤„ç†æˆåŠŸï¼Œé«˜åº¦: %d", receivedBlock.Header.Height)
func (m *Manager) processBlock(ctx context.Context, block *core.Block) error {
	if m.logger != nil {
		m.logger.Infof("ğŸš¨ğŸš¨ğŸš¨ [DEBUG] å¼€å§‹å¤„ç†åŒºå—ï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d",
			block.Header.Height, len(block.Body.Transactions))
	}

	// æ£€æŸ¥æ˜¯å¦ä¸ºåˆ›ä¸–åŒºå—
	isGenesisBlock := block.Header.Height == 0

	if isGenesisBlock {
		if m.logger != nil {
			m.logger.Infof("å¤„ç†åˆ›ä¸–åŒºå—ï¼Œé«˜åº¦: %d", block.Header.Height)
		}
	}

	// æ­¥éª¤1: æœ€ç»ˆç¡®è®¤éªŒè¯ï¼ˆé˜²æ­¢é‡å¤å¤„ç†ï¼‰
	existingBlock, err := m.repo.GetBlock(ctx, m.calculateBlockHash(ctx, block))
	if err == nil && existingBlock != nil {
		if m.logger != nil {
			m.logger.Warnf("åŒºå—å·²å­˜åœ¨ï¼Œè·³è¿‡å¤„ç†ï¼Œé«˜åº¦: %d", block.Header.Height)
		}
		return nil // åŒºå—å·²å­˜åœ¨ï¼Œè·³è¿‡å¤„ç†
	}

	// æ­¥éª¤2: åŒºå—éªŒè¯ - å¿…é¡»åœ¨å­˜å‚¨å‰éªŒè¯åŒºå—æœ‰æ•ˆæ€§
	// ğŸ¯ **å…³é”®æ¶æ„ç‚¹**: å¤ç”¨validate.goä¸­çš„å®Œæ•´éªŒè¯é€»è¾‘
	// éªŒè¯åŒ…æ‹¬ï¼šç»“æ„éªŒè¯ã€å¤´éªŒè¯ã€é“¾è¿æ¥æ€§ã€Merkleæ ¹ã€POWã€äº¤æ˜“éªŒè¯
	valid, err := m.validateBlock(ctx, block)
	if err != nil {
		if m.logger != nil {
			m.logger.Errorf("åŒºå—éªŒè¯å¤±è´¥: %v", err)
		}
		return fmt.Errorf("åŒºå—éªŒè¯å¤±è´¥: %w", err)
	}
	if !valid {
		if m.logger != nil {
			m.logger.Errorf("åŒºå—éªŒè¯ä¸é€šè¿‡ï¼Œé«˜åº¦: %d", block.Header.Height)
		}
		return fmt.Errorf("åŒºå—éªŒè¯ä¸é€šè¿‡ï¼Œé«˜åº¦: %d", block.Header.Height)
	}

	if m.logger != nil {
		blockType := "æ™®é€šåŒºå—"
		if isGenesisBlock {
			blockType = "åˆ›ä¸–åŒºå—"
		}
		m.logger.Infof("âœ… %séªŒè¯é€šè¿‡ï¼Œé«˜åº¦: %d", blockType, block.Header.Height)
	}

	// æ­¥éª¤3: åˆ†å‰æ£€æµ‹ - æ£€æŸ¥æ˜¯å¦å­˜åœ¨åˆ†å‰æƒ…å†µ
	// ğŸ¯ **å…³é”®æ¶æ„ç‚¹**: åªå¯¹éåˆ›ä¸–åŒºå—è¿›è¡Œåˆ†å‰æ£€æµ‹
	// åˆ†å‰æ£€æµ‹é€»è¾‘ï¼š
	// - åŒé«˜åº¦ä½†ä¸åŒå“ˆå¸Œçš„åŒºå— = åˆ†å‰
	// - height = current+1 ä½† previous_hash ä¸åŒ¹é… = åˆ†å‰
	if !isGenesisBlock {
		err = m.detectAndHandleFork(ctx, block)
		if err != nil {
			if m.logger != nil {
				m.logger.Errorf("åˆ†å‰æ£€æµ‹å¤„ç†å¤±è´¥: %v", err)
			}
			return fmt.Errorf("åˆ†å‰æ£€æµ‹å¤„ç†å¤±è´¥: %w", err)
		}
	}

	// æ­¥éª¤4: ä½¿ç”¨repository.StoreBlockå­˜å‚¨åŒºå—
	// ğŸ¯ **å…³é”®æ¶æ„ç‚¹**: repository.StoreBlockæ˜¯å•ä¸€æ•°æ®æºå†™å…¥ç‚¹
	// å®ƒä¼šè‡ªåŠ¨å®Œæˆï¼š
	// - åŒºå—æ•°æ®å­˜å‚¨
	// - äº¤æ˜“ç´¢å¼•åˆ›å»º
	// - UTXOçŠ¶æ€æ›´æ–°
	// - è´¦æˆ·ä½™é¢æ›´æ–°
	// - æ‰€æœ‰ç›¸å…³ç´¢å¼•ç»´æŠ¤
	if err := m.repo.StoreBlock(ctx, block); err != nil {
		if m.logger != nil {
			m.logger.Errorf("åŒºå—å­˜å‚¨å¤±è´¥: %v", err)
		}
		return fmt.Errorf("åŒºå—å­˜å‚¨å¤±è´¥: %w", err)
	}

	// æ­¥éª¤5: æ¸…ç†äº¤æ˜“æ± ï¼ˆç§»é™¤å·²ç¡®è®¤äº¤æ˜“ï¼‰
	// ğŸ¯ **åˆ›ä¸–åŒºå—ç‰¹æ®Šå¤„ç†**: åˆ›ä¸–åŒºå—çš„äº¤æ˜“é€šå¸¸ä¸æ¥è‡ªäº¤æ˜“æ± ï¼Œè·³è¿‡æ¸…ç†
	if !isGenesisBlock {
		if err := m.cleanupTransactionPool(ctx, block); err != nil {
			if m.logger != nil {
				m.logger.Warnf("äº¤æ˜“æ± æ¸…ç†å¤±è´¥ï¼Œä½†ä¸å½±å“åŒºå—å¤„ç†: %v", err)
			}
			// äº¤æ˜“æ± æ¸…ç†å¤±è´¥ä¸å½±å“åŒºå—å¤„ç†ç»“æœ
		}
	} else {
		if m.logger != nil {
			m.logger.Debugf("åˆ›ä¸–åŒºå—è·³è¿‡äº¤æ˜“æ± æ¸…ç†")
		}
	}

	if m.logger != nil {
		blockType := "æ™®é€šåŒºå—"
		if isGenesisBlock {
			blockType = "åˆ›ä¸–åŒºå—"
		}
		m.logger.Infof("âœ… %så¤„ç†æˆåŠŸï¼Œé«˜åº¦: %d, å“ˆå¸Œ: %x",
			blockType, block.Header.Height, m.calculateBlockHash(ctx, block))
	}

	return nil
}

// detectAndHandleFork æ£€æµ‹å¹¶å¤„ç†åˆ†å‰æƒ…å†µ
//
// ğŸ¯ **åˆ†å‰æ£€æµ‹æ ¸å¿ƒé€»è¾‘**
//
// æ ¹æ®åˆ†å‰å¤„ç†è®¾è®¡æ–‡æ¡£ï¼Œæ£€æµ‹ä¸¤ç§åˆ†å‰æƒ…å†µï¼š
// 1. åŒé«˜åº¦åˆ†å‰ï¼šç›¸åŒé«˜åº¦ä½†ä¸åŒå“ˆå¸Œçš„åŒºå—
// 2. é“¾æ–­è£‚åˆ†å‰ï¼šheight = current+1 ä½† previous_hash ä¸åŒ¹é…
//
// æ£€æµ‹åˆ°åˆ†å‰åï¼Œå§”æ‰˜ç»™forkæœåŠ¡è¿›è¡Œå¼‚æ­¥å¤„ç†ã€‚
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - block: å¾…æ£€æµ‹çš„åŒºå—
//
// è¿”å›ï¼š
//   - error: åˆ†å‰æ£€æµ‹æˆ–å¤„ç†å¤±è´¥çš„é”™è¯¯
func (m *Manager) detectAndHandleFork(ctx context.Context, block *core.Block) error {
	if m.logger != nil {
		m.logger.Debugf("[BlockManager] å¼€å§‹åˆ†å‰æ£€æµ‹ - height: %d", block.Header.Height)
	}

	// è·å–å½“å‰é“¾ä¿¡æ¯
	currentHeight, currentBestHash, err := m.repo.GetHighestBlock(ctx)
	if err != nil {
		return fmt.Errorf("è·å–å½“å‰é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	blockHeight := block.Header.Height

	// æ£€æŸ¥åˆ†å‰æƒ…å†µ
	var isFork bool
	var forkType string

	// æƒ…å†µ1: åŒé«˜åº¦åˆ†å‰ - ç›¸åŒé«˜åº¦ä½†ä¸åŒå“ˆå¸Œ
	if blockHeight == currentHeight {
		newBlockHash := m.calculateBlockHash(ctx, block)

		if !bytes.Equal(currentBestHash, newBlockHash) {
			isFork = true
			forkType = "same_height_fork"
			if m.logger != nil {
				m.logger.Infof("[BlockManager] ğŸ”€ æ£€æµ‹åˆ°åŒé«˜åº¦åˆ†å‰: height=%d, current_hash=%x, new_hash=%x",
					blockHeight, currentBestHash, newBlockHash)
			}
		}
	}

	// æƒ…å†µ2: é“¾æ–­è£‚åˆ†å‰ - height = current+1 ä½† previous_hash ä¸åŒ¹é…
	if blockHeight == currentHeight+1 {
		actualPrevHash := block.Header.PreviousHash

		if !bytes.Equal(currentBestHash, actualPrevHash) {
			isFork = true
			forkType = "chain_break_fork"
			if m.logger != nil {
				m.logger.Infof("[BlockManager] ğŸ”€ æ£€æµ‹åˆ°é“¾æ–­è£‚åˆ†å‰: height=%d, expected_prev=%x, actual_prev=%x",
					blockHeight, currentBestHash, actualPrevHash)
			}
		}
	}

	// å¦‚æœæ£€æµ‹åˆ°åˆ†å‰ï¼Œå§”æ‰˜ç»™forkæœåŠ¡å¤„ç†
	if isFork {
		if m.logger != nil {
			m.logger.Infof("[BlockManager] âš ï¸  åˆ†å‰æ£€æµ‹å®Œæˆï¼Œç±»å‹: %s, å§”æ‰˜forkæœåŠ¡å¤„ç†", forkType)
		}

		// é€šè¿‡äº‹ä»¶æ€»çº¿å‘å¸ƒåˆ†å‰äº‹ä»¶ï¼Œå¼‚æ­¥å¤„ç†
		if m.eventBus != nil {
			forkEvent := map[string]interface{}{
				"type":      "fork_detected",
				"block":     block,
				"fork_type": forkType,
				"height":    block.Header.Height,
				"timestamp": block.Header.Timestamp,
			}

			// EventBus.Publishä¸è¿”å›é”™è¯¯ï¼Œç›´æ¥å‘å¸ƒ
			m.eventBus.Publish("blockchain.fork.detected", forkEvent)

			if m.logger != nil {
				m.logger.Infof("å·²å‘å¸ƒåˆ†å‰æ£€æµ‹äº‹ä»¶: type=%s, height=%d", forkType, block.Header.Height)
			}
		}

		if m.logger != nil {
			m.logger.Infof("[BlockManager] âœ… åˆ†å‰å·²æäº¤å¤„ç†ï¼Œç»§ç»­å½“å‰åŒºå—å¤„ç†æµç¨‹")
		}
	} else {
		if m.logger != nil {
			m.logger.Debugf("[BlockManager] æœªæ£€æµ‹åˆ°åˆ†å‰ï¼Œç»§ç»­æ­£å¸¸å¤„ç†")
		}
	}

	return nil
}

// calculateBlockHash è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆè¾…åŠ©æ–¹æ³•ï¼‰
//
// ğŸ¯ **åŒºå—å“ˆå¸Œè®¡ç®—**
//
// ä½¿ç”¨æ ‡å‡†çš„BlockHashServiceè®¡ç®—åŒºå—å“ˆå¸Œï¼Œç”¨äºæŸ¥è¯¢å’Œå»é‡ã€‚
//
// å‚æ•°ï¼š
//
//	block: å®Œæ•´åŒºå—
//
// è¿”å›å€¼ï¼š
//
//	[]byte: åŒºå—å“ˆå¸Œ
func (m *Manager) calculateBlockHash(ctx context.Context, block *core.Block) []byte {
	// ä½¿ç”¨æ ‡å‡†çš„BlockHashServiceè®¡ç®—åŒºå—å“ˆå¸Œ
	request := &core.ComputeBlockHashRequest{
		Block:            block,
		IncludeDebugInfo: false,
	}

	response, err := m.blockHashServiceClient.ComputeBlockHash(ctx, request)
	if err != nil || !response.IsValid {
		// å¦‚æœè®¡ç®—å¤±è´¥ï¼Œè¿”å›ç©ºåˆ‡ç‰‡ï¼Œä¸Šå±‚ä¼šå¤„ç†è¿™ç§æƒ…å†µ
		return make([]byte, 32)
	}

	return response.Hash
}

// ==================== è¾…åŠ©æ–¹æ³• ====================

// cleanupTransactionPool æ¸…ç†äº¤æ˜“æ± ä¸­å·²ç¡®è®¤çš„äº¤æ˜“
//
// ğŸ¯ **äº¤æ˜“æ± ç»´æŠ¤ - ä½¿ç”¨æ­£ç¡®çš„txpoolæ¥å£**
//
// ä»äº¤æ˜“æ± ç§»é™¤å·²è¢«åŒºå—ç¡®è®¤çš„äº¤æ˜“ï¼Œä½¿ç”¨ConfirmTransactionsæ–¹æ³•ã€‚
// è¿™æ˜¯blockå±‚å°‘æ•°åˆç†çš„èŒè´£ä¹‹ä¸€ï¼Œå› ä¸ºåªæœ‰åœ¨åŒºå—å¤„ç†å®Œæˆåæ‰èƒ½ç¡®å®šå“ªäº›äº¤æ˜“å·²è¢«ç¡®è®¤ã€‚
//
// æ¸…ç†å†…å®¹ï¼š
// - ç¡®è®¤åŒºå—ä¸­çš„äº¤æ˜“ï¼ˆçŠ¶æ€: mining â†’ confirmed â†’ removedï¼‰
// - ä½¿ç”¨æ ‡å‡†çš„txpool.ConfirmTransactionsæ¥å£
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	block: å·²å¤„ç†çš„åŒºå—
//
// è¿”å›å€¼ï¼š
//
//	error: æ¸…ç†é”™è¯¯ï¼Œnilè¡¨ç¤ºæ¸…ç†æˆåŠŸ
func (m *Manager) cleanupTransactionPool(ctx context.Context, block *core.Block) error {
	if m.logger != nil {
		m.logger.Debugf("æ¸…ç†äº¤æ˜“æ± ï¼Œç¡®è®¤å·²å¤„ç†äº¤æ˜“æ•°: %d", len(block.Body.Transactions))
	}

	// æ”¶é›†æ‰€æœ‰äº¤æ˜“å“ˆå¸Œ
	txIDs := make([][]byte, 0, len(block.Body.Transactions))

	for _, tx := range block.Body.Transactions {
		// è·³è¿‡ coinbase äº¤æ˜“ï¼ˆç®€å•åˆ¤æ–­ï¼šæ²¡æœ‰è¾“å…¥æˆ–ç¬¬ä¸€ä¸ªè¾“å…¥ä¸ºç©ºï¼‰
		if len(tx.Inputs) == 0 {
			continue
		}
		// ä½¿ç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—äº¤æ˜“ID
		hashReq := &transaction.ComputeHashRequest{
			Transaction:      tx,
			IncludeDebugInfo: false,
		}
		hashResp, err := m.txHashServiceClient.ComputeHash(ctx, hashReq)
		if err != nil || !hashResp.IsValid {
			if m.logger != nil {
				m.logger.Debugf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼Œè·³è¿‡äº¤æ˜“æ± æ¸…ç†: %v", err)
			}
			continue
		}

		txIDs = append(txIDs, hashResp.Hash)
	}

	// å¦‚æœæ²¡æœ‰æœ‰æ•ˆçš„äº¤æ˜“IDï¼Œè·³è¿‡æ¸…ç†
	if len(txIDs) == 0 {
		if m.logger != nil {
			m.logger.Debugf("æ²¡æœ‰éœ€è¦ç¡®è®¤çš„äº¤æ˜“ï¼Œè·³è¿‡äº¤æ˜“æ± æ¸…ç†")
		}
		return nil
	}

	// ä½¿ç”¨æ­£ç¡®çš„txpoolæ¥å£ç¡®è®¤äº¤æ˜“
	if err := m.txPool.ConfirmTransactions(txIDs, block.Header.Height); err != nil {
		if m.logger != nil {
			m.logger.Warnf("ç¡®è®¤äº¤æ˜“å¤±è´¥ï¼Œä½†ä¸å½±å“åŒºå—å¤„ç†: %v", err)
		}
		// äº¤æ˜“æ± ç¡®è®¤å¤±è´¥ä¸å½±å“åŒºå—å¤„ç†ç»“æœ
		return nil
	}

	if m.logger != nil {
		m.logger.Debugf("âœ… äº¤æ˜“æ± æ¸…ç†å®Œæˆï¼Œå·²ç¡®è®¤äº¤æ˜“æ•°: %d", len(txIDs))
	}

	return nil
}
