// Package chain åˆ›ä¸–åŒºå—ç®¡ç†å®ç°
//
// ğŸ¯ **åˆ›ä¸–åŒºå—å¤„ç†æœåŠ¡ (Genesis Block Service)**
//
// æœ¬æ–‡ä»¶å®ç°äº†åˆ›ä¸–åŒºå—çš„å®Œæ•´å¤„ç†æµç¨‹ï¼ŒåŒ…æ‹¬ï¼š
// - åˆ›ä¸–çŠ¶æ€æ£€æŸ¥ï¼šæ£€æŸ¥é“¾æ˜¯å¦å·²ç»åˆå§‹åŒ–
// - åˆ›ä¸–åŒºå—ç”Ÿæˆï¼šåŸºäºé…ç½®ç”Ÿæˆç¡®å®šæ€§åˆ›ä¸–åŒºå—
// - åˆ›ä¸–åŒºå—éªŒè¯ï¼šéªŒè¯åˆ›ä¸–åŒºå—çš„æœ‰æ•ˆæ€§
// - åˆ›ä¸–çŠ¶æ€åˆå§‹åŒ–ï¼šåˆå§‹åŒ–é“¾çš„åŸºç¡€çŠ¶æ€
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**
// - é…ç½®é©±åŠ¨ï¼šå®Œå…¨åŸºäºgenesis.jsonå’Œblockchainé…ç½®
// - ç¡®å®šæ€§ï¼šç›¸åŒé…ç½®åœ¨ä»»ä½•èŠ‚ç‚¹éƒ½äº§ç”Ÿç›¸åŒåˆ›ä¸–åŒºå—
// - åŸå­æ€§ï¼šåˆ›ä¸–åˆå§‹åŒ–è¿‡ç¨‹è¦ä¹ˆå…¨éƒ¨æˆåŠŸè¦ä¹ˆå…¨éƒ¨å¤±è´¥
// - å¹‚ç­‰æ€§ï¼šæ”¯æŒé‡å¤æ‰§è¡Œåˆ›ä¸–åˆå§‹åŒ–è€Œä¸äº§ç”Ÿå‰¯ä½œç”¨
package chain

import (
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
//                              åˆ›ä¸–åŒºå—æ£€æŸ¥
// ============================================================================

// NeedsGenesisBlock æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—
//
// ğŸ¯ **åˆ›ä¸–éœ€æ±‚æ£€æŸ¥æ ¸å¿ƒ**
//
// åˆ¤æ–­å½“å‰é“¾çŠ¶æ€æ˜¯å¦éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—ï¼š
// 1. æ£€æŸ¥é“¾æ˜¯å¦å·²åˆå§‹åŒ–ï¼ˆChainInitializedKeyï¼‰
// 2. æ£€æŸ¥æ˜¯å¦å­˜åœ¨é«˜åº¦ä¸º0çš„åŒºå—
// 3. æ£€æŸ¥é“¾çŠ¶æ€çš„ä¸€è‡´æ€§
//
// è¿”å›ï¼š
//
//	bool: trueè¡¨ç¤ºéœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—
//	error: æ£€æŸ¥è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) NeedsGenesisBlock(ctx context.Context) (bool, error) {
	if m.logger != nil {
		m.logger.Debugf("æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—")
	}

	// 1. é€šè¿‡repositoryæ£€æŸ¥é“¾æ˜¯å¦å·²åˆå§‹åŒ–
	height, hash, err := m.repo.GetHighestBlock(ctx)
	if err != nil {
		// å¦‚æœè·å–å¤±è´¥ï¼Œå¯èƒ½æ˜¯ç©ºé“¾ï¼Œéœ€è¦åˆ›ä¸–åŒºå—
		if m.logger != nil {
			m.logger.Debugf("è·å–æœ€é«˜åŒºå—å¤±è´¥ï¼Œå¯èƒ½æ˜¯ç©ºé“¾: %v", err)
		}
		return true, nil
	}

	// 2. å¦‚æœèƒ½å¤Ÿè·å–åˆ°é“¾é«˜åº¦ï¼Œè¯´æ˜å·²å­˜åœ¨åŒºå—
	if height > 0 || (height == 0 && len(hash) > 0) {
		if m.logger != nil {
			m.logger.Debugf("é“¾å·²å­˜åœ¨åŒºå—ï¼Œé«˜åº¦: %dï¼Œæ— éœ€åˆ›ä¸–åŒºå—", height)
		}
		return false, nil
	}

	// 3. é»˜è®¤éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—
	if m.logger != nil {
		m.logger.Debugf("é“¾çŠ¶æ€æœªåˆå§‹åŒ–ï¼Œéœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—")
	}
	return true, nil
}

// ============================================================================
//                              åˆ›ä¸–åŒºå—ç”Ÿæˆ
// ============================================================================

// CreateGenesisBlock åˆ›å»ºåˆ›ä¸–åŒºå—
//
// ğŸ¯ **åˆ›ä¸–åŒºå—ç”Ÿæˆæ ¸å¿ƒ**
//
// å®Œæ•´çš„åˆ›ä¸–åŒºå—åˆ›å»ºæµç¨‹ï¼š
// 1. éªŒè¯åˆ›ä¸–é…ç½®çš„æœ‰æ•ˆæ€§
// 2. é€šè¿‡äº¤æ˜“æœåŠ¡åˆ›å»ºåˆ›ä¸–äº¤æ˜“
// 3. é€šè¿‡åŒºå—æœåŠ¡æ„å»ºåˆ›ä¸–åŒºå—
// 4. éªŒè¯åˆ›ä¸–åŒºå—çš„æ­£ç¡®æ€§
//
// å‚æ•°ï¼š
//
//	ctx: æ“ä½œä¸Šä¸‹æ–‡
//	genesisConfig: åˆ›ä¸–é…ç½®ï¼ˆæ¥è‡ªé…ç½®æ–‡ä»¶ï¼‰
//
// è¿”å›ï¼š
//
//	*core.Block: å®Œæ•´çš„åˆ›ä¸–åŒºå—
//	error: åˆ›å»ºè¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) CreateGenesisBlock(ctx context.Context, genesisConfig *types.GenesisConfig) (*core.Block, error) {
	if m.logger != nil {
		m.logger.Infof("å¼€å§‹åˆ›å»ºåˆ›ä¸–åŒºå—...")
	}

	// 1. éªŒè¯åˆ›ä¸–é…ç½®
	if err := m.validateGenesisConfig(genesisConfig); err != nil {
		return nil, fmt.Errorf("åˆ›ä¸–é…ç½®éªŒè¯å¤±è´¥: %w", err)
	}

	// 2. æ£€æŸ¥æœåŠ¡ä¾èµ–æ˜¯å¦å·²æ³¨å…¥
	if m.transactionService == nil {
		return nil, fmt.Errorf("äº¤æ˜“æœåŠ¡æœªåˆå§‹åŒ–")
	}
	if m.blockService == nil {
		return nil, fmt.Errorf("åŒºå—æœåŠ¡æœªåˆå§‹åŒ–")
	}

	// 3. åˆ›å»ºåˆ›ä¸–äº¤æ˜“ï¼ˆé€šè¿‡å†…éƒ¨transactionæœåŠ¡ï¼‰
	genesisTransactions, err := m.transactionService.CreateGenesisTransactions(ctx, genesisConfig)
	if err != nil {
		return nil, fmt.Errorf("åˆ›å»ºåˆ›ä¸–äº¤æ˜“å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("åˆ›ä¸–äº¤æ˜“åˆ›å»ºå®Œæˆï¼Œæ•°é‡: %d", len(genesisTransactions))
	}

	// 4. éªŒè¯åˆ›ä¸–äº¤æ˜“
	valid, err := m.transactionService.ValidateGenesisTransactions(ctx, genesisTransactions)
	if err != nil {
		return nil, fmt.Errorf("éªŒè¯åˆ›ä¸–äº¤æ˜“å¤±è´¥: %w", err)
	}
	if !valid {
		return nil, fmt.Errorf("åˆ›ä¸–äº¤æ˜“éªŒè¯å¤±è´¥")
	}

	// 5. æ„å»ºåˆ›ä¸–åŒºå—ï¼ˆé€šè¿‡å†…éƒ¨blockæœåŠ¡ï¼‰
	genesisBlock, err := m.blockService.CreateGenesisBlock(ctx, genesisTransactions, genesisConfig)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºåˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// 6. éªŒè¯åˆ›ä¸–åŒºå—
	valid, err = m.blockService.ValidateGenesisBlock(ctx, genesisBlock)
	if err != nil {
		return nil, fmt.Errorf("éªŒè¯åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}
	if !valid {
		return nil, fmt.Errorf("åˆ›ä¸–åŒºå—éªŒè¯å¤±è´¥")
	}

	if m.logger != nil {
		m.logger.Infof("âœ… åˆ›ä¸–åŒºå—åˆ›å»ºæˆåŠŸï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d",
			genesisBlock.Header.Height, len(genesisTransactions))
	}

	return genesisBlock, nil
}

// ============================================================================
//                              åˆ›ä¸–åŒºå—å¤„ç†
// ============================================================================

// ProcessGenesisBlock å¤„ç†åˆ›ä¸–åŒºå—
//
// ğŸ¯ **åˆ›ä¸–åŒºå—å¤„ç†æ ¸å¿ƒ**
//
// å¤„ç†åˆ›ä¸–åŒºå—çš„å®Œæ•´æµç¨‹ï¼š
// 1. éªŒè¯åˆ›ä¸–åŒºå—çš„æœ‰æ•ˆæ€§
// 2. å­˜å‚¨åˆ›ä¸–åŒºå—åˆ°æ•°æ®åº“
// 3. åˆå§‹åŒ–é“¾çŠ¶æ€å’Œç´¢å¼•
// 4. è§¦å‘åˆ›ä¸–å®Œæˆäº‹ä»¶
//
// å‚æ•°ï¼š
//
//	ctx: æ“ä½œä¸Šä¸‹æ–‡
//	genesisBlock: åˆ›ä¸–åŒºå—
//
// è¿”å›ï¼š
//
//	error: å¤„ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) ProcessGenesisBlock(ctx context.Context, genesisBlock *core.Block) error {
	if m.logger != nil {
		m.logger.Infof("å¼€å§‹å¤„ç†åˆ›ä¸–åŒºå—...")
	}

	// 1. æœ€ç»ˆéªŒè¯åˆ›ä¸–åŒºå—
	if err := m.validateCreatedGenesisBlock(genesisBlock); err != nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—æœ€ç»ˆéªŒè¯å¤±è´¥: %w", err)
	}

	// 2. å­˜å‚¨åˆ›ä¸–åŒºå—ï¼ˆè¿™ä¼šè§¦å‘repositoryå±‚çš„åˆ›ä¸–çŠ¶æ€åˆå§‹åŒ–ï¼‰
	if err := m.repo.StoreBlock(ctx, genesisBlock); err != nil {
		return fmt.Errorf("å­˜å‚¨åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// 3. éªŒè¯åˆ›ä¸–åé“¾çŠ¶æ€
	if err := m.verifyGenesisState(ctx); err != nil {
		return fmt.Errorf("åˆ›ä¸–åçŠ¶æ€éªŒè¯å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("âœ… åˆ›ä¸–åŒºå—å¤„ç†å®Œæˆ")
	}

	return nil
}

// ============================================================================
//                              éªŒè¯è¾…åŠ©æ–¹æ³•
// ============================================================================

// validateGenesisConfig éªŒè¯åˆ›ä¸–é…ç½®
func (m *Manager) validateGenesisConfig(config *types.GenesisConfig) error {
	if config == nil {
		return fmt.Errorf("åˆ›ä¸–é…ç½®ä¸èƒ½ä¸ºç©º")
	}

	if config.ChainID == 0 {
		return fmt.Errorf("é“¾IDä¸èƒ½ä¸º0")
	}

	if config.NetworkID == "" {
		return fmt.Errorf("ç½‘ç»œIDä¸èƒ½ä¸ºç©º")
	}

	if config.Timestamp == 0 {
		return fmt.Errorf("æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	// éªŒè¯åˆ›ä¸–è´¦æˆ·é…ç½®
	if len(config.GenesisAccounts) == 0 {
		if m.logger != nil {
			m.logger.Warnf("åˆ›ä¸–é…ç½®ä¸­æ²¡æœ‰é¢„è®¾è´¦æˆ·")
		}
	}

	for i, account := range config.GenesisAccounts {
		if account.PublicKey == "" {
			return fmt.Errorf("ç¬¬%dä¸ªåˆ›ä¸–è´¦æˆ·çš„å…¬é’¥ä¸èƒ½ä¸ºç©º", i)
		}
		if account.InitialBalance == "" || account.InitialBalance == "0" {
			return fmt.Errorf("ç¬¬%dä¸ªåˆ›ä¸–è´¦æˆ·çš„åˆå§‹ä½™é¢ä¸èƒ½ä¸ºç©ºæˆ–ä¸º0", i)
		}
	}

	return nil
}

// validateCreatedGenesisBlock éªŒè¯åˆ›å»ºçš„åˆ›ä¸–åŒºå—
func (m *Manager) validateCreatedGenesisBlock(block *core.Block) error {
	if block == nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—ä¸èƒ½ä¸ºç©º")
	}

	if block.Header == nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	if block.Body == nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—ä½“ä¸èƒ½ä¸ºç©º")
	}

	// éªŒè¯åˆ›ä¸–åŒºå—çš„ç‰¹æ®Šå±æ€§
	if block.Header.Height != 0 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—é«˜åº¦å¿…é¡»ä¸º0ï¼Œå½“å‰ä¸º: %d", block.Header.Height)
	}

	// éªŒè¯çˆ¶åŒºå—å“ˆå¸Œä¸ºå…¨é›¶
	if len(block.Header.PreviousHash) != 32 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œé•¿åº¦å¿…é¡»ä¸º32å­—èŠ‚ï¼Œå½“å‰ä¸º: %d", len(block.Header.PreviousHash))
	}

	for _, b := range block.Header.PreviousHash {
		if b != 0 {
			return fmt.Errorf("åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œå¿…é¡»ä¸ºå…¨é›¶")
		}
	}

	if block.Header.Timestamp == 0 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	return nil
}

// verifyGenesisState éªŒè¯åˆ›ä¸–åçš„é“¾çŠ¶æ€
func (m *Manager) verifyGenesisState(ctx context.Context) error {
	// 1. æ£€æŸ¥é“¾æ˜¯å¦å·²æ ‡è®°ä¸ºåˆå§‹åŒ–
	height, hash, err := m.repo.GetHighestBlock(ctx)
	if err != nil {
		return fmt.Errorf("è·å–æœ€é«˜åŒºå—å¤±è´¥: %w", err)
	}

	if height != 0 {
		return fmt.Errorf("åˆ›ä¸–åé“¾é«˜åº¦åº”è¯¥ä¸º0ï¼Œå½“å‰ä¸º: %d", height)
	}

	if len(hash) == 0 {
		return fmt.Errorf("åˆ›ä¸–åé“¾å“ˆå¸Œä¸èƒ½ä¸ºç©º")
	}

	// 2. è·å–é“¾ä¿¡æ¯éªŒè¯å®Œæ•´æ€§
	chainInfo, err := m.getChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	if chainInfo.Height != 0 {
		return fmt.Errorf("åˆ›ä¸–åé“¾ä¿¡æ¯é«˜åº¦åº”è¯¥ä¸º0ï¼Œå½“å‰ä¸º: %d", chainInfo.Height)
	}

	if m.logger != nil {
		m.logger.Debugf("åˆ›ä¸–åé“¾çŠ¶æ€éªŒè¯é€šè¿‡ - é«˜åº¦: %d, å“ˆå¸Œ: %x", height, hash)
	}

	return nil
}

// ============================================================================
//                              å…¬å…±æ¥å£å®ç°
// ============================================================================

// InitializeGenesisIfNeeded æ ¹æ®éœ€è¦åˆå§‹åŒ–åˆ›ä¸–åŒºå—
//
// ğŸ¯ **åˆ›ä¸–åŒºå—è‡ªåŠ¨åˆå§‹åŒ–**
//
// è¿™æ˜¯å¯¹å¤–çš„ä¸»è¦æ¥å£ï¼Œç”¨äºåœ¨ç³»ç»Ÿå¯åŠ¨æ—¶è‡ªåŠ¨æ£€æŸ¥å’Œåˆ›å»ºåˆ›ä¸–åŒºå—ï¼š
// 1. æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›ä¸–åŒºå—
// 2. å¦‚æœéœ€è¦ï¼Œåˆ™åˆ›å»ºå’Œå¤„ç†åˆ›ä¸–åŒºå—
// 3. å¦‚æœä¸éœ€è¦ï¼Œåˆ™è·³è¿‡å¤„ç†
//
// å‚æ•°ï¼š
//
//	ctx: æ“ä½œä¸Šä¸‹æ–‡
//	genesisConfig: åˆ›ä¸–é…ç½®
//
// è¿”å›ï¼š
//
//	bool: trueè¡¨ç¤ºåˆ›å»ºäº†åˆ›ä¸–åŒºå—ï¼Œfalseè¡¨ç¤ºè·³è¿‡
//	error: å¤„ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) InitializeGenesisIfNeeded(ctx context.Context, genesisConfig *types.GenesisConfig) (bool, error) {
	if m.logger != nil {
		m.logger.Debugf("æ£€æŸ¥æ˜¯å¦éœ€è¦åˆå§‹åŒ–åˆ›ä¸–åŒºå—")
	}

	// 1. æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›ä¸–åŒºå—
	needed, err := m.NeedsGenesisBlock(ctx)
	if err != nil {
		return false, fmt.Errorf("æ£€æŸ¥åˆ›ä¸–éœ€æ±‚å¤±è´¥: %w", err)
	}

	if !needed {
		if m.logger != nil {
			m.logger.Infof("é“¾å·²åˆå§‹åŒ–ï¼Œè·³è¿‡åˆ›ä¸–åŒºå—åˆ›å»º")
		}
		return false, nil
	}

	// 2. åˆ›å»ºåˆ›ä¸–åŒºå—
	genesisBlock, err := m.CreateGenesisBlock(ctx, genesisConfig)
	if err != nil {
		return false, fmt.Errorf("åˆ›å»ºåˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// 3. å¤„ç†åˆ›ä¸–åŒºå—
	if err := m.ProcessGenesisBlock(ctx, genesisBlock); err != nil {
		return false, fmt.Errorf("å¤„ç†åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("ğŸ‰ åˆ›ä¸–åŒºå—åˆå§‹åŒ–å®Œæˆ")
	}

	return true, nil
}
