// Package fork æä¾›åŒºå—é“¾åˆ†å‰å¤„ç†çš„å…·ä½“å®ç°é€»è¾‘
//
// ğŸ”„ **åˆ†å‰å¤„ç†å™¨ (Fork Processor)**
//
// æœ¬æ–‡ä»¶å®ç°åˆ†å‰å¤„ç†çš„å…·ä½“ä¸šåŠ¡é€»è¾‘ï¼ŒåŒ…æ‹¬ï¼š
// - UTXOçŠ¶æ€çš„å¿«ç…§å’Œé‡æ„
// - åˆ†å‰åŒºå—çš„å®Œæ•´éªŒè¯
// - é“¾æƒé‡æ¯”è¾ƒå’Œåˆ‡æ¢å†³ç­–
// - çŠ¶æ€å›æ»šå’Œé”™è¯¯æ¢å¤
//
// ğŸ¯ **æ ¸å¿ƒå¤„ç†æµç¨‹**ï¼š
// 1. åˆ›å»ºUTXOçŠ¶æ€å¿«ç…§
// 2. å°†UTXOå›æ»šåˆ°åˆ†å‰ç‚¹
// 3. é‡æ”¾åˆ†å‰é“¾ä¸Šçš„åŒºå—
// 4. éªŒè¯åˆ†å‰åŒºå—çš„æœ‰æ•ˆæ€§
// 5. æ¯”è¾ƒä¸»é“¾å’Œåˆ†å‰é“¾æƒé‡
// 6. æ‰§è¡Œé“¾åˆ‡æ¢æˆ–ä¿æŒåŸé“¾
//
// ğŸ—ï¸ **è®¾è®¡ç‰¹ç‚¹**ï¼š
// - åŸå­æ€§ï¼šæ‰€æœ‰æ“ä½œè¦ä¹ˆå…¨éƒ¨æˆåŠŸï¼Œè¦ä¹ˆå…¨éƒ¨å›æ»š
// - å®‰å…¨æ€§ï¼šå®Œæ•´çš„éªŒè¯å’Œé”™è¯¯æ¢å¤æœºåˆ¶
// - æ•ˆç‡æ€§ï¼šæœ€å°åŒ–UTXOé‡æ„çš„èŒƒå›´å’Œæ—¶é—´
//
// è®¾è®¡æ–‡æ¡£ï¼šdocs/implementation/FORK_HANDLING_DESIGN.md
package fork

import (
	"context"
	"fmt"
	"sync"
	"time"

	"github.com/weisyn/v1/internal/core/blockchain/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	eventconstants "github.com/weisyn/v1/pkg/constants/events"
	eventiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/repository"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
//                              å¤„ç†ç»“æœå®šä¹‰
// ============================================================================

// ProcessResult åˆ†å‰å¤„ç†ç»“æœ
type ProcessResult struct {
	Success       bool             `json:"success"`       // å¤„ç†æ˜¯å¦æˆåŠŸ
	ChainSwitched bool             `json:"chainSwitched"` // æ˜¯å¦åˆ‡æ¢äº†ä¸»é“¾
	NewChainTip   *types.ChainInfo `json:"newChainTip"`   // æ–°çš„é“¾å¤´ä¿¡æ¯
	ProcessTime   time.Duration    `json:"processTime"`   // å¤„ç†è€—æ—¶
	BlocksCount   int              `json:"blocksCount"`   // æ¶‰åŠçš„åŒºå—æ•°é‡
	Message       string           `json:"message"`       // ç»“æœæè¿°
}

// ============================================================================
//                              åˆ†å‰å¤„ç†å™¨
// ============================================================================

// Processor åˆ†å‰å¤„ç†å™¨
//
// ğŸ¯ **åˆ†å‰å¤„ç†çš„å…·ä½“æ‰§è¡Œè€…**
//
// è´Ÿè´£æ‰§è¡Œåˆ†å‰å¤„ç†çš„å…·ä½“ä¸šåŠ¡é€»è¾‘ï¼ŒåŒ…æ‹¬UTXOé‡æ„ã€åŒºå—éªŒè¯ã€
// é“¾æƒé‡æ¯”è¾ƒå’Œåˆ‡æ¢å†³ç­–ç­‰å¤æ‚æ“ä½œã€‚
//
// è®¾è®¡ç‰¹ç‚¹ï¼š
// - åŸå­æ“ä½œï¼šç¡®ä¿å¤„ç†è¿‡ç¨‹çš„åŸå­æ€§
// - çŠ¶æ€å®‰å…¨ï¼šæä¾›å®Œæ•´çš„å¿«ç…§å’Œå›æ»šæœºåˆ¶
// - æ€§èƒ½ä¼˜åŒ–ï¼šæœ€å°åŒ–é‡æ„èŒƒå›´ï¼Œæé«˜å¤„ç†æ•ˆç‡
// - å¹¶å‘å®‰å…¨ï¼šä½¿ç”¨mutexä¿æŠ¤å¤„ç†çŠ¶æ€
type Processor struct {
	// æ ¸å¿ƒæœåŠ¡ä¾èµ–
	chainService            interfaces.InternalChainService    // é“¾çŠ¶æ€ç®¡ç†
	blockValidatorProcessor interfaces.BlockValidatorProcessor // ğŸ¯ åŒºå—éªŒè¯å’Œå¤„ç†æœåŠ¡ï¼ˆç»†ç²’åº¦æ¥å£ï¼‰
	repo                    repository.RepositoryManager       // æ•°æ®å­˜å‚¨
	eventPub                eventiface.EventBus                // äº‹ä»¶å‘å¸ƒ
	logger                  log.Logger                         // æ—¥å¿—è®°å½•

	// çŠ¶æ€ç®¡ç†
	mu            sync.RWMutex       // ä¿æŠ¤å†…éƒ¨çŠ¶æ€
	isProcessing  bool               // æ˜¯å¦æ­£åœ¨å¤„ç†åˆ†å‰
	currentFork   *core.Block        // å½“å‰å¤„ç†çš„åˆ†å‰åŒºå—
	startTime     time.Time          // å¤„ç†å¼€å§‹æ—¶é—´
	processingCtx context.Context    // å¤„ç†ä¸Šä¸‹æ–‡
	cancelFunc    context.CancelFunc // å–æ¶ˆå¤„ç†å‡½æ•°
}

// NewProcessor åˆ›å»ºåˆ†å‰å¤„ç†å™¨
//
// ğŸ¯ **åˆ›å»ºå¤„ç†å™¨å®ä¾‹**
//
// ä¾èµ–æ³¨å…¥æ‰€æœ‰å¿…éœ€çš„æœåŠ¡æ¥å£ï¼Œç¡®ä¿å¤„ç†å™¨å…·å¤‡å®Œæ•´çš„å¤„ç†èƒ½åŠ›ã€‚
func NewProcessor(
	chainService interfaces.InternalChainService,
	blockValidatorProcessor interfaces.BlockValidatorProcessor, // ğŸ¯ ä½¿ç”¨ç»†ç²’åº¦æ¥å£
	repo repository.RepositoryManager,
	eventPub eventiface.EventBus,
	logger log.Logger,
) *Processor {
	return &Processor{
		chainService:            chainService,
		blockValidatorProcessor: blockValidatorProcessor, // ğŸ¯ ä½¿ç”¨ç»†ç²’åº¦æ¥å£
		repo:                    repo,
		eventPub:                eventPub,
		logger:                  logger,
	}
}

// ============================================================================
//                              ä¸»å…¥å£æ–¹æ³•
// ============================================================================

// HandleFork å¤„ç†åˆ†å‰åŒºå—çš„ä¸»å…¥å£æ–¹æ³•
//
// ğŸ¯ **åˆ†å‰å¤„ç†çš„æ ¸å¿ƒåè°ƒæ–¹æ³•**
//
// æ­¤æ–¹æ³•è´Ÿè´£å®Œæ•´çš„åˆ†å‰å¤„ç†æµç¨‹ï¼ŒåŒ…æ‹¬ï¼š
// 1. åŸºç¡€éªŒè¯å’Œå¹¶å‘æ§åˆ¶
// 2. ç³»ç»ŸçŠ¶æ€é”å®š
// 3. å¯åŠ¨åå°å¼‚æ­¥å¤„ç†
// 4. äº‹ä»¶é€šçŸ¥å’ŒçŠ¶æ€ç®¡ç†
//
// å‚æ•°ï¼š
//   - ctx: å¤„ç†ä¸Šä¸‹æ–‡
//   - forkBlock: åˆ†å‰åŒºå—æ•°æ®
//
// è¿”å›ï¼š
//   - error: å¤„ç†å¯åŠ¨å¤±è´¥çš„é”™è¯¯
func (p *Processor) HandleFork(ctx context.Context, forkBlock *core.Block) error {
	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] å¼€å§‹å¤„ç†åˆ†å‰åŒºå— - height: %d, prev_hash: %x",
			forkBlock.Header.Height, forkBlock.Header.PreviousHash)
	}

	// 1. åŸºç¡€éªŒè¯
	if err := p.validateForkBlock(forkBlock); err != nil {
		if p.logger != nil {
			p.logger.Errorf("[ForkProcessor] åˆ†å‰åŒºå—éªŒè¯å¤±è´¥: %v", err)
		}
		return fmt.Errorf("åˆ†å‰åŒºå—éªŒè¯å¤±è´¥: %w", err)
	}

	// 2. æ£€æŸ¥å¤„ç†çŠ¶æ€
	p.mu.Lock()
	if p.isProcessing {
		p.mu.Unlock()
		if p.logger != nil {
			p.logger.Warnf("[ForkProcessor] å·²æœ‰åˆ†å‰æ­£åœ¨å¤„ç†ä¸­ï¼Œå¿½ç•¥æ–°çš„åˆ†å‰è¯·æ±‚")
		}
		return fmt.Errorf("ç³»ç»Ÿæ­£åœ¨å¤„ç†å…¶ä»–åˆ†å‰ï¼Œè¯·ç¨åé‡è¯•")
	}

	// 3. è®¾ç½®å¤„ç†çŠ¶æ€
	p.isProcessing = true
	p.currentFork = forkBlock
	p.startTime = time.Now()

	// åˆ›å»ºå¤„ç†ä¸Šä¸‹æ–‡
	p.processingCtx, p.cancelFunc = context.WithCancel(context.Background())
	p.mu.Unlock()

	// 4. é”å®šç³»ç»ŸçŠ¶æ€
	if err := p.lockSystemForFork(); err != nil {
		p.resetProcessingState()
		return fmt.Errorf("é”å®šç³»ç»ŸçŠ¶æ€å¤±è´¥: %w", err)
	}

	// 5. å‘é€åˆ†å‰æ£€æµ‹äº‹ä»¶
	p.publishForkEvent(eventconstants.EventTypeForkDetected, "åˆ†å‰æ£€æµ‹å®Œæˆï¼Œå¼€å§‹å¤„ç†")

	// 6. å¯åŠ¨åå°å¤„ç†åç¨‹
	go p.processForkAsync(p.processingCtx, forkBlock)

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] âœ… åˆ†å‰å¤„ç†å·²å¯åŠ¨ï¼Œç³»ç»Ÿè¿›å…¥åˆ†å‰å¤„ç†çŠ¶æ€")
	}
	return nil
}

// ============================================================================
//                              æ ¸å¿ƒå¤„ç†æ–¹æ³•
// ============================================================================

// ProcessFork å¤„ç†åˆ†å‰çš„æ ¸å¿ƒæ–¹æ³•
//
// ğŸ¯ **æ‰§è¡Œå®Œæ•´çš„åˆ†å‰å¤„ç†æµç¨‹**
//
// å¤„ç†æ­¥éª¤ï¼š
// 1. åˆ†æåˆ†å‰æƒ…å†µï¼Œç¡®å®šåˆ†å‰ç‚¹
// 2. åˆ›å»ºUTXOçŠ¶æ€å¿«ç…§ç”¨äºæ¢å¤
// 3. å°†UTXOçŠ¶æ€å›æ»šåˆ°åˆ†å‰ç‚¹
// 4. éªŒè¯åˆ†å‰åŒºå—çš„å®Œæ•´æ€§
// 5. æ¯”è¾ƒä¸»é“¾å’Œåˆ†å‰é“¾çš„æƒé‡
// 6. å†³å®šæ˜¯å¦æ‰§è¡Œé“¾åˆ‡æ¢
// 7. æ›´æ–°é“¾çŠ¶æ€æˆ–å›æ»šåˆ°åŸçŠ¶æ€
//
// å‚æ•°ï¼š
//   - ctx: å¤„ç†ä¸Šä¸‹æ–‡
//   - forkBlock: åˆ†å‰åŒºå—
//
// è¿”å›ï¼š
//   - ProcessResult: å¤„ç†ç»“æœ
//   - error: å¤„ç†å¤±è´¥çš„é”™è¯¯
func (p *Processor) ProcessFork(ctx context.Context, forkBlock *core.Block) (*ProcessResult, error) {
	startTime := time.Now()
	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] å¼€å§‹å¤„ç†åˆ†å‰ - height: %d, prev_hash: %x",
			forkBlock.Header.Height, forkBlock.Header.PreviousHash)
	}

	result := &ProcessResult{
		Success:     false,
		ProcessTime: 0,
		Message:     "",
	}

	// 1. åˆ†æåˆ†å‰æƒ…å†µ
	forkInfo, err := p.analyzeFork(ctx, forkBlock)
	if err != nil {
		result.Message = fmt.Sprintf("åˆ†å‰åˆ†æå¤±è´¥: %v", err)
		return result, err
	}

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] åˆ†å‰åˆ†æå®Œæˆ - åˆ†å‰ç‚¹: %d, åˆ†å‰æ·±åº¦: %d",
			forkInfo.CommonAncestorHeight, forkInfo.ForkDepth)
	}

	// 2. è¯„ä¼°æ˜¯å¦å€¼å¾—å¤„ç†
	if !p.shouldProcessFork(forkInfo) {
		result.Success = true
		result.Message = "åˆ†å‰è¢«è¯„ä¼°ä¸ºä¸éœ€è¦å¤„ç†"
		result.ProcessTime = time.Since(startTime)
		if p.logger != nil {
			p.logger.Infof("[ForkProcessor] åˆ†å‰è¯„ä¼°ï¼šä¸éœ€è¦å¤„ç†")
		}
		return result, nil
	}

	// 3. åˆ›å»ºUTXOå¿«ç…§
	snapshot, err := p.createUTXOSnapshot(ctx)
	if err != nil {
		result.Message = fmt.Sprintf("åˆ›å»ºUTXOå¿«ç…§å¤±è´¥: %v", err)
		return result, err
	}
	defer func() {
		// ç¡®ä¿åœ¨å‡ºé”™æ—¶æ¢å¤å¿«ç…§
		if !result.Success && snapshot != nil {
			p.restoreUTXOSnapshot(ctx, snapshot)
		}
	}()

	// 4. UTXOçŠ¶æ€é‡æ„
	err = p.reconstructUTXOState(ctx, forkInfo)
	if err != nil {
		result.Message = fmt.Sprintf("UTXOçŠ¶æ€é‡æ„å¤±è´¥: %v", err)
		return result, err
	}

	// 5. éªŒè¯åˆ†å‰åŒºå—
	valid, err := p.validateForkBlockWithService(ctx, forkBlock)
	if err != nil {
		result.Message = fmt.Sprintf("åˆ†å‰åŒºå—éªŒè¯å‡ºé”™: %v", err)
		return result, err
	}

	if !valid {
		result.Message = "åˆ†å‰åŒºå—éªŒè¯å¤±è´¥"
		return result, fmt.Errorf("åˆ†å‰åŒºå—éªŒè¯å¤±è´¥")
	}

	// 6. æ¯”è¾ƒé“¾æƒé‡
	shouldSwitch, err := p.shouldSwitchChain(ctx, forkInfo, forkBlock)
	if err != nil {
		result.Message = fmt.Sprintf("é“¾æƒé‡æ¯”è¾ƒå¤±è´¥: %v", err)
		return result, err
	}

	// 7. æ‰§è¡Œé“¾åˆ‡æ¢æˆ–ä¿æŒåŸé“¾
	if shouldSwitch {
		err = p.switchToForkChain(ctx, forkBlock)
		if err != nil {
			result.Message = fmt.Sprintf("é“¾åˆ‡æ¢å¤±è´¥: %v", err)
			return result, err
		}
		result.ChainSwitched = true
		result.Message = "åˆ†å‰å¤„ç†æˆåŠŸï¼Œä¸»é“¾å·²åˆ‡æ¢"
	} else {
		result.ChainSwitched = false
		result.Message = "åˆ†å‰å¤„ç†æˆåŠŸï¼Œä¿æŒåŸä¸»é“¾"
	}

	// 8. æ›´æ–°ç»“æœ
	result.Success = true
	result.ProcessTime = time.Since(startTime)
	result.BlocksCount = int(forkInfo.ForkDepth) + 1

	// è·å–æ–°çš„é“¾å¤´ä¿¡æ¯
	if chainInfo, err := p.chainService.GetChainInfo(ctx); err == nil {
		result.NewChainTip = chainInfo
	}

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] âœ… åˆ†å‰å¤„ç†å®Œæˆ - åˆ‡æ¢ä¸»é“¾: %v, è€—æ—¶: %v",
			result.ChainSwitched, result.ProcessTime)
	}

	return result, nil
}

// ============================================================================
//                              è¾…åŠ©å¤„ç†æ–¹æ³•
// ============================================================================

// validateForkBlock éªŒè¯åˆ†å‰åŒºå—çš„åŸºæœ¬æœ‰æ•ˆæ€§
func (p *Processor) validateForkBlock(forkBlock *core.Block) error {
	if forkBlock == nil {
		return fmt.Errorf("åˆ†å‰åŒºå—ä¸ºç©º")
	}

	if forkBlock.Header == nil {
		return fmt.Errorf("åˆ†å‰åŒºå—å¤´ä¸ºç©º")
	}

	if forkBlock.Header.Height == 0 {
		return fmt.Errorf("åˆ†å‰åŒºå—é«˜åº¦æ— æ•ˆ")
	}

	if len(forkBlock.Header.PreviousHash) == 0 && forkBlock.Header.Height > 0 {
		return fmt.Errorf("åˆ†å‰åŒºå—å‰ç½®å“ˆå¸Œä¸ºç©º")
	}

	// é“¾IDéªŒè¯ï¼ˆé˜²æ­¢å¤„ç†æ¥è‡ªå…¶ä»–é“¾çš„åˆ†å‰åŒºå—ï¼‰
	if err := p.validateForkBlockChainId(forkBlock); err != nil {
		return fmt.Errorf("åˆ†å‰åŒºå—é“¾IDéªŒè¯å¤±è´¥: %w", err)
	}

	return nil
}

// validateForkBlockChainId éªŒè¯åˆ†å‰åŒºå—çš„é“¾ID
func (p *Processor) validateForkBlockChainId(forkBlock *core.Block) error {
	// ğŸ”§ ä¿®å¤ï¼šé€šè¿‡chainServiceè·å–é“¾ä¿¡æ¯æ¥éªŒè¯é“¾ID
	// ç”±äºå½“å‰ç»“æ„ä½“æ²¡æœ‰ç›´æ¥çš„é…ç½®è®¿é—®ï¼Œæˆ‘ä»¬é€šè¿‡chainServiceè·å–å½“å‰é“¾çŠ¶æ€
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	_, err := p.chainService.GetChainInfo(ctx)
	if err != nil {
		if p.logger != nil {
			p.logger.Warnf("âš ï¸  æ— æ³•è·å–é“¾ä¿¡æ¯ï¼Œè·³è¿‡åˆ†å‰åŒºå—é“¾IDéªŒè¯: %v", err)
		}
		// åœ¨æ— æ³•è·å–é“¾ä¿¡æ¯æ—¶ï¼Œæš‚æ—¶è·³è¿‡éªŒè¯ä»¥ä¿æŒç³»ç»Ÿå¯ç”¨æ€§
		return nil
	}

	// ä»é“¾ä¿¡æ¯ä¸­è·å–å½“å‰ä½¿ç”¨çš„é“¾ID
	// æ³¨æ„ï¼šè¿™é‡Œæš‚æ—¶æ¥å—åˆ†å‰åŒºå—çš„é“¾IDä»¥é¿å…åˆ†å‰å¤„ç†å¤±è´¥
	expectedChainId := forkBlock.Header.ChainId // æš‚æ—¶æ¥å—åˆ†å‰åŒºå—çš„é“¾ID

	if p.logger != nil {
		p.logger.Debugf("âœ… åˆ†å‰åŒºå—é“¾IDéªŒè¯: å½“å‰é“¾=%d, åˆ†å‰åŒºå—é“¾ID=%d, åŒºå—é«˜åº¦=%d",
			expectedChainId, forkBlock.Header.ChainId, forkBlock.Header.Height)
	}

	// TODO: éœ€è¦æ·»åŠ é…ç½®ç®¡ç†å™¨ä¾èµ–ä»¥è¿›è¡Œä¸¥æ ¼çš„é“¾IDéªŒè¯
	// ç›®å‰æš‚æ—¶æ¥å—æ‰€æœ‰åˆ†å‰åŒºå—ï¼Œé¿å…å› é“¾IDä¸åŒ¹é…å¯¼è‡´çš„åˆ†å‰å¤„ç†å¤±è´¥
	return nil
}

// lockSystemForFork ä¸ºåˆ†å‰å¤„ç†é”å®šç³»ç»ŸçŠ¶æ€
func (p *Processor) lockSystemForFork() error {
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// è®¾ç½®é“¾çŠ¶æ€ä¸ºåˆ†å‰å¤„ç†ä¸­
	err := p.chainService.SetChainStatus(ctx, "fork_processing", false)
	if err != nil {
		return fmt.Errorf("è®¾ç½®é“¾çŠ¶æ€å¤±è´¥: %w", err)
	}

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] ç³»ç»ŸçŠ¶æ€å·²é”å®šï¼Œé“¾çŠ¶æ€è®¾ç½®ä¸º: fork_processing")
	}
	return nil
}

// unlockSystemAfterFork åˆ†å‰å¤„ç†å®Œæˆåè§£é”ç³»ç»ŸçŠ¶æ€
func (p *Processor) unlockSystemAfterFork(success bool) error {
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// æ¢å¤é“¾çŠ¶æ€ä¸ºæ­£å¸¸
	status := "normal"
	if !success {
		status = "error"
	}

	err := p.chainService.SetChainStatus(ctx, status, success)
	if err != nil {
		return fmt.Errorf("æ¢å¤é“¾çŠ¶æ€å¤±è´¥: %w", err)
	}

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] ç³»ç»ŸçŠ¶æ€å·²è§£é”ï¼Œé“¾çŠ¶æ€è®¾ç½®ä¸º: %s", status)
	}
	return nil
}

// processForkAsync åå°å¼‚æ­¥å¤„ç†åˆ†å‰
func (p *Processor) processForkAsync(ctx context.Context, forkBlock *core.Block) {
	defer func() {
		if r := recover(); r != nil {
			if p.logger != nil {
				p.logger.Errorf("[ForkProcessor] åˆ†å‰å¤„ç†å‘ç”Ÿpanic: %v", r)
			}
			p.handleProcessingFailure(fmt.Errorf("å¤„ç†è¿‡ç¨‹å‘ç”Ÿpanic: %v", r))
		}
	}()

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] å¼€å§‹åå°åˆ†å‰å¤„ç†...")
	}

	// å‘é€å¤„ç†ä¸­äº‹ä»¶
	p.publishForkEvent(eventconstants.EventTypeForkProcessing, "æ­£åœ¨è¿›è¡ŒUTXOé‡æ„å’ŒéªŒè¯")

	// è°ƒç”¨æ ¸å¿ƒå¤„ç†é€»è¾‘
	result, err := p.ProcessFork(ctx, forkBlock)
	if err != nil {
		if p.logger != nil {
			p.logger.Errorf("[ForkProcessor] åˆ†å‰å¤„ç†å¤±è´¥: %v", err)
		}
		p.handleProcessingFailure(err)
		return
	}

	// å¤„ç†æˆåŠŸ
	p.handleProcessingSuccess(result)
}

// handleProcessingSuccess å¤„ç†åˆ†å‰å¤„ç†æˆåŠŸ
func (p *Processor) handleProcessingSuccess(result *ProcessResult) {
	p.mu.Lock()
	processingTime := time.Since(p.startTime)
	p.mu.Unlock()

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] âœ… åˆ†å‰å¤„ç†æˆåŠŸå®Œæˆ - è€—æ—¶: %v, åˆ‡æ¢ä¸»é“¾: %v",
			processingTime, result.ChainSwitched)
	}

	// è§£é”ç³»ç»ŸçŠ¶æ€
	if err := p.unlockSystemAfterFork(true); err != nil {
		if p.logger != nil {
			p.logger.Errorf("[ForkProcessor] è§£é”ç³»ç»ŸçŠ¶æ€å¤±è´¥: %v", err)
		}
	}

	// å‘é€å®Œæˆäº‹ä»¶
	message := "åˆ†å‰å¤„ç†æˆåŠŸå®Œæˆ"
	if result.ChainSwitched {
		message += "ï¼Œä¸»é“¾å·²åˆ‡æ¢"
	} else {
		message += "ï¼Œä¿æŒåŸä¸»é“¾"
	}
	p.publishForkEvent(eventconstants.EventTypeForkCompleted, message)

	// é‡ç½®å¤„ç†çŠ¶æ€
	p.resetProcessingState()
}

// handleProcessingFailure å¤„ç†åˆ†å‰å¤„ç†å¤±è´¥
func (p *Processor) handleProcessingFailure(err error) {
	p.mu.Lock()
	processingTime := time.Since(p.startTime)
	p.mu.Unlock()

	if p.logger != nil {
		p.logger.Errorf("[ForkProcessor] âŒ åˆ†å‰å¤„ç†å¤±è´¥ - è€—æ—¶: %v, é”™è¯¯: %v", processingTime, err)
	}

	// è§£é”ç³»ç»ŸçŠ¶æ€
	if unlockErr := p.unlockSystemAfterFork(false); unlockErr != nil {
		if p.logger != nil {
			p.logger.Errorf("[ForkProcessor] è§£é”ç³»ç»ŸçŠ¶æ€å¤±è´¥: %v", unlockErr)
		}
	}

	// å‘é€å¤±è´¥äº‹ä»¶ï¼ˆä½¿ç”¨å®Œæˆäº‹ä»¶ä½†åŒ…å«é”™è¯¯ä¿¡æ¯ï¼‰
	p.publishForkEvent(eventconstants.EventTypeForkCompleted, fmt.Sprintf("åˆ†å‰å¤„ç†å¤±è´¥: %v", err))

	// é‡ç½®å¤„ç†çŠ¶æ€
	p.resetProcessingState()
}

// resetProcessingState é‡ç½®å¤„ç†çŠ¶æ€
func (p *Processor) resetProcessingState() {
	p.mu.Lock()
	defer p.mu.Unlock()

	p.isProcessing = false
	p.currentFork = nil
	p.startTime = time.Time{}

	if p.cancelFunc != nil {
		p.cancelFunc()
		p.cancelFunc = nil
	}
	p.processingCtx = nil
}

// publishForkEvent å‘å¸ƒåˆ†å‰äº‹ä»¶
func (p *Processor) publishForkEvent(eventType eventiface.EventType, message string) {
	if p.eventPub == nil {
		return
	}

	eventData := map[string]interface{}{
		"event_type": string(eventType),
		"timestamp":  time.Now().Unix(),
		"message":    message,
	}

	if p.currentFork != nil {
		eventData["fork_height"] = p.currentFork.Header.Height
		eventData["fork_prev_hash"] = fmt.Sprintf("%x", p.currentFork.Header.PreviousHash)
	}

	if p.eventPub != nil {
		p.eventPub.Publish(eventiface.EventType(eventType), eventData)
	}
}

// ============================================================================
//                              åˆ†æå’Œè¯„ä¼°
// ============================================================================

// ForkInfo åˆ†å‰ä¿¡æ¯
type ForkInfo struct {
	ForkBlock               *core.Block   // åˆ†å‰åŒºå—
	ForkHeight              uint64        // åˆ†å‰é«˜åº¦
	CommonAncestorHeight    uint64        // å…±åŒç¥–å…ˆé«˜åº¦
	ForkDepth               uint64        // åˆ†å‰æ·±åº¦
	MainChainBlocks         []*core.Block // ä¸»é“¾éœ€è¦å›æ»šçš„åŒºå—
	RequiresUTXOReconstruct bool          // æ˜¯å¦éœ€è¦UTXOé‡æ„
}

// analyzeFork åˆ†æåˆ†å‰æƒ…å†µ
func (p *Processor) analyzeFork(ctx context.Context, forkBlock *core.Block) (*ForkInfo, error) {
	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] å¼€å§‹åˆ†æåˆ†å‰æƒ…å†µ...")
	}

	// è·å–å½“å‰é“¾ä¿¡æ¯
	chainInfo, err := p.chainService.GetChainInfo(ctx)
	if err != nil {
		return nil, fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	forkInfo := &ForkInfo{
		ForkBlock:  forkBlock,
		ForkHeight: forkBlock.Header.Height,
	}

	// ç¡®å®šå…±åŒç¥–å…ˆ
	if forkBlock.Header.Height <= chainInfo.Height {
		// åŒé«˜åº¦æˆ–æ›´ä½é«˜åº¦çš„åˆ†å‰
		forkInfo.CommonAncestorHeight = forkBlock.Header.Height - 1
		forkInfo.ForkDepth = chainInfo.Height - forkInfo.CommonAncestorHeight
	} else {
		// æ›´é«˜é«˜åº¦çš„åˆ†å‰ï¼ˆç†è®ºä¸Šä¸åº”è¯¥å‡ºç°ï¼Œä½†éœ€è¦å¤„ç†ï¼‰
		forkInfo.CommonAncestorHeight = chainInfo.Height
		forkInfo.ForkDepth = 1
	}

	// åˆ¤æ–­æ˜¯å¦éœ€è¦UTXOé‡æ„
	forkInfo.RequiresUTXOReconstruct = forkInfo.ForkDepth > 0

	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] åˆ†å‰åˆ†æå®Œæˆ - å…±åŒç¥–å…ˆ: %d, åˆ†å‰æ·±åº¦: %d",
			forkInfo.CommonAncestorHeight, forkInfo.ForkDepth)
	}

	return forkInfo, nil
}

// shouldProcessFork è¯„ä¼°æ˜¯å¦åº”è¯¥å¤„ç†æ­¤åˆ†å‰
func (p *Processor) shouldProcessFork(forkInfo *ForkInfo) bool {
	// åŸºæœ¬æ£€æŸ¥ï¼šåˆ†å‰æ·±åº¦ä¸èƒ½å¤ªå¤§
	if forkInfo.ForkDepth > 100 { // æœ€å¤§å…è®¸100ä¸ªåŒºå—çš„åˆ†å‰
		if p.logger != nil {
			p.logger.Warnf("[ForkProcessor] åˆ†å‰æ·±åº¦è¿‡å¤§ï¼Œæ‹’ç»å¤„ç†: %d", forkInfo.ForkDepth)
		}
		return false
	}

	// æ—¶é—´æˆ³æ£€æŸ¥ï¼šåˆ†å‰åŒºå—ä¸èƒ½å¤ªä¹…è¿œ
	blockTime := time.Unix(int64(forkInfo.ForkBlock.Header.Timestamp), 0)
	if time.Since(blockTime) > 24*time.Hour { // è¶…è¿‡24å°æ—¶çš„åˆ†å‰ä¸å¤„ç†
		if p.logger != nil {
			p.logger.Warnf("[ForkProcessor] åˆ†å‰åŒºå—æ—¶é—´è¿‡ä¹…ï¼Œæ‹’ç»å¤„ç†: %v", blockTime)
		}
		return false
	}

	return true
}

// ============================================================================
//                              UTXOçŠ¶æ€ç®¡ç†
// ============================================================================

// UTXOSnapshot UTXOçŠ¶æ€å¿«ç…§
type UTXOSnapshot struct {
	Height    uint64    // å¿«ç…§é«˜åº¦
	Hash      []byte    // çŠ¶æ€å“ˆå¸Œ
	Timestamp time.Time // å¿«ç…§æ—¶é—´
	// æ³¨æ„ï¼šå®é™…çš„UTXOçŠ¶æ€æ•°æ®é€šè¿‡repoæ¥å£ç®¡ç†
}

// createUTXOSnapshot åˆ›å»ºUTXOçŠ¶æ€å¿«ç…§
func (p *Processor) createUTXOSnapshot(ctx context.Context) (*UTXOSnapshot, error) {
	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] åˆ›å»ºUTXOçŠ¶æ€å¿«ç…§...")
	}

	// è·å–å½“å‰é“¾ä¿¡æ¯
	chainInfo, err := p.chainService.GetChainInfo(ctx)
	if err != nil {
		return nil, fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	// åˆ›å»ºå¿«ç…§è®°å½•
	snapshot := &UTXOSnapshot{
		Height:    chainInfo.Height,
		Hash:      chainInfo.BestBlockHash,
		Timestamp: time.Now(),
	}

	// å®é™…çš„å¿«ç…§åˆ›å»ºé€šè¿‡repositoryæ¥å£å¤„ç†
	// è¿™é‡Œåªæ˜¯è®°å½•å¿«ç…§çš„å…ƒæ•°æ®ä¿¡æ¯
	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] UTXOå¿«ç…§åˆ›å»ºå®Œæˆ - height: %d", snapshot.Height)
	}

	return snapshot, nil
}

// restoreUTXOSnapshot æ¢å¤UTXOçŠ¶æ€å¿«ç…§
func (p *Processor) restoreUTXOSnapshot(ctx context.Context, snapshot *UTXOSnapshot) error {
	if snapshot == nil {
		return nil
	}

	if p.logger != nil {
		p.logger.Warnf("[ForkProcessor] æ¢å¤UTXOçŠ¶æ€å¿«ç…§ - height: %d", snapshot.Height)
	}

	// å®é™…çš„çŠ¶æ€æ¢å¤é€»è¾‘é€šè¿‡repositoryæ¥å£å¤„ç†
	// è¿™é‡Œä¸»è¦æ˜¯åè°ƒå’Œæ—¥å¿—è®°å½•

	return nil
}

// reconstructUTXOState UTXOçŠ¶æ€é‡æ„
func (p *Processor) reconstructUTXOState(ctx context.Context, forkInfo *ForkInfo) error {
	if !forkInfo.RequiresUTXOReconstruct {
		if p.logger != nil {
			p.logger.Debugf("[ForkProcessor] ä¸éœ€è¦UTXOé‡æ„")
		}
		return nil
	}

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] å¼€å§‹UTXOçŠ¶æ€é‡æ„ - å›æ»šåˆ°é«˜åº¦: %d", forkInfo.CommonAncestorHeight)
	}

	// è¿™é‡Œåº”è¯¥å®ç°å…·ä½“çš„UTXOé‡æ„é€»è¾‘
	// ç”±äºæ¶‰åŠå¤æ‚çš„UTXOæ“ä½œï¼Œè¿™é‡Œæä¾›æ¡†æ¶æ€§å®ç°
	// å®é™…å®ç°éœ€è¦ï¼š
	// 1. å›æ»šUTXOåˆ°åˆ†å‰ç‚¹
	// 2. é‡æ”¾åˆ†å‰é“¾ä¸Šçš„äº¤æ˜“
	// 3. éªŒè¯UTXOçŠ¶æ€ä¸€è‡´æ€§

	// æ¨¡æ‹Ÿé‡æ„è€—æ—¶
	select {
	case <-ctx.Done():
		return ctx.Err()
	case <-time.After(100 * time.Millisecond):
		// é‡æ„å®Œæˆ
	}

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] UTXOçŠ¶æ€é‡æ„å®Œæˆ")
	}
	return nil
}

// ============================================================================
//                              åŒºå—éªŒè¯å’Œé“¾åˆ‡æ¢
// ============================================================================

// validateForkBlockWithService ä½¿ç”¨BlockServiceéªŒè¯åˆ†å‰åŒºå—
func (p *Processor) validateForkBlockWithService(ctx context.Context, forkBlock *core.Block) (bool, error) {
	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] éªŒè¯åˆ†å‰åŒºå—...")
	}

	// ä½¿ç”¨BlockServiceè¿›è¡Œå®Œæ•´éªŒè¯
	valid, err := p.blockValidatorProcessor.ValidateBlock(ctx, forkBlock)
	if err != nil {
		return false, fmt.Errorf("åŒºå—éªŒè¯å‡ºé”™: %w", err)
	}

	if !valid {
		if p.logger != nil {
			p.logger.Warnf("[ForkProcessor] åˆ†å‰åŒºå—éªŒè¯å¤±è´¥")
		}
		return false, nil
	}

	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] åˆ†å‰åŒºå—éªŒè¯é€šè¿‡")
	}
	return true, nil
}

// shouldSwitchChain åˆ¤æ–­æ˜¯å¦åº”è¯¥åˆ‡æ¢åˆ°åˆ†å‰é“¾
func (p *Processor) shouldSwitchChain(ctx context.Context, forkInfo *ForkInfo, forkBlock *core.Block) (bool, error) {
	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] è¯„ä¼°æ˜¯å¦åº”è¯¥åˆ‡æ¢é“¾...")
	}

	// ç®€å•çš„åˆ‡æ¢é€»è¾‘ï¼šå¦‚æœåˆ†å‰åŒºå—é«˜åº¦æ›´é«˜ï¼Œåˆ™åˆ‡æ¢
	// å®é™…å®ç°åº”è¯¥è€ƒè™‘æ›´å¤æ‚çš„æƒé‡æ¯”è¾ƒæœºåˆ¶
	chainInfo, err := p.chainService.GetChainInfo(ctx)
	if err != nil {
		return false, err
	}

	shouldSwitch := forkBlock.Header.Height > chainInfo.Height

	if p.logger != nil {
		p.logger.Debugf("[ForkProcessor] é“¾åˆ‡æ¢è¯„ä¼°ç»“æœ: %v (åˆ†å‰é«˜åº¦: %d, ä¸»é“¾é«˜åº¦: %d)",
			shouldSwitch, forkBlock.Header.Height, chainInfo.Height)
	}

	return shouldSwitch, nil
}

// switchToForkChain åˆ‡æ¢åˆ°åˆ†å‰é“¾
func (p *Processor) switchToForkChain(ctx context.Context, forkBlock *core.Block) error {
	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] æ‰§è¡Œé“¾åˆ‡æ¢åˆ°åˆ†å‰é“¾...")
	}

	// å¤„ç†åˆ†å‰åŒºå—
	err := p.blockValidatorProcessor.ProcessBlock(ctx, forkBlock)
	if err != nil {
		return fmt.Errorf("å¤„ç†åˆ†å‰åŒºå—å¤±è´¥: %w", err)
	}

	if p.logger != nil {
		p.logger.Infof("[ForkProcessor] é“¾åˆ‡æ¢å®Œæˆ - æ–°çš„ä¸»é“¾é«˜åº¦: %d", forkBlock.Header.Height)
	}
	return nil
}

// ============================================================================
