// Package fork å®ç°åˆ†å‰å¤„ç†éªŒè¯å™¨
//
// ğŸ” **REORG éªŒè¯å™¨ (Reorg Validator)**
//
// æœ¬æ–‡ä»¶å®ç°äº† REORG åçš„å®Œæ•´æ€§éªŒè¯åŠŸèƒ½ï¼Œç¡®ä¿é“¾çŠ¶æ€çš„æ­£ç¡®æ€§ï¼š
// - Level 1: StateRoot éªŒè¯ï¼ˆå¼ºéªŒè¯ï¼‰
// - Level 2: ç´¢å¼•å®Œæ•´æ€§éªŒè¯ï¼ˆå¼±éªŒè¯ï¼‰
// - Level 3: è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯
//
// ğŸ—ï¸ **è®¾è®¡ç‰¹ç‚¹**ï¼š
// - ä¸‰å±‚éªŒè¯ç¡®ä¿ä¸åŒç»´åº¦çš„çŠ¶æ€ä¸€è‡´æ€§
// - æ”¯æŒå¿«é€Ÿå¤±è´¥å’Œè¯¦ç»†é”™è¯¯æŠ¥å‘Š
// - éªŒè¯å¤±è´¥æ—¶æä¾›æ˜ç¡®çš„é”™è¯¯ä¸Šä¸‹æ–‡
package fork

import (
	"bytes"
	"context"
	"encoding/binary"
	"encoding/json"
	"fmt"

	txpb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
	eutxoiface "github.com/weisyn/v1/pkg/interfaces/eutxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"google.golang.org/protobuf/proto"
)

// ReorgValidator REORG éªŒè¯å™¨
//
// ğŸ¯ **èŒè´£**ï¼š
// - éªŒè¯ REORG åé“¾çŠ¶æ€çš„å®Œæ•´æ€§å’Œä¸€è‡´æ€§
// - æä¾›ä¸‰å±‚éªŒè¯æœºåˆ¶ç¡®ä¿çŠ¶æ€æ­£ç¡®
// - å¿«é€Ÿå¤±è´¥å¹¶æä¾›è¯¦ç»†é”™è¯¯ä¿¡æ¯
//
// ğŸ”§ **éªŒè¯å±‚æ¬¡**ï¼š
// 1. StateRoot éªŒè¯ï¼šç¡®ä¿ UTXO çŠ¶æ€ä¸åŒºå—å¤´ä¸€è‡´
// 2. ç´¢å¼•å®Œæ•´æ€§éªŒè¯ï¼šç¡®ä¿åŒºå—ç´¢å¼•è¿ç»­ä¸”å®Œæ•´
// 3. è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯ï¼šç¡®ä¿ UTXO å¼•ç”¨çš„åŒºå—å­˜åœ¨
type ReorgValidator struct {
	store        storage.BadgerStore
	queryService persistence.QueryService
	txHashClient txpb.TransactionHashServiceClient
	logger       log.Logger
}

// NewReorgValidator åˆ›å»º REORG éªŒè¯å™¨
//
// ğŸ—ï¸ **æ„é€ å‡½æ•°**
//
// å‚æ•°ï¼š
//   - store: Badger å­˜å‚¨æœåŠ¡ï¼ˆå¿…éœ€ï¼‰
//   - queryService: æŸ¥è¯¢æœåŠ¡ï¼ˆå¿…éœ€ï¼‰
//   - logger: æ—¥å¿—æœåŠ¡ï¼ˆå¯é€‰ï¼‰
//
// è¿”å›ï¼š
//   - *ReorgValidator: éªŒè¯å™¨å®ä¾‹
//   - error: åˆ›å»ºé”™è¯¯
func NewReorgValidator(
	store storage.BadgerStore,
	queryService persistence.QueryService,
	txHashClient txpb.TransactionHashServiceClient,
	logger log.Logger,
) (*ReorgValidator, error) {
	if store == nil {
		return nil, fmt.Errorf("store ä¸èƒ½ä¸ºç©º")
	}
	if queryService == nil {
		return nil, fmt.Errorf("queryService ä¸èƒ½ä¸ºç©º")
	}
	if txHashClient == nil {
		return nil, fmt.Errorf("txHashClient ä¸èƒ½ä¸ºç©º")
	}

	return &ReorgValidator{
		store:        store,
		queryService: queryService,
		txHashClient: txHashClient,
		logger:       logger,
	}, nil
}

// VerifyReorgResult éªŒè¯ REORG ç»“æœ
//
// ğŸ¯ **ä¸‰å±‚éªŒè¯**ï¼š
// 1. StateRoot éªŒè¯ï¼ˆå¼ºéªŒè¯ï¼‰ï¼šå¯¹æ¯”å®é™… StateRoot ä¸åŒºå—å¤´ StateRoot
// 2. ç´¢å¼•å®Œæ•´æ€§éªŒè¯ï¼ˆå¼±éªŒè¯ï¼‰ï¼šæ£€æŸ¥ 0..height çš„åŒºå—ç´¢å¼•è¿ç»­æ€§
// 3. è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯ï¼šéªŒè¯ UTXO å¼•ç”¨çš„åŒºå—å­˜åœ¨
//
// âš ï¸ **æ³¨æ„**ï¼š
// - ä»»ä½•ä¸€å±‚éªŒè¯å¤±è´¥éƒ½ä¼šç«‹å³è¿”å›é”™è¯¯
// - éªŒè¯å¤±è´¥æ„å‘³ç€ REORG å­˜åœ¨ä¸¥é‡é—®é¢˜ï¼Œåº”è¿›å…¥åªè¯»æ¨¡å¼
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - expectedHeight: é¢„æœŸçš„é“¾é«˜åº¦
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥çš„é”™è¯¯ï¼ˆnil è¡¨ç¤ºéªŒè¯é€šè¿‡ï¼‰
func (v *ReorgValidator) VerifyReorgResult(ctx context.Context, expectedHeight uint64) error {
	if v.logger != nil {
		v.logger.Infof("ğŸ” å¼€å§‹éªŒè¯ REORG ç»“æœ: expected_height=%d", expectedHeight)
	}

	// Level 1: StateRoot éªŒè¯ï¼ˆå¼ºéªŒè¯ï¼‰
	if err := v.verifyStateRoot(ctx, expectedHeight); err != nil {
		if v.logger != nil {
			v.logger.Errorf("âŒ StateRoot éªŒè¯å¤±è´¥: %v", err)
		}
		return fmt.Errorf("state-level validation failed: %w", err)
	}
	if v.logger != nil {
		v.logger.Info("âœ… Level 1: StateRoot éªŒè¯é€šè¿‡")
	}

	// Level 2: ç´¢å¼•å®Œæ•´æ€§éªŒè¯ï¼ˆå¼±éªŒè¯ï¼‰
	if err := v.verifyIndexIntegrity(ctx, expectedHeight); err != nil {
		if v.logger != nil {
			v.logger.Errorf("âŒ ç´¢å¼•å®Œæ•´æ€§éªŒè¯å¤±è´¥: %v", err)
		}
		return fmt.Errorf("index-level validation failed: %w", err)
	}
	if v.logger != nil {
		v.logger.Info("âœ… Level 2: ç´¢å¼•å®Œæ•´æ€§éªŒè¯é€šè¿‡")
	}

	// Level 3: è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯ï¼ˆä¸€è‡´æ€§éªŒè¯ï¼‰
	if err := v.verifyCrossModuleConsistency(ctx, expectedHeight); err != nil {
		if v.logger != nil {
			v.logger.Errorf("âŒ è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯å¤±è´¥: %v", err)
		}
		return fmt.Errorf("cross-module validation failed: %w", err)
	}
	if v.logger != nil {
		v.logger.Info("âœ… Level 3: è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯é€šè¿‡")
	}

	if v.logger != nil {
		v.logger.Infof("âœ… REORG éªŒè¯æˆåŠŸ: height=%d", expectedHeight)
	}

	return nil
}

// verifyStateRoot éªŒè¯ StateRoot
//
// ğŸ¯ **Level 1: StateRoot éªŒè¯ï¼ˆå¼ºéªŒè¯ï¼‰**
//
// éªŒè¯é€»è¾‘ï¼š
// 1. è·å–æŒ‡å®šé«˜åº¦çš„åŒºå—
// 2. è®¡ç®—å½“å‰ UTXO çŠ¶æ€çš„ StateRoot
// 3. å¯¹æ¯”å®é™… StateRoot ä¸åŒºå—å¤´ä¸­çš„ StateRoot
//
// âš ï¸ **æ³¨æ„**ï¼š
// - StateRoot ä¸åŒ¹é…æ„å‘³ç€ UTXO çŠ¶æ€ä¸åŒºå—é“¾ä¸ä¸€è‡´
// - è¿™æ˜¯æœ€ä¸¥é‡çš„éªŒè¯å¤±è´¥ï¼Œå¿…é¡»ç«‹å³å¤„ç†
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - height: é“¾é«˜åº¦
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥çš„é”™è¯¯
func (v *ReorgValidator) verifyStateRoot(ctx context.Context, height uint64) error {
	// 1. è·å–åŒºå—
	block, err := v.queryService.GetBlockByHeight(ctx, height)
	if err != nil {
		return fmt.Errorf("è·å–åŒºå—å¤±è´¥ height=%d: %w", height, err)
	}
	if block == nil || block.Header == nil {
		return fmt.Errorf("åŒºå—æˆ–åŒºå—å¤´ä¸ºç©º height=%d", height)
	}

	expectedRoot := block.Header.StateRoot
	if len(expectedRoot) == 0 {
		// Genesis åŒºå—æˆ–æ—©æœŸåŒºå—å¯èƒ½æ²¡æœ‰ StateRootï¼Œè·³è¿‡éªŒè¯
		if v.logger != nil {
			v.logger.Debugf("åŒºå— height=%d æ²¡æœ‰ StateRootï¼Œè·³è¿‡éªŒè¯", height)
		}
		return nil
	}

	// 2. ä»é“¾çŠ¶æ€ä¸­è¯»å–è®°å½•çš„ StateRootï¼ˆä¸åŒºå—å¤´å†™å…¥ä¿æŒåŒä¸€è¯­ä¹‰ï¼‰
	//
	// æŒ‰å½“å‰å®ç°ï¼ŒPersistence åœ¨å†™å…¥åŒºå—æ—¶ä¼šå°† Header.StateRoot
	// å†™å…¥é”® `state:chain:root`ï¼š
	//
	//   - internal/core/persistence/writer/chain.go:72-81
	//
	// åœ¨ REORG æ ¡éªŒé˜¶æ®µï¼Œæˆ‘ä»¬ä¸é‡æ–°æ‰«æ UTXO è®¡ç®— StateRootï¼Œ
	// è€Œæ˜¯æ ¡éªŒã€ŒåŒºå—å¤´ä¸­çš„ StateRoot ä¸é“¾çŠ¶æ€é‡Œè®°å½•çš„ StateRoot ä¸€è‡´ã€ï¼Œ
	// é¿å…å› ä¸ºï¼š
	//   1) UTXO çŠ¶æ€å·²ç»å‰è¿›åˆ°æ›´é«˜é«˜åº¦
	//   2) ä»¥åŠâ€œæœ¬å—å‰/æœ¬å—åâ€çš„è¯­ä¹‰å·®å¼‚
	// è€Œäº§ç”Ÿè¯¯æŠ¥ã€‚
	stateRootKey := []byte("state:chain:root")
	actualRoot, err := v.store.Get(ctx, stateRootKey)
	if err != nil {
		return fmt.Errorf("è¯»å–é“¾çŠ¶æ€ StateRoot å¤±è´¥: %w", err)
	}
	if len(actualRoot) == 0 {
		return fmt.Errorf("é“¾çŠ¶æ€ StateRoot ä¸ºç©º")
	}

	// 3. å¯¹æ¯” StateRoot
	if !bytes.Equal(actualRoot, expectedRoot) {
		return fmt.Errorf("StateRoot mismatch at height=%d: actual=%x, expected=%x",
			height, actualRoot, expectedRoot)
	}

	return nil
}

// verifyIndexIntegrity éªŒè¯ç´¢å¼•å®Œæ•´æ€§
//
// ğŸ¯ **Level 2: ç´¢å¼•å®Œæ•´æ€§éªŒè¯ï¼ˆå¼±éªŒè¯ï¼‰**
//
// éªŒè¯é€»è¾‘ï¼š
// 1. æ£€æŸ¥ 0..maxHeight çš„åŒºå—ç´¢å¼•è¿ç»­æ€§
// 2. éªŒè¯æ¯ä¸ªé«˜åº¦çš„ indices:height:* é”®å­˜åœ¨
//
// âš ï¸ **æ³¨æ„**ï¼š
// - ç´¢å¼•ä¸è¿ç»­æ„å‘³ç€å›æ»šä¸å®Œæ•´æˆ–é‡æ”¾æœ‰é—æ¼
// - è¿™ä¼šå¯¼è‡´æŸ¥è¯¢è¡Œä¸ºä¸ç¡®å®š
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - maxHeight: æœ€å¤§é«˜åº¦
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥çš„é”™è¯¯
func (v *ReorgValidator) verifyIndexIntegrity(ctx context.Context, maxHeight uint64) error {
	// 1) æ£€æŸ¥ 0..maxHeight çš„åŒºå—ç´¢å¼•è¿ç»­æ€§ï¼Œå¹¶æ ¡éªŒ height->hash ä¸ hash->height æ˜ å°„ä¸€è‡´
	for h := uint64(0); h <= maxHeight; h++ {
		heightKey := []byte(fmt.Sprintf("indices:height:%d", h))
		heightVal, err := v.store.Get(ctx, heightKey)
		if err != nil {
			return fmt.Errorf("è¯»å–é«˜åº¦ç´¢å¼•å¤±è´¥ height=%d: %w", h, err)
		}
		if len(heightVal) < 32 {
			return fmt.Errorf("é«˜åº¦ç´¢å¼•æ•°æ®æ— æ•ˆ height=%d len=%d", h, len(heightVal))
		}
		blockHash := heightVal[:32]

		hashKey := []byte(fmt.Sprintf("indices:hash:%x", blockHash))
		hashVal, err := v.store.Get(ctx, hashKey)
		if err != nil {
			return fmt.Errorf("è¯»å–å“ˆå¸Œç´¢å¼•å¤±è´¥ height=%d: %w", h, err)
		}
		if len(hashVal) != 8 {
			return fmt.Errorf("å“ˆå¸Œç´¢å¼•æ•°æ®é•¿åº¦æ— æ•ˆ height=%d len=%d", h, len(hashVal))
		}
		hashHeight := binary.BigEndian.Uint64(hashVal)
		if hashHeight != h {
			return fmt.Errorf("å“ˆå¸Œç´¢å¼•æ˜ å°„ä¸ä¸€è‡´ height=%d hashHeight=%d", h, hashHeight)
		}
	}

	// 2) æ ¡éªŒ state:chain:tip ä¸ indices:height:tip ä¸€è‡´ï¼ˆheight+hashï¼‰
	tipVal, err := v.store.Get(ctx, []byte("state:chain:tip"))
	if err != nil {
		return fmt.Errorf("è¯»å–é“¾å°–å¤±è´¥: %w", err)
	}
	if len(tipVal) != 40 {
		return fmt.Errorf("é“¾å°–æ ¼å¼æ— æ•ˆ len=%d", len(tipVal))
	}
	tipHeight := binary.BigEndian.Uint64(tipVal[:8])
	if tipHeight != maxHeight {
		return fmt.Errorf("é“¾å°–é«˜åº¦ä¸ä¸€è‡´ expected=%d actual=%d", maxHeight, tipHeight)
	}
	ih, err := v.store.Get(ctx, []byte(fmt.Sprintf("indices:height:%d", maxHeight)))
	if err != nil {
		return fmt.Errorf("è¯»å–é“¾å°–é«˜åº¦ç´¢å¼•å¤±è´¥: %w", err)
	}
	if len(ih) < 32 {
		return fmt.Errorf("é“¾å°–é«˜åº¦ç´¢å¼•æ•°æ®æ— æ•ˆ len=%d", len(ih))
	}
	if !bytes.Equal(tipVal[8:], ih[:32]) {
		return fmt.Errorf("é“¾å°– hash ä¸é«˜åº¦ç´¢å¼•ä¸ä¸€è‡´: height=%d", maxHeight)
	}

	return nil
}

// verifyCrossModuleConsistency éªŒè¯è·¨æ¨¡å—ä¸€è‡´æ€§
//
// ğŸ¯ **Level 3: è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯**
//
// éªŒè¯é€»è¾‘ï¼š
// 1. éªŒè¯é“¾å°–é«˜åº¦ä¸é¢„æœŸä¸€è‡´
// 2. éªŒè¯ StateRoot å­˜åœ¨
// 3. éªŒè¯é“¾å°–åŒºå—å­˜åœ¨
//
// âš ï¸ **æ³¨æ„**ï¼š
// - è¿™æ˜¯ä¸€ä¸ªç®€åŒ–çš„ä¸€è‡´æ€§æ£€æŸ¥
// - æ›´è¯¦ç»†çš„ UTXO éªŒè¯éœ€è¦ UTXO ç®¡ç†å™¨æ¥å£æ”¯æŒ
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - maxHeight: æœ€å¤§é«˜åº¦
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥çš„é”™è¯¯
func (v *ReorgValidator) verifyCrossModuleConsistency(ctx context.Context, maxHeight uint64) error {
	// 1. éªŒè¯é“¾ä¿¡æ¯
	chainInfo, err := v.queryService.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	// éªŒè¯é“¾é«˜åº¦
	if chainInfo.Height != maxHeight {
		return fmt.Errorf("chain height mismatch: expected=%d, actual=%d", maxHeight, chainInfo.Height)
	}

	// 2. éªŒè¯ StateRoot å­˜åœ¨
	stateRoot, err := v.queryService.GetCurrentStateRoot(ctx)
	if err != nil {
		return fmt.Errorf("è·å–å½“å‰ StateRoot å¤±è´¥: %w", err)
	}
	if len(stateRoot) == 0 {
		if v.logger != nil {
			v.logger.Debugf("StateRoot ä¸ºç©º (å¯èƒ½æ˜¯ Genesis æˆ–æ—©æœŸåŒºå—)")
		}
	}

	// 3. éªŒè¯é“¾å°–åŒºå—å­˜åœ¨
	tipBlock, err := v.queryService.GetBlockByHeight(ctx, maxHeight)
	if err != nil {
		return fmt.Errorf("è·å–é“¾å°–åŒºå—å¤±è´¥ height=%d: %w", maxHeight, err)
	}
	if tipBlock == nil || tipBlock.Header == nil {
		return fmt.Errorf("chain tip block missing or invalid at height=%d", maxHeight)
	}

	// 4. tx ç´¢å¼•å¯è¾¾æ€§ï¼ˆå…¨é‡ï¼‰ï¼š0..maxHeight çš„æ‰€æœ‰ tx éƒ½å¿…é¡»å­˜åœ¨ indices:tx
	if err := v.verifyTxIndexReachability(ctx, maxHeight); err != nil {
		return err
	}

	// 5. UTXO-Block ä¸€è‡´æ€§ï¼šUTXO çš„ BlockHeight å¿…é¡»åœ¨é“¾ä¸Šå­˜åœ¨ä¸” <= tip
	if err := v.verifyUTXOBlockConsistency(ctx, maxHeight); err != nil {
		return err
	}

	// 6. Resource-UTXO åŒå‘ä¸€è‡´æ€§ï¼šèµ„æºè®°å½•/ç´¢å¼• <-> UTXO é›†åˆäº’ç›¸å¯è¾¾
	if err := v.verifyResourceUTXOConsistency(ctx, maxHeight); err != nil {
		return err
	}

	if v.logger != nil {
		v.logger.Debugf("è·¨æ¨¡å—ä¸€è‡´æ€§éªŒè¯: é“¾å°–é«˜åº¦=%d", chainInfo.Height)
	}

	return nil
}

// verifyTxIndexReachability å¯¹ 0..maxHeight çš„æ‰€æœ‰äº¤æ˜“åš indices:tx å¯è¾¾æ€§éªŒè¯ï¼ˆå…¨é‡ï¼‰ã€‚
func (v *ReorgValidator) verifyTxIndexReachability(ctx context.Context, maxHeight uint64) error {
	for h := uint64(0); h <= maxHeight; h++ {
		blk, err := v.queryService.GetBlockByHeight(ctx, h)
		if err != nil {
			return fmt.Errorf("è·å–åŒºå—å¤±è´¥ height=%d: %w", h, err)
		}
		if blk == nil || blk.Header == nil {
			return fmt.Errorf("åŒºå—ä¸ºç©º height=%d", h)
		}
		if blk.Body == nil || len(blk.Body.Transactions) == 0 {
			continue
		}
		for i, txProto := range blk.Body.Transactions {
			txResp, err := v.txHashClient.ComputeHash(ctx, &txpb.ComputeHashRequest{Transaction: txProto})
			if err != nil {
				return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ height=%d idx=%d: %w", h, i, err)
			}
			if txResp == nil || !txResp.IsValid || len(txResp.Hash) != 32 {
				return fmt.Errorf("äº¤æ˜“å“ˆå¸Œæ— æ•ˆ height=%d idx=%d", h, i)
			}
			key := []byte(fmt.Sprintf("indices:tx:%x", txResp.Hash))
			ok, err := v.store.Exists(ctx, key)
			if err != nil {
				return fmt.Errorf("æ£€æŸ¥äº¤æ˜“ç´¢å¼•å¤±è´¥ height=%d idx=%d: %w", h, i, err)
			}
			if !ok {
				return fmt.Errorf("ç¼ºå¤±äº¤æ˜“ç´¢å¼•: height=%d idx=%d", h, i)
			}
		}
	}
	return nil
}

// verifyUTXOBlockConsistency æ ¡éªŒæ‰€æœ‰ UTXO çš„ BlockHeight åˆæ³•ä¸”å¯è¾¾ã€‚
func (v *ReorgValidator) verifyUTXOBlockConsistency(ctx context.Context, maxHeight uint64) error {
	utxoMap, err := v.store.PrefixScan(ctx, []byte("utxo:set:"))
	if err != nil {
		return fmt.Errorf("æ‰«æUTXOå¤±è´¥: %w", err)
	}
	for keyStr, data := range utxoMap {
		_ = keyStr
		u := &utxopb.UTXO{}
		if err := proto.Unmarshal(data, u); err != nil {
			return fmt.Errorf("ååºåˆ—åŒ–UTXOå¤±è´¥: %w", err)
		}
		if u.Outpoint == nil || len(u.Outpoint.TxId) != 32 {
			return fmt.Errorf("UTXO outpoint æ— æ•ˆ")
		}
		// height=0 ä»…å…è®¸åœ¨ tip=0 çš„ genesis åœºæ™¯
		if maxHeight > 0 && u.BlockHeight == 0 {
			return fmt.Errorf("UTXO BlockHeight=0 éæ³•ï¼ˆtip=%dï¼‰ outpoint=%x:%d", maxHeight, u.Outpoint.TxId, u.Outpoint.OutputIndex)
		}
		if u.BlockHeight > maxHeight {
			return fmt.Errorf("UTXO BlockHeight è¶…è¿‡ tip: utxoHeight=%d tip=%d", u.BlockHeight, maxHeight)
		}
		if u.BlockHeight > 0 {
			ok, err := v.store.Exists(ctx, []byte(fmt.Sprintf("indices:height:%d", u.BlockHeight)))
			if err != nil || !ok {
				return fmt.Errorf("UTXO å¼•ç”¨ä¸å­˜åœ¨çš„åŒºå—é«˜åº¦: utxoHeight=%d", u.BlockHeight)
			}
		}
	}
	return nil
}

// verifyResourceUTXOConsistency æ ¡éªŒèµ„æºç´¢å¼•/è®°å½•ä¸ UTXO é›†åˆçš„åŒå‘ä¸€è‡´æ€§ã€‚
func (v *ReorgValidator) verifyResourceUTXOConsistency(ctx context.Context, maxHeight uint64) error {
	// A) èµ„æºè®°å½• -> UTXO å¿…å­˜åœ¨ + ç´¢å¼•/è®¡æ•°å¯è¾¾
	resMap, err := v.store.PrefixScan(ctx, []byte("resource:utxo-instance:"))
	if err != nil {
		return fmt.Errorf("æ‰«æèµ„æºè®°å½•å¤±è´¥: %w", err)
	}
	for _, val := range resMap {
		rec := &eutxoiface.ResourceUTXORecord{}
		if err := json.Unmarshal(val, rec); err != nil {
			return fmt.Errorf("ååºåˆ—åŒ–èµ„æºè®°å½•å¤±è´¥: %w", err)
		}
		rec.EnsureBackwardCompatibility()

		instanceID := rec.InstanceID
		codeID := rec.CodeID
		if len(instanceID.TxId) != 32 {
			return fmt.Errorf("èµ„æºè®°å½• InstanceID æ— æ•ˆ")
		}
		utxoKey := []byte(fmt.Sprintf("utxo:set:%x:%d", instanceID.TxId, instanceID.OutputIndex))
		utxoData, err := v.store.Get(ctx, utxoKey)
		if err != nil || len(utxoData) == 0 {
			return fmt.Errorf("èµ„æºè®°å½•å¯¹åº”çš„UTXOä¸å­˜åœ¨: instance=%s", instanceID.Encode())
		}
		u := &utxopb.UTXO{}
		if err := proto.Unmarshal(utxoData, u); err != nil {
			return fmt.Errorf("ååºåˆ—åŒ–èµ„æºUTXOå¤±è´¥: %w", err)
		}
		if u.Category != utxopb.UTXOCategory_UTXO_CATEGORY_RESOURCE {
			return fmt.Errorf("èµ„æºè®°å½•å¯¹åº”UTXOç±»åˆ«ä¸åŒ¹é…: expected=RESOURCE actual=%v", u.Category)
		}
		if u.BlockHeight > maxHeight {
			return fmt.Errorf("èµ„æºUTXO BlockHeight è¶…è¿‡ tip: utxoHeight=%d tip=%d", u.BlockHeight, maxHeight)
		}

		// ç´¢å¼•ï¼šindices:resource-instance:{instanceID}
		instKey := []byte(fmt.Sprintf("indices:resource-instance:%s", instanceID.Encode()))
		instVal, err := v.store.Get(ctx, instKey)
		if err != nil || len(instVal) != 72 {
			return fmt.Errorf("ç¼ºå¤±/æŸåèµ„æºå®ä¾‹ç´¢å¼•: instance=%s", instanceID.Encode())
		}
		instHeight := binary.BigEndian.Uint64(instVal[32:40])
		if instHeight > maxHeight {
			return fmt.Errorf("èµ„æºå®ä¾‹ç´¢å¼•é«˜åº¦è¶…è¿‡ tip: instHeight=%d tip=%d", instHeight, maxHeight)
		}

		// ç´¢å¼•ï¼šindices:resource-code:{codeID} å¿…é¡»åŒ…å« instanceID
		codeKey := []byte(fmt.Sprintf("indices:resource-code:%x", codeID.Bytes()))
		codeVal, err := v.store.Get(ctx, codeKey)
		if err != nil || len(codeVal) == 0 {
			return fmt.Errorf("ç¼ºå¤±èµ„æºä»£ç ç´¢å¼•: code=%x", codeID.Bytes())
		}
		var instanceList []string
		if err := json.Unmarshal(codeVal, &instanceList); err != nil {
			return fmt.Errorf("è§£æèµ„æºä»£ç ç´¢å¼•å¤±è´¥: %w", err)
		}
		found := false
		for _, id := range instanceList {
			if id == instanceID.Encode() {
				found = true
				break
			}
		}
		if !found {
			return fmt.Errorf("èµ„æºä»£ç ç´¢å¼•ä¸åŒ…å«å®ä¾‹: code=%x instance=%s", codeID.Bytes(), instanceID.Encode())
		}

		// owner ç´¢å¼•ï¼šindex:resource:owner-instance:{owner}:{instanceID} -> instanceID
		if len(rec.Owner) > 0 {
			ownerKey := []byte(fmt.Sprintf("index:resource:owner-instance:%x:%s", rec.Owner, instanceID.Encode()))
			ownerVal, err := v.store.Get(ctx, ownerKey)
			if err != nil || len(ownerVal) == 0 {
				return fmt.Errorf("ç¼ºå¤±èµ„æº owner ç´¢å¼•: owner=%x instance=%s", rec.Owner, instanceID.Encode())
			}
			if string(ownerVal) != instanceID.Encode() {
				return fmt.Errorf("èµ„æº owner ç´¢å¼•å€¼ä¸ä¸€è‡´: owner=%x instance=%s", rec.Owner, instanceID.Encode())
			}
		}

		// countersï¼šresource:counters-instance:{instanceID}
		countersKey := []byte(fmt.Sprintf("resource:counters-instance:%s", instanceID.Encode()))
		if ok, _ := v.store.Exists(ctx, countersKey); !ok {
			return fmt.Errorf("ç¼ºå¤±èµ„æº counters: instance=%s", instanceID.Encode())
		}
	}

	// B) åå‘ï¼šæ‰€æœ‰ RESOURCE ç±» UTXO å¿…é¡»å­˜åœ¨èµ„æºè®°å½• resource:utxo-instance:{instanceID}
	utxoMap, err := v.store.PrefixScan(ctx, []byte("utxo:set:"))
	if err != nil {
		return fmt.Errorf("æ‰«æUTXOå¤±è´¥: %w", err)
	}
	for _, data := range utxoMap {
		u := &utxopb.UTXO{}
		if err := proto.Unmarshal(data, u); err != nil {
			return fmt.Errorf("ååºåˆ—åŒ–UTXOå¤±è´¥: %w", err)
		}
		if u.Category != utxopb.UTXOCategory_UTXO_CATEGORY_RESOURCE || u.Outpoint == nil || len(u.Outpoint.TxId) != 32 {
			continue
		}
		instanceID := eutxoiface.NewResourceInstanceID(u.Outpoint.TxId, u.Outpoint.OutputIndex)
		recKey := []byte(fmt.Sprintf("resource:utxo-instance:%s", instanceID.Encode()))
		if ok, _ := v.store.Exists(ctx, recKey); !ok {
			return fmt.Errorf("èµ„æºUTXOç¼ºå¤±èµ„æºè®°å½•: instance=%s", instanceID.Encode())
		}
	}
	return nil
}

// VerifyStateRoot å¿«æ·æ–¹æ³•ï¼šåªéªŒè¯ StateRoot
//
// ç”¨äºå¿«é€ŸéªŒè¯ UTXO çŠ¶æ€æ˜¯å¦æ­£ç¡®
func (v *ReorgValidator) VerifyStateRoot(ctx context.Context, height uint64) error {
	return v.verifyStateRoot(ctx, height)
}

// VerifyIndexIntegrity å¿«æ·æ–¹æ³•ï¼šåªéªŒè¯ç´¢å¼•å®Œæ•´æ€§
//
// ç”¨äºå¿«é€ŸéªŒè¯åŒºå—ç´¢å¼•æ˜¯å¦è¿ç»­
func (v *ReorgValidator) VerifyIndexIntegrity(ctx context.Context, maxHeight uint64) error {
	return v.verifyIndexIntegrity(ctx, maxHeight)
}

// VerifyCrossModuleConsistency å¿«æ·æ–¹æ³•ï¼šåªéªŒè¯è·¨æ¨¡å—ä¸€è‡´æ€§
//
// ç”¨äºå¿«é€ŸéªŒè¯ UTXO ä¸åŒºå—çš„ä¸€è‡´æ€§
func (v *ReorgValidator) VerifyCrossModuleConsistency(ctx context.Context, maxHeight uint64) error {
	return v.verifyCrossModuleConsistency(ctx, maxHeight)
}

