// Package fork é“¾æƒé‡è®¡ç®—å®ç°
package fork

import (
	"bytes"
	"context"
	"fmt"
	"math/big"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/protobuf/proto"
)

// ============================================================================
//                              é“¾æƒé‡è®¡ç®—å®ç°
// ============================================================================

// calculateChainWeight è®¡ç®—é“¾æƒé‡
//
// ğŸ¯ **é“¾æƒé‡è®¡ç®—æ ¸å¿ƒé€»è¾‘**
//
// æƒé‡è®¡ç®—æ–¹æ³•ï¼š
// 1. ç´¯ç§¯éš¾åº¦ï¼šæ‰€æœ‰åŒºå—éš¾åº¦ä¹‹å’Œ
// 2. åŒºå—æ•°é‡ï¼šé“¾çš„é•¿åº¦
// 3. æœ€ååŒºå—æ—¶é—´ï¼šç”¨äºå¹³å±€æ—¶çš„å†³ç­–
//
// å‚æ•°ï¼š
//   - fromHeight: èµ·å§‹é«˜åº¦ï¼ˆåŒ…å«ï¼‰
//   - toHeight: ç»“æŸé«˜åº¦ï¼ˆåŒ…å«ï¼‰
//
// è¿”å›ï¼š
//   - *types.ChainWeight: é“¾æƒé‡
//   - error: è®¡ç®—é”™è¯¯
func (s *Service) calculateChainWeight(ctx context.Context, fromHeight, toHeight uint64) (*types.ChainWeight, error) {
	return s.calculateChainWeightWithProvider(ctx, fromHeight, toHeight, nil)
}

func (s *Service) calculateChainWeightWithProvider(
	ctx context.Context,
	fromHeight, toHeight uint64,
	provider func(height uint64) (*core.Block, bool),
) (*types.ChainWeight, error) {
	if fromHeight > toHeight {
		return nil, fmt.Errorf("èµ·å§‹é«˜åº¦ %d å¤§äºç»“æŸé«˜åº¦ %d", fromHeight, toHeight)
	}

	if s.logger != nil {
		s.logger.Debugf("è®¡ç®—é“¾æƒé‡: é«˜åº¦èŒƒå›´ %d -> %d", fromHeight, toHeight)
	}

	// åˆå§‹åŒ–æƒé‡
	weight := &types.ChainWeight{
		CumulativeDifficulty: big.NewInt(0),
		BlockCount:           0,
		LastBlockTime:        0,
	}

	// éå†æŒ‡å®šé«˜åº¦èŒƒå›´å†…çš„æ‰€æœ‰åŒºå—
	for height := fromHeight; height <= toHeight; height++ {
		// è·å–åŒºå—
		var blk *core.Block
		var ok bool
		if provider != nil {
			blk, ok = provider(height)
		}
		if !ok {
			var err error
			blk, err = s.queryService.GetBlockByHeight(ctx, height)
			if err != nil {
				return nil, fmt.Errorf("è·å–é«˜åº¦ %d çš„åŒºå—å¤±è´¥: %w", height, err)
			}
		}

		if blk == nil || blk.Header == nil {
			return nil, fmt.Errorf("é«˜åº¦ %d çš„åŒºå—æ— æ•ˆ", height)
		}

		// ç´¯åŠ éš¾åº¦
		// æ³¨æ„ï¼šè¿™é‡Œå‡è®¾åŒºå—å¤´åŒ…å«éš¾åº¦å­—æ®µ
		// å¦‚æœæ²¡æœ‰ï¼Œå¯ä»¥ä½¿ç”¨å›ºå®šéš¾åº¦æˆ–ä»å…¶ä»–åœ°æ–¹è·å–
		blockDifficulty := s.getBlockDifficulty(blk)
		weight.CumulativeDifficulty.Add(weight.CumulativeDifficulty, blockDifficulty)

		// å¢åŠ åŒºå—è®¡æ•°
		weight.BlockCount++

		// æ›´æ–°æœ€ååŒºå—æ—¶é—´
		if blk.Header.Timestamp > 0 {
			weight.LastBlockTime = int64(blk.Header.Timestamp)
		}

		// è®°å½•é“¾å°–å“ˆå¸Œï¼ˆç”¨äºç¡®å®šæ€§ tie-breakï¼‰
		if height == toHeight {
			tipHash, err := s.computeDeterministicBlockHash(ctx, blk)
			if err != nil {
				return nil, fmt.Errorf("è®¡ç®—é“¾å°–åŒºå—å“ˆå¸Œå¤±è´¥(height=%d): %w", height, err)
			}
			weight.TipHash = tipHash
		}
	}

	if s.logger != nil {
		s.logger.Debugf("é“¾æƒé‡è®¡ç®—å®Œæˆ: ç´¯ç§¯éš¾åº¦=%s, åŒºå—æ•°=%d, æœ€åæ—¶é—´=%d",
			weight.CumulativeDifficulty.String(), weight.BlockCount, weight.LastBlockTime)
	}

	return weight, nil
}

// computeDeterministicBlockHash è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆç¡®å®šæ€§ã€ä¸æŒ–çŸ¿/éªŒè¯ä¸€è‡´ï¼‰ã€‚
//
// ä¼˜å…ˆä½¿ç”¨ BlockHashServiceClientï¼ˆä¸ç³»ç»Ÿè·¯å¾„ä¸€è‡´ï¼‰ï¼›
// è‹¥ä¸å¯ç”¨/å¤±è´¥ï¼Œåˆ™å›é€€åˆ°æœ¬åœ°ï¼šDoubleSHA256(proto.Marshal(header))ï¼Œä¿è¯å¯ç”¨æ€§ä¸ç¡®å®šæ€§ã€‚
func (s *Service) computeDeterministicBlockHash(ctx context.Context, blk *core.Block) ([]byte, error) {
	if blk == nil || blk.Header == nil {
		return nil, fmt.Errorf("åŒºå—æˆ–åŒºå—å¤´ä¸ºç©º")
	}

	// 1) ä¼˜å…ˆèµ° blockHashClientï¼ˆæ›´â€œç³»ç»Ÿè·¯å¾„â€ï¼‰
	if s.blockHashClient != nil {
		resp, err := s.blockHashClient.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{
			Block:            blk,
			IncludeDebugInfo: false,
		})
		if err == nil && resp != nil && resp.IsValid && len(resp.Hash) > 0 {
			// é˜²å¾¡æ€§æ‹·è´ï¼šé¿å…åç»­è¢«å¤ç”¨ä¿®æ”¹
			return bytes.Clone(resp.Hash), nil
		}
	}

	// 2) å›é€€ï¼šæœ¬åœ°è®¡ç®—ï¼ˆä¿æŒä¸ internal/core/block/hash/service.go ä¸€è‡´çš„ DoubleSHA256(headerBytes)ï¼‰
	if s.hasher == nil {
		return nil, fmt.Errorf("hasher æœªæ³¨å…¥")
	}
	headerBytes, err := proto.Marshal(blk.Header)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–åŒºå—å¤´å¤±è´¥: %w", err)
	}
	return s.hasher.DoubleSHA256(headerBytes), nil
}

// ============================================================================
//                              éš¾åº¦è·å–
// ============================================================================

// getBlockDifficulty è·å–åŒºå—éš¾åº¦
//
// ğŸ”¢ **éš¾åº¦æå–é€»è¾‘**
//
// éš¾åº¦æ¥æºï¼ˆæŒ‰ä¼˜å…ˆçº§ï¼‰ï¼š
// 1. åŒºå—å¤´çš„éš¾åº¦å­—æ®µ
// 2. ä» POW æ•°æ®è®¡ç®—
// 3. é»˜è®¤éš¾åº¦å€¼ï¼ˆä»é…ç½®ç³»ç»Ÿè·å–ï¼‰
func (s *Service) getBlockDifficulty(block *core.Block) *big.Int {
	// æ–¹æ³•1ï¼šä»åŒºå—å¤´è·å–éš¾åº¦ï¼ˆDifficultyæ˜¯uint64ç±»å‹ï¼‰
	if block.Header != nil && block.Header.Difficulty > 0 {
		difficulty := new(big.Int)
		difficulty.SetUint64(block.Header.Difficulty)
		return difficulty
	}

	// ğŸ”§ ä¿®å¤ï¼šä»é…ç½®ç³»ç»Ÿè·å–é»˜è®¤éš¾åº¦å€¼ï¼Œç§»é™¤ç¡¬ç¼–ç 
	var defaultDifficultyValue uint64 = 1 // é»˜è®¤æœ€å°éš¾åº¦
	if s.configProvider != nil {
		consensusOpts := s.configProvider.GetConsensus()
		if consensusOpts != nil {
			// ä½¿ç”¨å…±è¯†é…ç½®ä¸­çš„æœ€å°éš¾åº¦ä½œä¸ºé»˜è®¤å€¼
			// ConsensusOptions åŒ…å« POW é…ç½®ï¼Œç›´æ¥è®¿é—® MinDifficulty
			if consensusOpts.POW.MinDifficulty > 0 {
				defaultDifficultyValue = consensusOpts.POW.MinDifficulty
			}
		}
	}

	defaultDifficulty := big.NewInt(0).SetUint64(defaultDifficultyValue)

	if s.logger != nil {
		s.logger.Debugf("ä½¿ç”¨é»˜è®¤éš¾åº¦: %s (æ¥è‡ªé…ç½®ç³»ç»Ÿ)", defaultDifficulty.String())
	}

	return defaultDifficulty
}

// ============================================================================
//                              æƒé‡æ¯”è¾ƒ
// ============================================================================

// CompareChainWeight æ¯”è¾ƒä¸¤æ¡é“¾çš„æƒé‡
//
// ğŸ” **æƒé‡æ¯”è¾ƒå·¥å…·å‡½æ•°**
//
// è¿”å›ï¼š
//   - 1: weight1 > weight2
//   - 0: weight1 == weight2
//   - -1: weight1 < weight2
func CompareChainWeight(weight1, weight2 *types.ChainWeight) int {
	// æ£€æŸ¥æƒé‡å‚æ•°æ˜¯å¦ä¸º nil
	if weight1 == nil && weight2 == nil {
		return 0 // éƒ½ä¸º nilï¼Œè§†ä¸ºç›¸ç­‰
	}
	if weight1 == nil {
		return -1 // weight1 ä¸º nilï¼Œweight2 æ›´å¤§
	}
	if weight2 == nil {
		return 1 // weight2 ä¸º nilï¼Œweight1 æ›´å¤§
	}

	// æ£€æŸ¥ç´¯ç§¯éš¾åº¦æ˜¯å¦ä¸º nil
	if weight1.CumulativeDifficulty == nil && weight2.CumulativeDifficulty == nil {
		// ä¸¤è€…éƒ½ä¸º nilï¼Œæ¯”è¾ƒå…¶ä»–å­—æ®µ
	} else if weight1.CumulativeDifficulty == nil {
		return -1 // weight1 çš„ç´¯ç§¯éš¾åº¦ä¸º nilï¼Œweight2 æ›´å¤§
	} else if weight2.CumulativeDifficulty == nil {
		return 1 // weight2 çš„ç´¯ç§¯éš¾åº¦ä¸º nilï¼Œweight1 æ›´å¤§
	} else {
		// 1. æ¯”è¾ƒç´¯ç§¯éš¾åº¦
		cmp := weight1.CumulativeDifficulty.Cmp(weight2.CumulativeDifficulty)
		if cmp != 0 {
			return cmp
		}
	}

	// 2. ç´¯ç§¯éš¾åº¦ç›¸åŒï¼Œæ¯”è¾ƒåŒºå—æ•°é‡
	if weight1.BlockCount > weight2.BlockCount {
		return 1
	}
	if weight1.BlockCount < weight2.BlockCount {
		return -1
	}

	// 3. åŒºå—æ•°é‡ç›¸åŒï¼Œç¡®å®šæ€§ tie-breakï¼štip hash æ›´å°çš„ä¼˜å…ˆï¼ˆæŒ‰å›ºå®šå­—èŠ‚åºæ¯”è¾ƒï¼‰
	// è¯´æ˜ï¼šLastBlockTime ä»…ç”¨äºè§‚æµ‹ï¼Œä¸åº”ä½œä¸º tie-breakï¼ˆå¯è¢«æ“çºµä¸”å¯èƒ½å¯¼è‡´ä¸æ”¶æ•›ï¼‰ã€‚
	if len(weight1.TipHash) > 0 || len(weight2.TipHash) > 0 {
		cmp := bytes.Compare(weight1.TipHash, weight2.TipHash)
		if cmp < 0 {
			return 1
		}
		if cmp > 0 {
			return -1
		}
	} else {
		// å‘åå…¼å®¹ï¼šè‹¥æœªæä¾› tip hashï¼Œé€€åŒ–ä¸ºæ—§è§„åˆ™ï¼ˆæ›´æ—©æ—¶é—´æˆ³ä¼˜å…ˆï¼‰
	if weight1.LastBlockTime < weight2.LastBlockTime {
		return 1
	}
	if weight1.LastBlockTime > weight2.LastBlockTime {
		return -1
		}
	}

	// 4. å®Œå…¨ç›¸åŒ
	return 0
}
