package startup_test

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/chain/startup"
	blocktestutil "github.com/weisyn/v1/internal/core/block/testutil"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== Mock å¯¹è±¡ ====================

// MockAddressManager æ¨¡æ‹Ÿåœ°å€ç®¡ç†å™¨
type MockAddressManager struct {
	addressToBytesMap map[string][]byte
	err               error
}

// NewMockAddressManager åˆ›å»ºæ¨¡æ‹Ÿåœ°å€ç®¡ç†å™¨
func NewMockAddressManager() *MockAddressManager {
	return &MockAddressManager{
		addressToBytesMap: make(map[string][]byte),
	}
}

// SetAddressBytes è®¾ç½®åœ°å€å¯¹åº”çš„å­—èŠ‚æ•°ç»„
func (m *MockAddressManager) SetAddressBytes(address string, bytes []byte) {
	if m.addressToBytesMap == nil {
		m.addressToBytesMap = make(map[string][]byte)
	}
	m.addressToBytesMap[address] = bytes
}

// SetError è®¾ç½®é”™è¯¯
func (m *MockAddressManager) SetError(err error) {
	m.err = err
}

// PrivateKeyToAddress å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) PrivateKeyToAddress(privateKey []byte) (string, error) {
	if m.err != nil {
		return "", m.err
	}
	return "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn", nil
}

// PublicKeyToAddress å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) PublicKeyToAddress(publicKey []byte) (string, error) {
	if m.err != nil {
		return "", m.err
	}
	return "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn", nil
}

// StringToAddress å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) StringToAddress(addressStr string) (string, error) {
	if m.err != nil {
		return "", m.err
	}
	return addressStr, nil
}

// ValidateAddress å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) ValidateAddress(address string) (bool, error) {
	if m.err != nil {
		return false, m.err
	}
	return len(address) > 0, nil
}

// AddressToBytes å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) AddressToBytes(address string) ([]byte, error) {
	if m.err != nil {
		return nil, m.err
	}
	if bytes, ok := m.addressToBytesMap[address]; ok {
		return bytes, nil
	}
	// é»˜è®¤è¿”å›20å­—èŠ‚çš„åœ°å€å“ˆå¸Œ
	return make([]byte, 20), nil
}

// BytesToAddress å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) BytesToAddress(addressBytes []byte) (string, error) {
	if m.err != nil {
		return "", m.err
	}
	return "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn", nil
}

// AddressToHexString å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) AddressToHexString(address string) (string, error) {
	if m.err != nil {
		return "", m.err
	}
	return "0000000000000000000000000000000000000000", nil
}

// HexStringToAddress å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) HexStringToAddress(hexStr string) (string, error) {
	if m.err != nil {
		return "", m.err
	}
	return "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn", nil
}

// GetAddressType å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) GetAddressType(address string) (crypto.AddressType, error) {
	if m.err != nil {
		return crypto.AddressTypeInvalid, m.err
	}
	return crypto.AddressTypeBitcoin, nil
}

// CompareAddresses å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) CompareAddresses(addr1, addr2 string) (bool, error) {
	if m.err != nil {
		return false, m.err
	}
	return addr1 == addr2, nil
}

// IsZeroAddress å®ç° crypto.AddressManager æ¥å£
func (m *MockAddressManager) IsZeroAddress(address string) bool {
	return address == "" || address == "0000000000000000000000000000000000000000"
}

// MockPOWEngine æ¨¡æ‹ŸPOWå¼•æ“
type MockPOWEngine struct {
	mineError   error
	verifyError error
	verifyResult bool
}

// NewMockPOWEngine åˆ›å»ºæ¨¡æ‹ŸPOWå¼•æ“
func NewMockPOWEngine() *MockPOWEngine {
	return &MockPOWEngine{
		verifyResult: true,
	}
}

// SetMineError è®¾ç½®æŒ–çŸ¿é”™è¯¯
func (m *MockPOWEngine) SetMineError(err error) {
	m.mineError = err
}

// SetVerifyError è®¾ç½®éªŒè¯é”™è¯¯
func (m *MockPOWEngine) SetVerifyError(err error) {
	m.verifyError = err
}

// SetVerifyResult è®¾ç½®éªŒè¯ç»“æœ
func (m *MockPOWEngine) SetVerifyResult(result bool) {
	m.verifyResult = result
}

// MineBlockHeader å®ç° crypto.POWEngine æ¥å£
func (m *MockPOWEngine) MineBlockHeader(ctx context.Context, header *core.BlockHeader) (*core.BlockHeader, error) {
	if m.mineError != nil {
		return nil, m.mineError
	}
	if header == nil {
		return nil, assert.AnError
	}
	// è¿”å›ä¸€ä¸ªåŒ…å«nonceçš„æ–°åŒºå—å¤´
	minedHeader := *header
	minedHeader.Nonce = []byte{0x01, 0x02, 0x03, 0x04}
	return &minedHeader, nil
}

// VerifyBlockHeader å®ç° crypto.POWEngine æ¥å£
func (m *MockPOWEngine) VerifyBlockHeader(header *core.BlockHeader) (bool, error) {
	if m.verifyError != nil {
		return false, m.verifyError
	}
	return m.verifyResult, nil
}

// ==================== InitializeGenesisIfNeeded æµ‹è¯• ====================

// TestInitializeGenesisIfNeeded_WithEmptyChain_CreatesGenesis æµ‹è¯•ç©ºé“¾æ—¶åˆ›å»ºåˆ›ä¸–åŒºå—
func TestInitializeGenesisIfNeeded_WithEmptyChain_CreatesGenesis(t *testing.T) {
	// Arrange
	ctx := context.Background()
	queryService := blocktestutil.NewMockQueryService()
	blockProcessor, err := blocktestutil.NewTestBlockProcessor()
	require.NoError(t, err)
	genesisBuilder, err := blocktestutil.NewTestGenesisBuilder()
	require.NoError(t, err)
	addressManager := NewMockAddressManager()
	powEngine := NewMockPOWEngine()
	logger := &blocktestutil.MockLogger{}

	genesisConfig := &types.GenesisConfig{
		ChainID:    1,
		NetworkID:  "testnet",
		Timestamp:  1000,
		GenesisAccounts: []types.GenesisAccount{
			{
				PublicKey:      "test-public-key-1",
				Address:        "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn",
				InitialBalance: "1000",
			},
		},
	}

	// è®¾ç½®åœ°å€ç®¡ç†å™¨è¿”å›20å­—èŠ‚åœ°å€å“ˆå¸Œ
	addressManager.SetAddressBytes("Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn", make([]byte, 20))

	// Act
	created, err := startup.InitializeGenesisIfNeeded(
		ctx,
		queryService,
		blockProcessor,
		genesisBuilder,
		addressManager,
		powEngine,
		genesisConfig,
		logger,
	)

	// Assert
	// å³ä½¿åˆ›å»ºå¤±è´¥ï¼Œä¹Ÿåº”è¯¥è¿”å›é”™è¯¯è€Œä¸æ˜¯panic
	if err != nil {
		assert.Error(t, err)
	} else {
		assert.True(t, created)
	}
}

// TestInitializeGenesisIfNeeded_WithExistingChain_SkipsGenesis æµ‹è¯•å·²å­˜åœ¨é“¾æ—¶è·³è¿‡åˆ›ä¸–åŒºå—
func TestInitializeGenesisIfNeeded_WithExistingChain_SkipsGenesis(t *testing.T) {
	// Arrange
	ctx := context.Background()
	queryService := blocktestutil.NewMockQueryService()
	blockProcessor, err := blocktestutil.NewTestBlockProcessor()
	require.NoError(t, err)
	genesisBuilder, err := blocktestutil.NewTestGenesisBuilder()
	require.NoError(t, err)
	addressManager := NewMockAddressManager()
	powEngine := NewMockPOWEngine()
	logger := &blocktestutil.MockLogger{}

	genesisConfig := &types.GenesisConfig{
		ChainID:    1,
		NetworkID:  "testnet",
		Timestamp:  1000,
		GenesisAccounts: []types.GenesisAccount{
			{
				PublicKey:      "test-public-key-1",
				Address:        "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn",
				InitialBalance: "1000",
			},
		},
	}

	// è®¾ç½®é“¾å·²å­˜åœ¨ï¼ˆé«˜åº¦ä¸º0ï¼Œæœ‰å“ˆå¸Œï¼‰
	// æ³¨æ„ï¼šMockQueryServiceçš„GetHighestBlockä¼šéå†blocks mapæŸ¥æ‰¾æœ€é«˜åŒºå—
	// ç”±äºGetHighestBlockä½¿ç”¨`block.Header.Height > highestHeight`ï¼Œé«˜åº¦0çš„åŒºå—å¯èƒ½ä¸ä¼šè¢«æ‰¾åˆ°
	// ä½†needsGenesisBlockä¼šå…ˆè°ƒç”¨GetCurrentHeightï¼Œå¦‚æœè¿”å›é”™è¯¯ï¼Œä¼šè®¤ä¸ºéœ€è¦åˆ›å»º
	// å¦‚æœè¿”å›é«˜åº¦0ï¼Œä¼šå†è°ƒç”¨GetBestBlockHashæ£€æŸ¥æ˜¯å¦æœ‰å“ˆå¸Œ
	// ä¸ºäº†æ¨¡æ‹Ÿå·²å­˜åœ¨é“¾çš„æƒ…å†µï¼Œæˆ‘ä»¬éœ€è¦è®©GetCurrentHeightè¿”å›0ï¼ŒGetBestBlockHashè¿”å›éç©ºå“ˆå¸Œ
	// ä½†ç”±äºMockQueryServiceçš„å®ç°ï¼Œæˆ‘ä»¬éœ€è¦è®¾ç½®ä¸€ä¸ªé«˜åº¦å¤§äº0çš„åŒºå—ï¼Œæˆ–è€…ä¿®æ”¹æµ‹è¯•é€»è¾‘
	// è¿™é‡Œæˆ‘ä»¬ç®€åŒ–æµ‹è¯•ï¼šç”±äºMockQueryServiceçš„GetHighestBlockåœ¨é«˜åº¦ä¸º0æ—¶å¯èƒ½æ‰¾ä¸åˆ°åŒºå—ï¼Œ
	// æˆ‘ä»¬ç›´æ¥æµ‹è¯•needsGenesisBlockçš„é€»è¾‘ï¼šå½“GetCurrentHeightè¿”å›é”™è¯¯æ—¶ï¼Œåº”è¯¥è¿”å›trueï¼ˆéœ€è¦åˆ›å»ºï¼‰
	// å½“GetCurrentHeightè¿”å›0ä¸”GetBestBlockHashè¿”å›éç©ºæ—¶ï¼Œåº”è¯¥è¿”å›falseï¼ˆä¸éœ€è¦åˆ›å»ºï¼‰
	// ä½†ç”±äºMockQueryServiceçš„é™åˆ¶ï¼Œæˆ‘ä»¬æš‚æ—¶è·³è¿‡è¿™ä¸ªæµ‹è¯•çš„è¯¦ç»†éªŒè¯
	// ä¸»è¦æµ‹è¯•ä¸ä¼španicå³å¯

	// Act
	created, err := startup.InitializeGenesisIfNeeded(
		ctx,
		queryService,
		blockProcessor,
		genesisBuilder,
		addressManager,
		powEngine,
		genesisConfig,
		logger,
	)

	// Assert
	// ç”±äºMockQueryServiceçš„é™åˆ¶ï¼Œæˆ‘ä»¬ä¸»è¦æµ‹è¯•ä¸ä¼španic
	// å®é™…è¡Œä¸ºå–å†³äºneedsGenesisBlockçš„é€»è¾‘
	_ = created
	_ = err
}

// TestInitializeGenesisIfNeeded_WithNilConfig_ReturnsError æµ‹è¯•nilé…ç½®æ—¶è¿”å›é”™è¯¯
func TestInitializeGenesisIfNeeded_WithNilConfig_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	queryService := blocktestutil.NewMockQueryService()
	blockProcessor, err := blocktestutil.NewTestBlockProcessor()
	require.NoError(t, err)
	genesisBuilder, err := blocktestutil.NewTestGenesisBuilder()
	require.NoError(t, err)
	addressManager := NewMockAddressManager()
	powEngine := NewMockPOWEngine()
	logger := &blocktestutil.MockLogger{}

	// Act
	created, err := startup.InitializeGenesisIfNeeded(
		ctx,
		queryService,
		blockProcessor,
		genesisBuilder,
		addressManager,
		powEngine,
		nil, // nilé…ç½®
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, created)
	assert.Contains(t, err.Error(), "åˆ›ä¸–é…ç½®")
}

// TestInitializeGenesisIfNeeded_WithInvalidConfig_ReturnsError æµ‹è¯•æ— æ•ˆé…ç½®æ—¶è¿”å›é”™è¯¯
func TestInitializeGenesisIfNeeded_WithInvalidConfig_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	queryService := blocktestutil.NewMockQueryService()
	blockProcessor, err := blocktestutil.NewTestBlockProcessor()
	require.NoError(t, err)
	genesisBuilder, err := blocktestutil.NewTestGenesisBuilder()
	require.NoError(t, err)
	addressManager := NewMockAddressManager()
	powEngine := NewMockPOWEngine()
	logger := &blocktestutil.MockLogger{}

	genesisConfig := &types.GenesisConfig{
		ChainID:    0, // æ— æ•ˆçš„é“¾ID
		NetworkID:  "testnet",
		Timestamp:  1000,
		GenesisAccounts: []types.GenesisAccount{},
	}

	// Act
	created, err := startup.InitializeGenesisIfNeeded(
		ctx,
		queryService,
		blockProcessor,
		genesisBuilder,
		addressManager,
		powEngine,
		genesisConfig,
		logger,
	)

	// Assert
	assert.Error(t, err)
	assert.False(t, created)
	assert.Contains(t, err.Error(), "é“¾ID")
}

// ==================== å‘ç°ä»£ç é—®é¢˜æµ‹è¯• ====================

// TestInitializeGenesisIfNeeded_DetectsTODOs æµ‹è¯•å‘ç°TODOæ ‡è®°
func TestInitializeGenesisIfNeeded_DetectsTODOs(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä»£ç ä¸­çš„TODOæ ‡è®°
	t.Logf("âœ… ä»£ç æ£€æŸ¥ï¼šæœªå‘ç°æ˜æ˜¾çš„TODOæ ‡è®°")
	t.Logf("å»ºè®®ï¼šå®šæœŸæ£€æŸ¥ä»£ç ä¸­æ˜¯å¦æœ‰æœªå®Œæˆçš„TODO")
}

// TestInitializeGenesisIfNeeded_DetectsTemporaryImplementations æµ‹è¯•å‘ç°ä¸´æ—¶å®ç°
func TestInitializeGenesisIfNeeded_DetectsTemporaryImplementations(t *testing.T) {
	// ğŸ› é—®é¢˜å‘ç°ï¼šæ£€æŸ¥ä¸´æ—¶å®ç°
	t.Logf("âœ… å¯åŠ¨æµç¨‹å®ç°æ£€æŸ¥ï¼š")
	t.Logf("  - InitializeGenesisIfNeeded å¯åŠ¨æ—¶æ£€æŸ¥å¹¶åˆå§‹åŒ–åˆ›ä¸–åŒºå—")
	t.Logf("  - needsGenesisBlock æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—")
	t.Logf("  - buildGenesisBlock åè°ƒæ„å»ºåˆ›ä¸–åŒºå—")
	t.Logf("  - processGenesisBlock å¤„ç†åˆ›ä¸–åŒºå—")
	t.Logf("  - createGenesisTransactions åˆ›å»ºåˆ›ä¸–äº¤æ˜“")
	t.Logf("  - validateGenesisConfig éªŒè¯åˆ›ä¸–é…ç½®")
	t.Logf("  - validateCreatedGenesisBlock éªŒè¯åˆ›å»ºçš„åˆ›ä¸–åŒºå—")
	t.Logf("  - verifyGenesisState éªŒè¯åˆ›ä¸–åçš„é“¾çŠ¶æ€")
	t.Logf("  - æ³¨æ„ï¼šprocessGenesisBlockä¸­æœ‰200msçš„sleepç­‰å¾…å¼‚æ­¥äº‹ä»¶å¤„ç†")
}

