// validate_candidates.go
// å€™é€‰éªŒè¯ã€å»é‡å’Œè´¨é‡è¿‡æ»¤å™¨
//
// ä¸»è¦åŠŸèƒ½ï¼š
// 1. å®ç°å€™é€‰åŒºå—çš„æ ¼å¼å’Œæœ‰æ•ˆæ€§éªŒè¯
// 2. é«˜æ•ˆçš„é‡å¤æ£€æµ‹æœºåˆ¶
// 3. å€™é€‰è´¨é‡é¢„ç­›é€‰
// 4. åŸºç¡€PoWå’Œæ—¶é—´æˆ³éªŒè¯
// 5. çˆ¶å“ˆå¸Œä¸€è‡´æ€§æ£€æŸ¥
//
// éªŒè¯å±‚æ¬¡ï¼š
// 1. æ ¼å¼éªŒè¯ - åŒºå—ç»“æ„å’Œå­—æ®µå®Œæ•´æ€§
// 2. åŸºç¡€PoWéªŒè¯ - å·¥ä½œé‡è¯æ˜æœ‰æ•ˆæ€§
// 3. æ—¶é—´æˆ³éªŒè¯ - æ—¶é—´æˆ³åˆç†æ€§æ£€æŸ¥
// 4. çˆ¶å“ˆå¸ŒéªŒè¯ - ä¸å½“å‰é“¾å¤´çš„ä¸€è‡´æ€§
// 5. é‡å¤æ£€æµ‹ - é¿å…é‡å¤å€™é€‰
//
// è´¨é‡é¢„ç­›é€‰ï¼š
// - è®¾ç½®PoWè´¨é‡æœ€ä½é˜ˆå€¼
// - æ—¶é—´æˆ³æ¼‚ç§»èŒƒå›´æ£€æŸ¥
// - äº¤æ˜“æ•°é‡å’Œç»“æ„éªŒè¯
// - åŒºå—å¤§å°åˆç†æ€§æ£€æŸ¥
//
// è®¾è®¡åŸåˆ™ï¼š
// - å¿«é€Ÿçš„åŸºç¡€éªŒè¯ç¡®ä¿æ”¶é›†æ•ˆç‡
// - é«˜æ•ˆçš„é‡å¤æ£€æµ‹é¿å…èµ„æºæµªè´¹
// - è´¨é‡é¢„ç­›é€‰æå‡åç»­è¯„åˆ†æ•ˆç‡
// - ç¼“å­˜æœºåˆ¶ä¼˜åŒ–éªŒè¯æ€§èƒ½
//
// ä½œè€…ï¼šWESå¼€å‘å›¢é˜Ÿ
// åˆ›å»ºæ—¶é—´ï¼š2025-09-13

package candidate_collector

import (
	"bytes"
	"context"
	"errors"
	"fmt"
	"sync"
	"time"

	"github.com/weisyn/v1/internal/config/consensus"
	chainsync "github.com/weisyn/v1/internal/core/chain/sync"
	"github.com/weisyn/v1/pkg/interfaces/chain"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/protobuf/proto"
)

// candidateValidator å€™é€‰éªŒè¯å™¨
type candidateValidator struct {
	logger      log.Logger
	query       persistence.QueryService
	hashManager crypto.HashManager
	powEngine   crypto.POWEngine // ä¿®å¤ï¼šæ·»åŠ POWéªŒè¯å¼•æ“
	syncService chain.SystemSyncService
	// minBlockIntervalSeconds ä» blockchain.block.min_block_interval è¯»å–ï¼ˆç§’ï¼‰
	minBlockIntervalSeconds uint64

	// éªŒè¯ç¼“å­˜å’Œå»é‡
	validationCache map[string]bool // éªŒè¯ç»“æœç¼“å­˜
	duplicateCache  map[string]bool // é‡å¤æ£€æµ‹ç¼“å­˜
	cacheMutex      sync.RWMutex    // ç¼“å­˜è¯»å†™é”

	// è´¨é‡è¿‡æ»¤å‚æ•°
	minPoWQuality       float64       // æœ€å°PoWè´¨é‡
	maxTimestampDrift   time.Duration // æœ€å¤§æ—¶é—´æˆ³æ¼‚ç§»
	minTransactionCount int           // æœ€å°äº¤æ˜“æ•°é‡
	maxBlockSize        uint64        // æœ€å¤§åŒºå—å¤§å°
}

// newCandidateValidator åˆ›å»ºå€™é€‰éªŒè¯å™¨
func newCandidateValidator(
	logger log.Logger,
	query persistence.QueryService,
	hashManager crypto.HashManager,
	powEngine crypto.POWEngine,
	syncService chain.SystemSyncService,
	config *consensus.ConsensusOptions,
	minBlockIntervalSeconds uint64,
) *candidateValidator {
	// ä»é…ç½®ä¸­è·å–èšåˆå™¨å‚æ•°ï¼Œé¿å…ç¡¬ç¼–ç 
	aggregatorConfig := config.Aggregator
	return &candidateValidator{
		logger:                  logger,
		query:                   query,
		hashManager:             hashManager,
		powEngine:               powEngine,
		syncService:             syncService,
		minBlockIntervalSeconds: minBlockIntervalSeconds,
		validationCache:         make(map[string]bool),
		duplicateCache:          make(map[string]bool),
		minPoWQuality:           aggregatorConfig.MinPoWQuality,
		maxTimestampDrift:       aggregatorConfig.MaxTimestampOffset,
		minTransactionCount:     int(aggregatorConfig.MinTransactionCount),
		maxBlockSize:            aggregatorConfig.MaxBlockSize,
	}
}

// validateCandidate éªŒè¯å€™é€‰åŒºå—
func (v *candidateValidator) validateCandidate(candidate *types.CandidateBlock) error {
	// åŸºç¡€ç»“æ„éªŒè¯
	if err := v.validateCandidateStructure(candidate); err != nil {
		return err
	}

	// æ—¶é—´æˆ³éªŒè¯
	if err := v.validateTimestamp(candidate); err != nil {
		return err
	}

	// çˆ¶å“ˆå¸ŒéªŒè¯
	if err := v.validateParentHash(candidate); err != nil {
		return err
	}

	// è´¨é‡é¢„ç­›é€‰
	if err := v.applyQualityFilter(candidate); err != nil {
		return err
	}

	return nil
}

// validateCandidateStructure éªŒè¯å€™é€‰åŒºå—ç»“æ„
func (v *candidateValidator) validateCandidateStructure(candidate *types.CandidateBlock) error {
	// éªŒè¯åŸºç¡€å­—æ®µ
	if candidate == nil {
		return errors.New("candidate is nil")
	}

	if candidate.Block == nil {
		return errors.New("candidate block is nil")
	}

	if candidate.Block.Header == nil {
		return errors.New("block header is nil")
	}

	if candidate.Block.Body == nil {
		return errors.New("block body is nil")
	}

	// éªŒè¯åŒºå—å“ˆå¸Œ
	if len(candidate.BlockHash) != 32 {
		return errors.New("invalid block hash length")
	}

	// éªŒè¯é«˜åº¦ä¸€è‡´æ€§
	if candidate.Height != candidate.Block.Header.Height {
		return errors.New("height mismatch between candidate and block")
	}

	// éªŒè¯Merkleæ ¹
	if len(candidate.Block.Header.MerkleRoot) == 0 {
		return errors.New("empty merkle root")
	}

	// éªŒè¯äº¤æ˜“åˆ—è¡¨
	if candidate.Block.Body.Transactions == nil {
		return errors.New("transactions list is nil")
	}

	return nil
}

// validateTimestamp éªŒè¯æ—¶é—´æˆ³
func (v *candidateValidator) validateTimestamp(candidate *types.CandidateBlock) error {
	blockTimestamp := time.Unix(int64(candidate.Block.Header.Timestamp), 0)
	now := time.Now()

	// æ£€æŸ¥æ—¶é—´æˆ³æ˜¯å¦åœ¨åˆç†èŒƒå›´å†…
	if blockTimestamp.After(now.Add(v.maxTimestampDrift)) {
		return errors.New("block timestamp too far in future")
	}

	if blockTimestamp.Before(now.Add(-v.maxTimestampDrift)) {
		return errors.New("block timestamp too old")
	}

	// éªŒè¯æœ€å°åŒºå—é—´éš”ï¼ˆèšåˆå™¨è¿‡æ»¤è¿‡æ—©å€™é€‰ï¼‰
	if err := v.validateMinBlockInterval(candidate); err != nil {
		return err
	}

	// éªŒè¯å€™é€‰åŒºå—çš„ç”Ÿäº§æ—¶é—´å’Œæ¥æ”¶æ—¶é—´çš„ä¸€è‡´æ€§
	timeDiff := candidate.ReceivedAt.Sub(candidate.ProducedAt)
	if timeDiff < 0 {
		return errors.New("received time before produced time")
	}

	return nil
}

// validateMinBlockInterval éªŒè¯æœ€å°åŒºå—é—´éš”ï¼ˆèšåˆå™¨è¿‡æ»¤ï¼‰
//
// âš ï¸ é‡è¦è¯´æ˜ï¼šæ­¤éªŒè¯åŸºäºåŒºå—çš„çœŸå®åˆ›å»ºæ—¶é—´æˆ³
// èšåˆå™¨é€šè¿‡å›ºå®šæ”¶é›†çª—å£æ§åˆ¶åˆ†å‘é¢‘ç‡ï¼Œè€Œéè°ƒæ•´æ—¶é—´æˆ³
func (v *candidateValidator) validateMinBlockInterval(candidate *types.CandidateBlock) error {
	// å¯¹äºåˆ›ä¸–å—ï¼ˆé«˜åº¦0ï¼‰ï¼Œä¸æ£€æŸ¥é—´éš”
	if candidate.Height == 0 {
		return nil
	}

	// æœªé…ç½®æœ€å°é—´éš”æ—¶ä¸åšè¿‡æ»¤
	if v.minBlockIntervalSeconds == 0 {
		return nil
	}

	// è·å–å½“å‰é“¾ä¿¡æ¯
	if v.query == nil {
		return fmt.Errorf("QueryService æœªæ³¨å…¥ï¼ˆæ— æ³•æ‰§è¡Œ min_block_interval éªŒè¯ï¼‰")
	}
	chainInfo, err := v.query.GetChainInfo(context.Background())
	if err != nil {
		return fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %v", err)
	}

	// å¦‚æœæ²¡æœ‰çˆ¶åŒºå—ï¼Œè·³è¿‡é—´éš”æ£€æŸ¥
	if chainInfo.Height == 0 {
		return nil
	}

	// åªå¯¹â€œæœ¬åœ°é“¾å°–çš„ä¸‹ä¸€å—å€™é€‰â€è¿›è¡Œæœ€å°é—´éš”è¿‡æ»¤ï¼Œé¿å…å¯¹å¼‚å¸¸é«˜åº¦å€™é€‰é€ æˆé¢å¤–è¯¯æ€ã€‚
	// å¼‚å¸¸é«˜åº¦ä¼šåœ¨ validateParentHash/åŒæ­¥é€»è¾‘ä¸­å¤„ç†ã€‚
	expectedHeight := chainInfo.Height + 1
	if candidate.Height != expectedHeight {
		return nil
	}

	// âœ… å½»åº•è¿­ä»£ï¼šä¸å…è®¸ skip
	// - å¯¹äº tip+1 çš„å…³é”®è·¯å¾„ï¼šæ‹¿ä¸åˆ°çˆ¶å—æ—¶é—´æˆ³è§†ä¸ºæœ¬åœ°çŠ¶æ€å¼‚å¸¸ï¼Œç›´æ¥æ‹’ç»è¯¥å€™é€‰ã€‚
	parentTS, err := v.query.GetBlockTimestamp(context.Background(), chainInfo.Height)
	if err != nil {
		if v.logger != nil {
			v.logger.Errorf("min_block_interval: failed to get parent timestamp (reject): parent_height=%d candidate_height=%d err=%v",
				chainInfo.Height, candidate.Height, err)
		}
		// ç¼ºçˆ¶å—æ—¶é—´æˆ³é€šå¸¸æ„å‘³ç€â€œçˆ¶å—ä¸å¯è¯»/å­˜å‚¨ä¸ä¸€è‡´â€ï¼Œå¿…é¡»ä¼˜å…ˆè¡¥é½ã€‚
		if v.syncService != nil {
			ctx := chainsync.ContextWithUrgentSync(context.Background(), fmt.Sprintf("min_block_interval_missing_parent_ts:%d", chainInfo.Height))
			if candidate.Source != "" {
				ctx = chainsync.ContextWithPeerHint(ctx, candidate.Source)
			}
			_ = v.syncService.TriggerSync(ctx)
		}
		return fmt.Errorf("min_block_interval æ— æ³•è·å–çˆ¶å—æ—¶é—´æˆ³ï¼ˆæ‹’ç»å€™é€‰ï¼‰: parent_height=%d: %w", chainInfo.Height, err)
	}

	candidateTS := int64(candidate.Block.Header.Timestamp)
	minAllowed := parentTS + int64(v.minBlockIntervalSeconds)
	if candidateTS < minAllowed {
		// âœ… éªŒæ”¶ç‚¹ï¼šå¿…é¡»æ˜ç¡®è®°å½•æ‹’ç»åŸå› ä¸å…³é”®æ•°å€¼ï¼ˆä¾¿äºè¯æ˜é…ç½®ç”Ÿæ•ˆï¼‰
		if v.logger != nil {
			v.logger.Warnf("min_block_interval: reject candidate too early: parent_height=%d parent_ts=%d candidate_height=%d candidate_ts=%d min_interval=%ds min_allowed=%d",
				chainInfo.Height, parentTS, candidate.Height, candidateTS, v.minBlockIntervalSeconds, minAllowed)
		}
		return fmt.Errorf("å€™é€‰åŒºå—è¿‡æ—©ï¼ˆmin_block_intervalï¼‰: parent_ts=%d candidate_ts=%d min_interval=%ds",
			parentTS, candidateTS, v.minBlockIntervalSeconds)
	}

	// âœ… éªŒæ”¶ç‚¹ï¼šç»™å‡ºâ€œé€šè¿‡â€è®°å½•ï¼ˆç”¨ debug/info çº§åˆ«é¿å…æ—¥å¿—è¿‡å™ªï¼‰
	if v.logger != nil {
		v.logger.Debugf("min_block_interval: pass: parent_height=%d parent_ts=%d candidate_height=%d candidate_ts=%d min_interval=%ds min_allowed=%d",
			chainInfo.Height, parentTS, candidate.Height, candidateTS, v.minBlockIntervalSeconds, minAllowed)
	}

	// æ—¶é—´æˆ³æ¼‚ç§»ä¿æŠ¤ï¼ˆå¯å‘å¼é˜²æŠ¤ï¼Œéå…±è¯†è£å†³ï¼‰ï¼š
	// - è¿™é‡Œä½¿ç”¨æœ¬åœ°å¢™é’Ÿï¼ˆtime.Nowï¼‰åšâ€œæ˜æ˜¾å¼‚å¸¸â€çš„æ‹’ç»ï¼Œé˜²æ­¢æ—¶é—´æˆ³æ”»å‡»/åƒåœ¾å€™é€‰ã€‚
	// - çœŸæ­£çš„å…±è¯†æ—¶é—´çº¦æŸï¼ˆä¾‹å¦‚ MTPã€MaxFutureDriftã€MinBlockInterval ç­‰ï¼‰åº”ä»¥é“¾è§„åˆ™/æ§åˆ¶å™¨ä¸ºå‡†ã€‚
	candidateTimestamp := time.Unix(int64(candidate.Block.Header.Timestamp), 0)
	now := time.Now()

	// æ£€æŸ¥å€™é€‰åŒºå—æ—¶é—´æˆ³æ˜¯å¦è¿‡äºè¶…å‰ï¼ˆé˜²æ­¢æ—¶é—´æˆ³æ”»å‡»ï¼‰
	if candidateTimestamp.After(now.Add(2 * time.Minute)) {
		return fmt.Errorf("å€™é€‰åŒºå—æ—¶é—´æˆ³è¿‡äºè¶…å‰: %v", candidateTimestamp)
	}

	// æ£€æŸ¥å€™é€‰åŒºå—æ—¶é—´æˆ³æ˜¯å¦è¿‡äºé™ˆæ—§
	if candidateTimestamp.Before(now.Add(-10 * time.Minute)) {
		return fmt.Errorf("å€™é€‰åŒºå—æ—¶é—´æˆ³è¿‡äºé™ˆæ—§: %v", candidateTimestamp)
	}

	return nil
}

// validateParentHash éªŒè¯çˆ¶å“ˆå¸Œ
func (v *candidateValidator) validateParentHash(candidate *types.CandidateBlock) error {
	// å¯¹äºåˆ›ä¸–å—ï¼ˆé«˜åº¦0ï¼‰ï¼Œä¸æ£€æŸ¥çˆ¶å“ˆå¸Œ
	if candidate.Height == 0 {
		return nil
	}

	// è·å–å½“å‰é“¾ä¿¡æ¯
	if v.query == nil {
		return fmt.Errorf("QueryService æœªæ³¨å…¥ï¼ˆæ— æ³•æ‰§è¡Œ parent hash éªŒè¯ï¼‰")
	}
	chainInfo, err := v.query.GetChainInfo(context.Background())
	if err != nil {
		return errors.New("failed to get chain info for parent validation")
	}

	// éªŒè¯çˆ¶å“ˆå¸Œå­—æ®µé•¿åº¦
	if len(candidate.Block.Header.PreviousHash) != 32 {
		return errors.New("invalid parent hash length")
	}

	// æ£€æŸ¥é«˜åº¦æ˜¯å¦æ­£ç¡®ï¼ˆåº”è¯¥æ˜¯é“¾å¤´é«˜åº¦+1ï¼‰
	expectedHeight := chainInfo.Height + 1
	if candidate.Height != expectedHeight {
		// å¦‚æœå€™é€‰é«˜åº¦é¢†å…ˆå½“å‰é“¾ï¼Œå°è¯•è§¦å‘åŒæ­¥è¡¥é½ç¼ºå¤±åŒºå—
		if candidate.Height > expectedHeight && v.syncService != nil {
			ctx := chainsync.ContextWithUrgentSync(context.Background(), fmt.Sprintf("candidate_height_ahead:%d->%d", chainInfo.Height, candidate.Height))
			if candidate.Source != "" {
				ctx = chainsync.ContextWithPeerHint(ctx, candidate.Source)
			}
			missingStart := chainInfo.Height + 1
			missingEnd := candidate.Height - 1
			if v.logger != nil {
				v.logger.Warnf("å€™é€‰é«˜åº¦é¢†å…ˆæœ¬åœ°é“¾: current=%d, candidate=%dï¼Œè§¦å‘åŒæ­¥è¡¥é½ç¼ºå¤±åŒºå— %dâ†’%d",
					chainInfo.Height, candidate.Height, missingStart, missingEnd)
			}
			if err := v.syncService.TriggerSync(ctx); err != nil && v.logger != nil {
				v.logger.Warnf("è§¦å‘åŒæ­¥å¤±è´¥: %v", err)
			}
		}
		return errors.New("invalid candidate height")
	}

	// âœ… ç”Ÿäº§çº§ç¡¬é—¨æ§›ï¼šè¿›å…¥èšåˆè½®æ¬¡å‰ï¼Œçˆ¶å—å¿…é¡»â€œå¯è¯»ä¸”å¯ç”¨â€ã€‚
	// èƒŒæ™¯ï¼šé“¾ä¿¡æ¯é‡Œå¯èƒ½æœ‰ BestBlockHashï¼Œä½† blocks/ æ–‡ä»¶ç¼ºå¤±æˆ–åå—ä¼šå¯¼è‡´åç»­ getParentHash/è¯„ä¼°é˜¶æ®µå´©æºƒæˆ–å¡æ­»ã€‚
	if v.query != nil && chainInfo.Height > 0 {
		parentBlock, perr := v.query.GetBlockByHeight(context.Background(), chainInfo.Height)
		if perr != nil || parentBlock == nil || parentBlock.Header == nil {
			if v.logger != nil {
				v.logger.Warnf("missing parent block data: parent_height=%d candidate_height=%d err=%v (trigger urgent sync)",
					chainInfo.Height, candidate.Height, perr)
			}
			if v.syncService != nil {
				ctx := chainsync.ContextWithUrgentSync(context.Background(), fmt.Sprintf("missing_parent_block_data:%d", chainInfo.Height))
				if candidate.Source != "" {
					ctx = chainsync.ContextWithPeerHint(ctx, candidate.Source)
				}
				_ = v.syncService.TriggerSync(ctx)
			}
			if perr == nil {
				perr = fmt.Errorf("parent block is nil")
			}
			return fmt.Errorf("missing parent block data at height %d: %w", chainInfo.Height, perr)
		}
	}

	// é«˜åº¦åŒ¹é…æ—¶ï¼Œè¿›ä¸€æ­¥éªŒè¯çˆ¶å“ˆå¸Œæ˜¯å¦ä¸æœ¬åœ°é“¾å°–å“ˆå¸Œä¸€è‡´
	if len(chainInfo.BestBlockHash) != 32 {
		// å¦‚æœæœ¬åœ° BestBlockHash å¼‚å¸¸ï¼Œç›´æ¥è¿”å›é”™è¯¯ï¼Œé¿å…åœ¨ä¸å¯ä¿¡çŠ¶æ€ä¸‹ç»§ç»­æŒ–çŸ¿
		return fmt.Errorf("local best block hash is invalid: len=%d", len(chainInfo.BestBlockHash))
	}

	if !bytes.Equal(candidate.Block.Header.PreviousHash, chainInfo.BestBlockHash) {
		// çˆ¶å“ˆå¸Œä¸åŒ¹é…ï¼Œè¯´æ˜å€™é€‰åŒºå—å¹¶éåŸºäºæœ¬åœ°æœ€ä½³é“¾å°–ï¼Œå¯èƒ½å­˜åœ¨åˆ†å‰æˆ–ä¸åŒè§†å›¾
		if v.logger != nil {
			v.logger.Warnf("å€™é€‰çˆ¶å“ˆå¸Œä¸æœ¬åœ°é“¾å°–ä¸ä¸€è‡´: expected=%x, got=%x, height=%d",
				chainInfo.BestBlockHash[:8], candidate.Block.Header.PreviousHash[:8], candidate.Height)
		}

		// å¯é€‰ï¼šå°è¯•è§¦å‘ä¸€æ¬¡åŒæ­¥ï¼Œä»¥è·å–æœ€æ–°é“¾å°–è§†å›¾
		if v.syncService != nil {
			ctx := chainsync.ContextWithUrgentSync(context.Background(), "candidate_parent_hash_mismatch")
			if candidate.Source != "" {
				ctx = chainsync.ContextWithPeerHint(ctx, candidate.Source)
			}
			if err := v.syncService.TriggerSync(ctx); err != nil && v.logger != nil {
				v.logger.Warnf("çˆ¶å“ˆå¸Œä¸åŒ¹é…æ—¶è§¦å‘åŒæ­¥å¤±è´¥: %v", err)
			}
		}

		return errors.New("parent hash does not match local best block hash")
	}

	return nil
}

// applyQualityFilter åº”ç”¨è´¨é‡è¿‡æ»¤å™¨
func (v *candidateValidator) applyQualityFilter(candidate *types.CandidateBlock) error {
	// æ£€æŸ¥äº¤æ˜“æ•°é‡
	txCount := len(candidate.Block.Body.Transactions)
	if txCount < v.minTransactionCount {
		return errors.New("insufficient transaction count")
	}

	// ä¿®å¤ï¼šè®¡ç®—åŒºå—çœŸå®å¤§å°å¹¶æ£€æŸ¥
	actualSize := v.calculateBlockSize(candidate)
	if actualSize > v.maxBlockSize {
		return fmt.Errorf("åŒºå—å¤§å°è¶…å‡ºé™åˆ¶: %d > %d å­—èŠ‚", actualSize, v.maxBlockSize)
	}

	// æ£€æŸ¥PoWè´¨é‡ï¼ˆåŸºäºéš¾åº¦å’ŒNonceï¼‰
	if err := v.validatePoWQuality(candidate); err != nil {
		return err
	}

	return nil
}

// validatePoWQuality éªŒè¯PoWè´¨é‡ï¼ˆä¿®å¤ï¼šä½¿ç”¨çœŸå®POWéªŒè¯ï¼‰
func (v *candidateValidator) validatePoWQuality(candidate *types.CandidateBlock) error {
	// è·å–åŒºå—å¤´çš„åŸºç¡€ä¿¡æ¯
	header := candidate.Block.Header

	// åŸºç¡€å­—æ®µæ£€æŸ¥
	if len(header.Nonce) == 0 {
		return errors.New("missing PoW nonce")
	}

	if header.Difficulty == 0 {
		return errors.New("zero difficulty")
	}

	// ä¿®å¤ï¼šä½¿ç”¨çœŸå®çš„POWéªŒè¯é€»è¾‘
	// ä½¿ç”¨POWEngineéªŒè¯åŒºå—å¤´çš„POW
	isValid, err := v.powEngine.VerifyBlockHeader(header)
	if err != nil {
		return fmt.Errorf("POWéªŒè¯å¤±è´¥: %v", err)
	}

	if !isValid {
		return errors.New("POWéªŒè¯ä¸é€šè¿‡ï¼šå“ˆå¸Œå€¼æœªæ»¡è¶³éš¾åº¦è¦æ±‚")
	}

	return nil
}

// calculateBlockSize è®¡ç®—åŒºå—çœŸå®å¤§å°ï¼ˆä¿®å¤ï¼šä½¿ç”¨protobufçœŸå®å¤§å°ï¼‰
func (v *candidateValidator) calculateBlockSize(candidate *types.CandidateBlock) uint64 {
	// ä¿®å¤ï¼šä½¿ç”¨protobufçš„çœŸå®åºåˆ—åŒ–å¤§å°
	if candidate.Block == nil {
		return 0
	}

	// è®¡ç®—protobufåºåˆ—åŒ–åçš„çœŸå®å¤§å°
	serializedSize := proto.Size(candidate.Block)
	return uint64(serializedSize)
}

// âŒ **å·²åˆ é™¤æœªä½¿ç”¨çš„æ–¹æ³•** - åŸºäºé”™è¯¯æ¶æ„å‡è®¾
//
// ğŸš¨ **åˆ é™¤åŸå› **ï¼š
// 1. checkDuplicate() - é‡å¤æ£€æµ‹å·²åœ¨æ”¶é›†ç®¡ç†å™¨ä¸­å®ç°ï¼Œæ— éœ€éªŒè¯å™¨é‡å¤
// 2. markProcessed() - åœ¨æ—§çš„å¤šå› å­èšåˆæ¶æ„ä¸­é€‰æ‹©å®Œæˆåç›´æ¥æ¸…ç©ºå†…å­˜æ± ï¼Œæ— éœ€æ ‡è®°å¤„ç†çŠ¶æ€
// 3. clearCache() - ç¼“å­˜æ¸…ç†æ— æ„ä¹‰ï¼Œå†…å­˜æ± æ¸…ç©ºåæ‰€æœ‰çŠ¶æ€é‡ç½®
//
// ğŸ¯ **æ­£ç¡®çš„èšåˆæµç¨‹ï¼ˆå½“å‰è·ç¦»é€‰æ‹©æ¶æ„ï¼‰**ï¼š
// é€‰æ‹©å®Œæˆ â†’ åˆ†å‘ç»“æœ â†’ æ¸…ç©ºæ•´ä¸ªå†…å­˜æ±  â†’ å¼€å§‹ä¸‹ä¸€è½®
// è€Œä¸æ˜¯ï¼šæ ‡è®°å·²å¤„ç† â†’ ç»´æŠ¤å¤æ‚çŠ¶æ€ â†’ é€‰æ‹©æ€§æ¸…ç†
//
// func (v *candidateValidator) checkDuplicate(candidate *types.CandidateBlock) bool { ... }
// func (v *candidateValidator) markProcessed(candidate *types.CandidateBlock) { ... }
// func (v *candidateValidator) clearCache() { ... }
