// Package testutil æä¾› Mempool æ¨¡å—æµ‹è¯•çš„åŒºå—è¾…åŠ©å·¥å…·
//
// ğŸ§ª **æµ‹è¯•åŒºå—Fixtures**
//
// æœ¬æ–‡ä»¶æä¾›æµ‹è¯•åŒºå—çš„åˆ›å»ºå‡½æ•°ï¼Œç”¨äºç®€åŒ–æµ‹è¯•ä»£ç ç¼–å†™ã€‚
// éµå¾ª docs/system/standards/principles/testing-standards.md è§„èŒƒã€‚
package testutil

import (
	"crypto/rand"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// randomHash ç”Ÿæˆéšæœºå“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
func randomHash() []byte {
	hash := make([]byte, 32)
	rand.Read(hash)
	return hash
}

// CreateTestBlock åˆ›å»ºæµ‹è¯•åŒºå—
//
// å‚æ•°ï¼š
// - height: åŒºå—é«˜åº¦
// - prevHash: å‰ä¸€ä¸ªåŒºå—å“ˆå¸Œï¼ˆnilæ—¶è‡ªåŠ¨ç”Ÿæˆï¼‰
// - txCount: äº¤æ˜“æ•°é‡
//
// è¿”å›ï¼šæµ‹è¯•åŒºå—å®ä¾‹
func CreateTestBlock(height uint64, prevHash []byte, txCount int) *core.Block {
	if prevHash == nil {
		prevHash = randomHash() // ç”Ÿæˆ32å­—èŠ‚çš„éšæœºå“ˆå¸Œ
	}

	// åˆ›å»ºäº¤æ˜“åˆ—è¡¨
	txs := make([]*transaction.Transaction, txCount)
	for i := 0; i < txCount; i++ {
		txs[i] = CreateSimpleTestTransaction(i)
	}

	return &core.Block{
		Header: &core.BlockHeader{
			Height:       height,
			PreviousHash: prevHash,
			// ä½¿ç”¨çº³ç§’æ—¶é—´æˆ³ï¼Œé¿å…æµ‹è¯•ä¸­åŒç§’åˆ›å»ºå¤šä¸ªåŒºå—å¯¼è‡´å“ˆå¸Œç¢°æ’ï¼ˆMockBlockHashService ä½¿ç”¨ height+timestamp ç”Ÿæˆå“ˆå¸Œï¼‰
			Timestamp:  uint64(time.Now().UnixNano()),
			Difficulty: 1,
		},
		Body: &core.BlockBody{
			Transactions: txs,
		},
	}
}

// CreateSimpleTestBlock åˆ›å»ºç®€å•çš„æµ‹è¯•åŒºå—ï¼ˆå•ä¸ªäº¤æ˜“ï¼‰
func CreateSimpleTestBlock(height uint64) *core.Block {
	return CreateTestBlock(height, nil, 1)
}

// CreateEmptyTestBlock åˆ›å»ºç©ºåŒºå—ï¼ˆæ— äº¤æ˜“ï¼‰
func CreateEmptyTestBlock(height uint64) *core.Block {
	return CreateTestBlock(height, nil, 0)
}

// CreateTestBlockWithHash åˆ›å»ºæŒ‡å®šå“ˆå¸Œçš„æµ‹è¯•åŒºå—
func CreateTestBlockWithHash(height uint64, blockHash []byte) *core.Block {
	block := CreateSimpleTestBlock(height)
	// æ³¨æ„ï¼šå®é™…å“ˆå¸Œç”±å“ˆå¸ŒæœåŠ¡è®¡ç®—ï¼Œè¿™é‡Œåªæ˜¯è®¾ç½®ä¸€ä¸ªæ ‡è¯†
	return block
}
