// Package block å®ç°åŒºå—æŸ¥è¯¢æœåŠ¡
package block

import (
	"context"
	"fmt"
	"sync"
	"time"

	"github.com/weisyn/v1/internal/core/persistence/query/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/config"
	eventiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/types"
	corruptutil "github.com/weisyn/v1/pkg/utils/corruption"
	"google.golang.org/protobuf/proto"
)

// Service åŒºå—æŸ¥è¯¢æœåŠ¡
type Service struct {
	storage   storage.BadgerStore
	fileStore storage.FileStore
	logger    log.Logger
	eventBus  eventiface.EventBus // å¯é€‰ï¼šç”¨äºå‘å¸ƒcorruption/repairedäº‹ä»¶

	// blockCache ç®€å•çš„æŒ‰é«˜åº¦ç¼“å­˜åŒºå—ï¼Œå‡å°‘é‡å¤è¯»ç›˜
	blockCache *blockCache

	// è‡ªæ„ˆï¼šé¿å…åŒä¸€ä¸ª hash çš„ç´¢å¼•æŸååå¤è§¦å‘æ˜‚è´µæ‰«æ
	repairMu          sync.Mutex
	lastRepairAttempt map[string]time.Time // key: hex(hash)

	// è‡ªæ„ˆé…ç½®ï¼ˆå¯¹é½ blockchain.sync.advanced.*ï¼‰
	repairEnabled         bool
	repairThrottle        time.Duration
	repairHashIndexWindow uint64
}

// NewService åˆ›å»ºåŒºå—æŸ¥è¯¢æœåŠ¡
func NewService(storage storage.BadgerStore, fileStore storage.FileStore, configProvider config.Provider, eventBus eventiface.EventBus, logger log.Logger) (interfaces.InternalBlockQuery, error) {
	if storage == nil {
		return nil, fmt.Errorf("storage ä¸èƒ½ä¸ºç©º")
	}
	if fileStore == nil {
		return nil, fmt.Errorf("fileStore ä¸èƒ½ä¸ºç©º")
	}

	s := &Service{
		storage:               storage,
		fileStore:             fileStore,
		eventBus:              eventBus,
		logger:                logger,
		blockCache:            newBlockCache(1000), // é»˜è®¤ç¼“å­˜æœ€è¿‘ 1000 ä¸ªåŒºå—
		lastRepairAttempt:     make(map[string]time.Time),
		repairEnabled:         true,
		repairThrottle:        10 * time.Second, // ğŸ”§ ä»60ç§’ç¼©çŸ­åˆ°10ç§’ï¼ŒåŠ å¿«ç´¢å¼•ä¿®å¤å“åº”
		repairHashIndexWindow: 5000,
	}

	// ä»é…ç½®æ³¨å…¥è‡ªæ„ˆ knobsï¼ˆä¸å½±å“å…±è¯†ï¼Œåªå½±å“åœ¨çº¿ä¿®å¤è¡Œä¸ºï¼‰
	if configProvider != nil && configProvider.GetBlockchain() != nil {
		adv := configProvider.GetBlockchain().Sync.Advanced
		s.repairEnabled = adv.RepairEnabled
		if adv.RepairThrottleSeconds > 0 {
			s.repairThrottle = time.Duration(adv.RepairThrottleSeconds) * time.Second
		}
		if adv.RepairHashIndexWindow > 0 {
			s.repairHashIndexWindow = uint64(adv.RepairHashIndexWindow)
		}
	}

	if logger != nil {
		logger.Info("âœ… BlockQuery æœåŠ¡å·²åˆ›å»ºï¼ˆblocks/: åŒºå—æ•°æ®ä»æ–‡ä»¶è¯»å–ï¼ŒBadger å­˜ç´¢å¼•ï¼‰")
	}

	return s, nil
}

func (s *Service) publishCorruptionDetected(phase types.CorruptionPhase, severity types.CorruptionSeverity, height *uint64, hashHex string, key string, err error) {
	if s.eventBus == nil || err == nil {
		return
	}
	data := types.CorruptionEventData{
		Component: types.CorruptionComponentPersistence,
		Phase:     phase,
		Severity:  severity,
		Height:    height,
		Hash:      hashHex,
		Key:       key,
		ErrClass:  corruptutil.ClassifyErr(err),
		Error:     err.Error(),
		At:        types.RFC3339Time(time.Now()),
	}
	s.eventBus.Publish(eventiface.EventTypeCorruptionDetected, context.Background(), data)
}

// publishGenesisIndexCorruption å‘å¸ƒåˆ›ä¸–åŒºå—ç´¢å¼•æŸåäº‹ä»¶
//
// ğŸ†• **æŸ¥è¯¢æ—¶è‡ªæ„ˆè§¦å‘**ï¼šå½“GetBlockByHeight(0)å¤±è´¥æ—¶ï¼Œè‡ªåŠ¨è§¦å‘ä¿®å¤
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - err: é”™è¯¯ä¿¡æ¯
func (s *Service) publishGenesisIndexCorruption(ctx context.Context, err error) {
	if s.eventBus == nil {
		return
	}
	
	height := uint64(0)
	evt := types.CorruptionEventData{
		Component: types.CorruptionComponentPersistence,
		Phase:     types.CorruptionPhaseReadIndex,
		Severity:  types.CorruptionSeverityCritical,
		Height:    &height,
		Key:       "indices:height:0",
		Error:     err.Error(),
		ErrClass:  "genesis_index_corrupt", // ç‰¹æ®Šåˆ†ç±»
		At:        types.RFC3339Time(time.Now()),
	}
	
	if s.logger != nil {
		s.logger.Warnf("ğŸ©¹ æ£€æµ‹åˆ°åˆ›ä¸–åŒºå—ç´¢å¼•æŸåï¼Œå‘å¸ƒä¿®å¤äº‹ä»¶: err=%v", err)
	}
	
	s.eventBus.Publish(eventiface.EventTypeCorruptionDetected, ctx, evt)
}

func (s *Service) publishRepairResult(success bool, action string, targetKey, targetHash string, targetHeight *uint64, details string, err error) {
	if s.eventBus == nil {
		return
	}
	result := "success"
	evtType := eventiface.EventTypeCorruptionRepaired
	errStr := ""
	if !success {
		result = "failed"
		evtType = eventiface.EventTypeCorruptionRepairFailed
		if err != nil {
			errStr = err.Error()
		}
	}
	data := types.CorruptionRepairEventData{
		Component:    types.CorruptionComponentPersistence,
		Phase:        types.CorruptionPhaseReadIndex,
		TargetKey:    targetKey,
		TargetHash:   targetHash,
		TargetHeight: targetHeight,
		Action:       action,
		Result:       result,
		Details:      details,
		Error:        errStr,
		At:           types.RFC3339Time(time.Now()),
	}
	s.eventBus.Publish(evtType, context.Background(), data)
}

// uint64ToBytes å°† uint64 ç¼–ç ä¸º 8 å­—èŠ‚ï¼ˆå¤§ç«¯ï¼‰ã€‚
func uint64ToBytes(v uint64) []byte {
	return []byte{
		byte(v >> 56),
		byte(v >> 48),
		byte(v >> 40),
		byte(v >> 32),
		byte(v >> 24),
		byte(v >> 16),
		byte(v >> 8),
		byte(v),
	}
}

// tryRepairHashIndex å°è¯•ä¿®å¤ indices:hash:<blockHash> çš„æ˜ å°„ï¼ˆhash->heightï¼‰ã€‚
//
// è®¾è®¡ç›®æ ‡ï¼ˆç”Ÿäº§åŒ–è‡ªè¿è¡Œï¼‰ï¼š
// - è¯¥ç´¢å¼•æŸåä¼šå¯¼è‡´ â€œGetBlockByHash â†’ æ— æ³•å¾—åˆ°é«˜åº¦ â†’ æ— æ³•åŠ è½½çˆ¶å— â†’ éªŒè¯/åŒæ­¥/åˆ†å‰å½’å£å…¨éƒ¨å¤±æ•ˆâ€
// - ä¿®å¤åº”åœ¨é”™è¯¯å‘ç”Ÿæ—¶è‡ªåŠ¨è§¦å‘ï¼Œè€Œä¸æ˜¯ç­‰å¾…äººå·¥
// - ä¿®å¤å¿…é¡»æ˜¯â€œè½»é‡/æœ‰ç•Œ/å¯é‡è¯•/å¯è§‚æµ‹â€
//
// ä¿®å¤ç­–ç•¥ï¼ˆæœ‰ç•Œæ‰«æï¼‰ï¼š
// - ä» state:chain:tip å– tipHeight
// - å‘ä¸‹æ‰«ææœ€è¿‘ window ä¸ªé«˜åº¦ï¼Œä» indices:height:<h> è¯»å‡º blockHash(32 bytes)
// - è‹¥åŒ¹é…ç›®æ ‡ hashï¼Œåˆ™å†™å› indices:hash:<hash> = height(8 bytes)
func (s *Service) tryRepairHashIndex(ctx context.Context, blockHash []byte) error {
	if len(blockHash) == 0 {
		return fmt.Errorf("empty blockHash")
	}
	if s != nil && !s.repairEnabled {
		return fmt.Errorf("repair disabled (hash=%x)", blockHash)
	}

	// å»é‡ä¸é™æµï¼šåŒä¸€ hash é»˜è®¤10ç§’å†…åªå°è¯•ä¸€æ¬¡ï¼ˆå¯é€šè¿‡é…ç½®è°ƒæ•´ï¼‰
	// ğŸ”§ ä¼˜åŒ–ï¼šä»60ç§’ç¼©çŸ­åˆ°10ç§’ï¼Œåœ¨ä¿æŒé™æµä¿æŠ¤çš„åŒæ—¶åŠ å¿«ä¿®å¤å“åº”
	key := fmt.Sprintf("%x", blockHash)
	s.repairMu.Lock()
	throttle := 10 * time.Second // é»˜è®¤10ç§’
	if s != nil && s.repairThrottle > 0 {
		throttle = s.repairThrottle
	}
	if last, ok := s.lastRepairAttempt[key]; ok && time.Since(last) < throttle {
		s.repairMu.Unlock()
		return fmt.Errorf("repair throttled (hash=%s throttle=%s)", key[:8], throttle)
	}
	s.lastRepairAttempt[key] = time.Now()
	s.repairMu.Unlock()

	// è¯»å–é“¾å°–
	tipKey := []byte("state:chain:tip")
	tipData, err := s.storage.Get(ctx, tipKey)
	if err != nil {
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, types.CorruptionSeverityWarning, nil, "", string(tipKey), err)
		return fmt.Errorf("repair: read tip failed: %w", err)
	}
	if len(tipData) < 8 {
		return fmt.Errorf("repair: tip data invalid (len=%d)", len(tipData))
	}
	tipHeight := bytesToUint64(tipData[:8])

	// æœ‰ç•Œæ‰«æçª—å£ï¼ˆæ¥è‡ªé…ç½® blockchain.sync.advanced.repair_hash_index_windowï¼‰
	window := uint64(5000)
	if s != nil && s.repairHashIndexWindow > 0 {
		window = s.repairHashIndexWindow
	}
	var start uint64
	if tipHeight > window {
		start = tipHeight - window
	} else {
		start = 0
	}

	if s.logger != nil {
		s.logger.Warnf("ğŸ©¹ auto_repair: detected corrupted hash->height index, scanning window [%d..%d] hash=%s",
			start, tipHeight, key[:12]+"...")
	}

	for h := tipHeight; ; h-- {
		heightKey := []byte(fmt.Sprintf("indices:height:%d", h))
		indexData, e := s.storage.Get(ctx, heightKey)
		if e == nil && len(indexData) >= 32 {
			// æ–°/æ—§æ ¼å¼éƒ½ä»¥ 32 bytes blockHash å¼€å¤´
			if string(indexData[:32]) == string(blockHash) {
				hashKey := []byte(fmt.Sprintf("indices:hash:%x", blockHash))
				if err := s.storage.Set(ctx, hashKey, uint64ToBytes(h)); err != nil {
					s.publishRepairResult(false, "rebuild_hash_index", string(hashKey), key, &h, "write indices:hash failed", err)
					return fmt.Errorf("repair: write hash index failed: %w", err)
				}
				if s.logger != nil {
					s.logger.Warnf("âœ… auto_repair: hash index repaired: hash=%s height=%d", key[:12]+"...", h)
				}
				s.publishRepairResult(true, "rebuild_hash_index", string(hashKey), key, &h, "repaired by scanning indices:height window", nil)
				return nil
			}
		}

		if h == start {
			break
		}
		if h == 0 {
			break
		}
	}

	return fmt.Errorf("repair: target hash not found in window (tip=%d window=%d)", tipHeight, window)
}

// tryRepairHashIndexFast æ˜¯ä¸€ä¸ªâ€œå¿«é€Ÿæ¢æµ‹å¼â€ä¿®å¤ï¼š
//
// èƒŒæ™¯ï¼š
// - BadgerStore.Get åœ¨ key ä¸å­˜åœ¨æ—¶ä¼šè¿”å› (nil, nil)ï¼ˆå³ len==0 ä¸” err==nilï¼‰
// - å¯¹äºåŒæ­¥/éªŒè¯çš„çƒ­è·¯å¾„ï¼Œhash->height ç´¢å¼•ç¼ºå¤±å¹¶ä¸ä¸€å®šæ„å‘³ç€æ•°æ®æŸåï¼›
//   æ›´å¸¸è§çš„æ˜¯â€œç´¢å¼•å°šæœªæ„å»º/è¿ç§»æœªè¦†ç›–/å†å²ç‰ˆæœ¬æœªå†™å…¥ indices:hashâ€
//
// ç­–ç•¥ï¼š
// - ä»…æ‰«æ tipHeight é™„è¿‘çš„æœ€è¿‘ maxProbe ä¸ªé«˜åº¦ï¼ˆé»˜è®¤ 256ï¼‰ï¼Œå‘½ä¸­åˆ™ç«‹å³è¡¥å†™ indices:hash
// - ä¸åšå…¨çª—å£æ‰«æï¼Œä¸å ç”¨ tryRepairHashIndex çš„å»é‡èŠ‚æµé¢åº¦
func (s *Service) tryRepairHashIndexFast(ctx context.Context, blockHash []byte, maxProbe uint64) (bool, error) {
	if len(blockHash) == 0 {
		return false, fmt.Errorf("empty blockHash")
	}
	if s != nil && !s.repairEnabled {
		return false, fmt.Errorf("repair disabled (hash=%x)", blockHash)
	}
	if maxProbe == 0 {
		maxProbe = 256
	}

	// è¯»å–é“¾å°–
	tipKey := []byte("state:chain:tip")
	tipData, err := s.storage.Get(ctx, tipKey)
	if err != nil {
		return false, fmt.Errorf("repair_fast: read tip failed: %w", err)
	}
	if len(tipData) < 8 {
		return false, fmt.Errorf("repair_fast: tip data invalid (len=%d)", len(tipData))
	}
	tipHeight := bytesToUint64(tipData[:8])

	// è®¡ç®—æ¢æµ‹èµ·ç‚¹ï¼šæœ€è¿‘ maxProbe ä¸ªé«˜åº¦
	var start uint64
	if tipHeight > maxProbe {
		start = tipHeight - maxProbe
	} else {
		start = 0
	}

	for h := tipHeight; ; h-- {
		heightKey := []byte(fmt.Sprintf("indices:height:%d", h))
		indexData, e := s.storage.Get(ctx, heightKey)
		if e == nil && len(indexData) >= 32 {
			// æ–°/æ—§æ ¼å¼éƒ½ä»¥ 32 bytes blockHash å¼€å¤´
			if string(indexData[:32]) == string(blockHash) {
				hashKey := []byte(fmt.Sprintf("indices:hash:%x", blockHash))
				if err := s.storage.Set(ctx, hashKey, uint64ToBytes(h)); err != nil {
					return false, fmt.Errorf("repair_fast: write hash index failed: %w", err)
				}
				return true, nil
			}
		}

		if h == start {
			break
		}
		if h == 0 {
			break
		}
	}

	// æœªå‘½ä¸­å¹¶ä¸æ˜¯é”™è¯¯ï¼šå¯èƒ½è¯¥ hash ä¸åœ¨ tip é™„è¿‘ï¼Œéœ€è¦èµ°é‡æ‰«æ/æˆ–æœ¬åœ°æœ¬å°±æ²¡æœ‰è¯¥å—ã€‚
	return false, nil
}

// GetBlockByHeight æŒ‰é«˜åº¦è·å–åŒºå—
func (s *Service) GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) {
	// ä¼˜å…ˆä»å†…å­˜ç¼“å­˜è·å–ï¼Œå‡å°‘é‡å¤è¯»ç›˜
	if s.blockCache != nil {
		if cached, ok := s.blockCache.Get(height); ok && cached != nil {
			if s.logger != nil {
				s.logger.Debugf("å‘½ä¸­åŒºå—ç¼“å­˜: height=%d", height)
			}
			return cached, nil
		}
	}

	// blocks/ è®¾è®¡ï¼šåŒºå—æ•°æ®åœ¨æ–‡ä»¶ç³»ç»Ÿï¼ŒBadger ä»…å­˜ç´¢å¼•ï¼ˆheight->hash+path+sizeï¼‰
	heightKey := []byte(fmt.Sprintf("indices:height:%d", height))
	indexData, err := s.storage.Get(ctx, heightKey)
	if err != nil {
		h := height
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, types.CorruptionSeverityWarning, &h, "", string(heightKey), err)
		
		// ğŸ†• ç‰¹æ®Šå¤„ç†é«˜åº¦0ï¼šè§¦å‘åˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤
		if height == 0 {
			s.publishGenesisIndexCorruption(ctx, err)
		}
		
		return nil, fmt.Errorf("è·å–åŒºå—é«˜åº¦ç´¢å¼•å¤±è´¥: %w", err)
	}
	// indexData æ ¼å¼ï¼šblockHash(32) + filePathLen(1) + filePath(N) + fileSize(8)
	if len(indexData) < 32+1+8 {
		h := height
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, types.CorruptionSeverityCritical, &h, "", string(heightKey),
			fmt.Errorf("invalid indices:height format len=%d", len(indexData)))
		
		// ğŸ†• ç‰¹æ®Šå¤„ç†é«˜åº¦0ï¼šè§¦å‘åˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤
		if height == 0 {
			s.publishGenesisIndexCorruption(ctx, fmt.Errorf("ç´¢å¼•æ•°æ®é•¿åº¦ä¸è¶³: len=%d", len(indexData)))
		}
		
		return nil, fmt.Errorf("åŒºå—é«˜åº¦ç´¢å¼•æ•°æ®æ ¼å¼é”™è¯¯: len=%d", len(indexData))
	}
	pathLen := int(indexData[32])
	if pathLen <= 0 || len(indexData) < 33+pathLen+8 {
		h := height
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, types.CorruptionSeverityCritical, &h, "", string(heightKey),
			fmt.Errorf("invalid indices:height pathLen=%d len=%d", pathLen, len(indexData)))
		return nil, fmt.Errorf("åŒºå—é«˜åº¦ç´¢å¼•æ•°æ®æ ¼å¼é”™è¯¯: pathLen=%d len=%d", pathLen, len(indexData))
	}
	filePath := string(indexData[33 : 33+pathLen])
	fileSizeBytes := indexData[33+pathLen : 41+pathLen]
	expectedSize := bytesToUint64(fileSizeBytes)

	blockData, err := s.fileStore.Load(ctx, filePath)
	if err != nil || len(blockData) == 0 {
		h := height
		originalErr := err
		if err == nil {
			originalErr = fmt.Errorf("empty file data")
		}

		// ğŸ†• è·¯å¾„é‡è¯•æœºåˆ¶ï¼šå¦‚æœç´¢å¼•ä¸­çš„è·¯å¾„æ— æ•ˆï¼ˆå¦‚ ../blocks/...ï¼‰ï¼Œå°è¯•ç”¨æ ‡å‡†è·¯å¾„é‡è¯•
		// æ ‡å‡†è·¯å¾„æ ¼å¼ï¼šblocks/{heightSegment:010d}/{height:010d}.bin
		errClass := corruptutil.ClassifyErr(originalErr)
		if errClass == "index_path_corrupt" || errClass == "block_file_missing" {
			seg := (height / 1000) * 1000
			standardPath := fmt.Sprintf("blocks/%010d/%010d.bin", seg, height)

			// ä»…å½“ç´¢å¼•è·¯å¾„ä¸æ ‡å‡†è·¯å¾„ä¸åŒæ—¶æ‰é‡è¯•
			if standardPath != filePath {
				if s.logger != nil {
					s.logger.Warnf("ğŸ”§ ç´¢å¼•è·¯å¾„å¼‚å¸¸ï¼Œå°è¯•æ ‡å‡†è·¯å¾„é‡è¯•: height=%d indexPath=%s standardPath=%s err=%v",
						height, filePath, standardPath, originalErr)
				}

				retryData, retryErr := s.fileStore.Load(ctx, standardPath)
				if retryErr == nil && len(retryData) > 0 {
					// æ ‡å‡†è·¯å¾„åŠ è½½æˆåŠŸï¼ä½¿ç”¨é‡è¯•æ•°æ®
					blockData = retryData
					err = nil
					originalPath := filePath
					filePath = standardPath // æ›´æ–°è·¯å¾„ç”¨äºåç»­æ—¥å¿—

					if s.logger != nil {
						s.logger.Infof("âœ… æ ‡å‡†è·¯å¾„é‡è¯•æˆåŠŸ: height=%d path=%s", height, standardPath)
					}

					// ğŸ†• ç«‹å³åŒæ­¥ä¿®å¤ç´¢å¼•ï¼ˆç›´æ¥å†™å…¥æ­£ç¡®è·¯å¾„åˆ°ç´¢å¼•ï¼‰
					// è¿™æ¯”å¼‚æ­¥äº‹ä»¶æ›´å¯é ï¼Œå› ä¸ºå¼‚æ­¥äº‹ä»¶æœ‰èŠ‚æµæœºåˆ¶
					go s.repairHeightIndexPath(ctx, height, indexData, standardPath, uint64(len(retryData)), originalPath)
				}
			}
		}

		// å¦‚æœé‡è¯•åä»ç„¶å¤±è´¥ï¼Œè¿”å›åŸå§‹é”™è¯¯
		if err != nil || len(blockData) == 0 {
			s.publishCorruptionDetected(types.CorruptionPhaseReadBlock, types.CorruptionSeverityWarning, &h, "", filePath, originalErr)
			return nil, fmt.Errorf("è¯»å–åŒºå—æ–‡ä»¶å¤±è´¥: %w", originalErr)
		}
	}
	if expectedSize > 0 && uint64(len(blockData)) != expectedSize {
		h := height
		s.publishCorruptionDetected(types.CorruptionPhaseValidate, types.CorruptionSeverityWarning, &h, "", filePath,
			fmt.Errorf("block file size mismatch expected=%d got=%d", expectedSize, len(blockData)))
		// size mismatch ä¸ä¸€å®šè‡´å‘½ï¼šä»å°è¯•è§£ç ï¼Œé¿å…è¯¯æ€ï¼ˆä½†ä¼šåœ¨æ—¥å¿—/äº‹ä»¶ä¸­æš´éœ²ï¼‰
	}

	// ååºåˆ—åŒ–åŒºå—
	block := &core.Block{}
	if err := proto.Unmarshal(blockData, block); err != nil {
		h := height
		s.publishCorruptionDetected(types.CorruptionPhaseReadBlock, types.CorruptionSeverityCritical, &h, "", filePath, err)
		return nil, fmt.Errorf("ååºåˆ—åŒ–åŒºå—å¤±è´¥: %w", err)
	}
	if block.Header == nil || block.Header.Height != height {
		h := height
		s.publishCorruptionDetected(types.CorruptionPhaseValidate, types.CorruptionSeverityCritical, &h, "", filePath,
			fmt.Errorf("block height mismatch: expected=%d got=%v", height, func() interface{} {
				if block.Header == nil {
					return nil
				}
				return block.Header.Height
			}()))
		return nil, fmt.Errorf("åŒºå—æ•°æ®é«˜åº¦ä¸åŒ¹é…: expected=%d got=%v", height, func() interface{} {
			if block.Header == nil {
				return nil
			}
			return block.Header.Height
		}())
	}

	// å†™å…¥å†…å­˜ç¼“å­˜
	if s.blockCache != nil {
		s.blockCache.Put(height, block)
	}

	return block, nil
}

// GetBlockByHash æŒ‰å“ˆå¸Œè·å–åŒºå—
func (s *Service) GetBlockByHash(ctx context.Context, blockHash []byte) (*core.Block, error) {
	// 1. æ ¹æ®å“ˆå¸Œè·å–åŒºå—é«˜åº¦
	// é”®æ ¼å¼ï¼šindices:hash:{hash}
	hashKey := []byte(fmt.Sprintf("indices:hash:%x", blockHash))
	heightBytes, err := s.storage.Get(ctx, hashKey)
	if err != nil {
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, types.CorruptionSeverityWarning, nil, fmt.Sprintf("%x", blockHash), string(hashKey), err)
		return nil, fmt.Errorf("è·å–åŒºå—é«˜åº¦å¤±è´¥: %w", err)
	}

	if len(heightBytes) != 8 {
		// BadgerStore.Getï¼škey ä¸å­˜åœ¨æ—¶ (nil, nil)ï¼Œå› æ­¤ got_len=0 å¾€å¾€æ˜¯â€œç´¢å¼•ç¼ºå¤±â€è€Œéâ€œç´¢å¼•æŸåâ€ã€‚
		// è¿™é‡Œå°† len==0 è§†ä¸º Warningï¼Œé¿å…æŠŠâ€œç¼ºç´¢å¼•â€è¿‡åº¦ä¸Šå‡ä¸º Criticalã€‚
		severity := types.CorruptionSeverityCritical
		if len(heightBytes) == 0 {
			severity = types.CorruptionSeverityWarning
		}
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, severity, nil, fmt.Sprintf("%x", blockHash), string(hashKey),
			fmt.Errorf("åŒºå—é«˜åº¦æ•°æ®æ ¼å¼é”™è¯¯ï¼šé•¿åº¦åº”ä¸º8å­—èŠ‚ (key=%s hash=%x got_len=%d)", string(hashKey), blockHash, len(heightBytes)))

		// âœ… å¿«é€Ÿè‡ªæ„ˆï¼šå…ˆåš tip é™„è¿‘å°çª—å£æ¢æµ‹ï¼ˆé¿å…æ¯æ¬¡éƒ½è§¦å‘æ˜‚è´µæ‰«ææˆ–è¢«èŠ‚æµï¼‰
		if ok, fastErr := s.tryRepairHashIndexFast(ctx, blockHash, 256); fastErr == nil && ok {
			heightBytes, err = s.storage.Get(ctx, hashKey)
			if err != nil {
				return nil, fmt.Errorf("è·å–åŒºå—é«˜åº¦å¤±è´¥(å¿«é€Ÿä¿®å¤åé‡è¯•): %w", err)
			}
			if len(heightBytes) == 8 {
				height := bytesToUint64(heightBytes)
				return s.GetBlockByHeight(ctx, height)
			}
			// fast ä¿®å¤æœªèƒ½å¾—åˆ°æœ‰æ•ˆå€¼ï¼šç»§ç»­èµ°é‡æ‰«æä¿®å¤
		}

		// âœ… ç”Ÿäº§åŒ–è‡ªæ„ˆï¼šç´¢å¼•æŸå/ç¼ºå¤±æ—¶å°è¯•é‡æ‰«æä¿®å¤ä¸€æ¬¡ï¼Œå†é‡è¯•è¯»å–
		if repairErr := s.tryRepairHashIndex(ctx, blockHash); repairErr == nil {
			heightBytes, err = s.storage.Get(ctx, hashKey)
			if err != nil {
				return nil, fmt.Errorf("è·å–åŒºå—é«˜åº¦å¤±è´¥(ä¿®å¤åé‡è¯•): %w", err)
			}
			if len(heightBytes) != 8 {
				return nil, fmt.Errorf("åŒºå—é«˜åº¦æ•°æ®æ ¼å¼é”™è¯¯ï¼šé•¿åº¦åº”ä¸º8å­—èŠ‚ (key=%s hash=%x got_len=%d repair=applied_but_still_invalid)",
					string(hashKey), blockHash, len(heightBytes))
			}
		} else {
			if s.logger != nil {
				s.logger.Warnf("ğŸ©¹ auto_repair failed: hash=%x err=%v", blockHash, repairErr)
			}
			s.publishRepairResult(false, "rebuild_hash_index", string(hashKey), fmt.Sprintf("%x", blockHash), nil, "scan window failed", repairErr)
			return nil, fmt.Errorf("åŒºå—é«˜åº¦æ•°æ®æ ¼å¼é”™è¯¯ï¼šé•¿åº¦åº”ä¸º8å­—èŠ‚ (key=%s hash=%x got_len=%d)ï¼›auto_repair_failed=%v",
				string(hashKey), blockHash, len(heightBytes), repairErr)
		}
	}

	height := bytesToUint64(heightBytes)

	// 2. æ ¹æ®é«˜åº¦è·å–åŒºå—ï¼ˆå¤ç”¨ GetBlockByHeightï¼‰
	return s.GetBlockByHeight(ctx, height)
}

// GetBlockHeader è·å–åŒºå—å¤´
func (s *Service) GetBlockHeader(ctx context.Context, blockHash []byte) (*core.BlockHeader, error) {
	// è·å–å®Œæ•´åŒºå—
	block, err := s.GetBlockByHash(ctx, blockHash)
	if err != nil {
		return nil, err
	}

	// è¿”å›åŒºå—å¤´
	return block.Header, nil
}

// GetBlockRange è·å–åŒºå—èŒƒå›´
func (s *Service) GetBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error) {
	// éªŒè¯å‚æ•°
	if startHeight > endHeight {
		return nil, fmt.Errorf("èµ·å§‹é«˜åº¦ä¸èƒ½å¤§äºç»“æŸé«˜åº¦")
	}

	// è·å–åŒºå—åˆ—è¡¨
	blocks := make([]*core.Block, 0, endHeight-startHeight+1)
	for height := startHeight; height <= endHeight; height++ {
		block, err := s.GetBlockByHeight(ctx, height)
		if err != nil {
			return nil, fmt.Errorf("è·å–é«˜åº¦ %d çš„åŒºå—å¤±è´¥: %w", height, err)
		}
		blocks = append(blocks, block)
	}

	return blocks, nil
}

// GetHighestBlock è·å–æœ€é«˜åŒºå—ä¿¡æ¯
func (s *Service) GetHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error) {
	// è·å–é“¾å°–çŠ¶æ€ï¼ˆéµå¾ª data-architecture.md è§„èŒƒï¼‰
	// é”®æ ¼å¼ï¼šstate:chain:tip
	tipKey := []byte("state:chain:tip")
	tipData, err := s.storage.Get(ctx, tipKey)
	if err != nil {
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, types.CorruptionSeverityWarning, nil, "", string(tipKey), err)
		return 0, nil, fmt.Errorf("è·å–é“¾å°–çŠ¶æ€å¤±è´¥: %w", err)
	}

	if len(tipData) < 40 {
		s.publishCorruptionDetected(types.CorruptionPhaseReadIndex, types.CorruptionSeverityCritical, nil, "", string(tipKey), fmt.Errorf("é“¾å°–æ•°æ®æ ¼å¼é”™è¯¯"))
		return 0, nil, fmt.Errorf("é“¾å°–æ•°æ®æ ¼å¼é”™è¯¯")
	}

	height = bytesToUint64(tipData[:8])
	blockHash = tipData[8:40]

	return height, blockHash, nil
}

// bytesToUint64 å°†å­—èŠ‚æ•°ç»„è½¬æ¢ä¸ºuint64
func bytesToUint64(b []byte) uint64 {
	if len(b) != 8 {
		return 0
	}
	return uint64(b[0])<<56 | uint64(b[1])<<48 | uint64(b[2])<<40 | uint64(b[3])<<32 |
		uint64(b[4])<<24 | uint64(b[5])<<16 | uint64(b[6])<<8 | uint64(b[7])
}

// repairHeightIndexPath ç«‹å³ä¿®å¤ç´¢å¼•ä¸­çš„é”™è¯¯è·¯å¾„
//
// ğŸ¯ **åŒæ­¥ä¿®å¤ç­–ç•¥**ï¼š
// å½“æ£€æµ‹åˆ°ç´¢å¼•è·¯å¾„æŸåï¼ˆå¦‚ ../blocks/...ï¼‰å¹¶é€šè¿‡æ ‡å‡†è·¯å¾„æˆåŠŸåŠ è½½åŒºå—åï¼Œ
// ç«‹å³ä¿®å¤ç´¢å¼•ï¼Œè€Œä¸æ˜¯ä¾èµ–å¼‚æ­¥äº‹ä»¶ï¼ˆå¼‚æ­¥äº‹ä»¶æœ‰èŠ‚æµæœºåˆ¶ï¼Œå¤§é‡æŸåæ—¶æ•ˆç‡ä½ï¼‰ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - height: åŒºå—é«˜åº¦
//   - oldIndexData: åŸå§‹ç´¢å¼•æ•°æ®ï¼ˆåŒ…å« blockHashï¼‰
//   - correctPath: æ­£ç¡®çš„è·¯å¾„
//   - fileSize: æ–‡ä»¶å¤§å°
//   - originalPath: åŸå§‹é”™è¯¯è·¯å¾„ï¼ˆç”¨äºæ—¥å¿—ï¼‰
func (s *Service) repairHeightIndexPath(ctx context.Context, height uint64, oldIndexData []byte, correctPath string, fileSize uint64, originalPath string) {
	if s.storage == nil {
		return
	}

	// ä»åŸå§‹ç´¢å¼•æ•°æ®ä¸­æå– blockHashï¼ˆå‰32å­—èŠ‚ï¼‰
	if len(oldIndexData) < 32 {
		if s.logger != nil {
			s.logger.Warnf("ğŸ”§ ç´¢å¼•ä¿®å¤å¤±è´¥: height=%d åŸå§‹ç´¢å¼•æ•°æ®ä¸è¶³ (len=%d)", height, len(oldIndexData))
		}
		return
	}
	blockHash := oldIndexData[:32]

	// æ„å»ºæ–°çš„ç´¢å¼•å€¼ï¼šblockHash(32) + filePathLen(1) + filePath(N) + fileSize(8)
	pathBytes := []byte(correctPath)
	newIndexValue := make([]byte, 32+1+len(pathBytes)+8)
	copy(newIndexValue[0:32], blockHash)
	newIndexValue[32] = byte(len(pathBytes))
	copy(newIndexValue[33:33+len(pathBytes)], pathBytes)
	copy(newIndexValue[33+len(pathBytes):41+len(pathBytes)], uint64ToBytes(fileSize))

	// å†™å…¥ä¿®å¤åçš„ç´¢å¼•
	heightKey := fmt.Sprintf("indices:height:%d", height)
	if err := s.storage.Set(ctx, []byte(heightKey), newIndexValue); err != nil {
		if s.logger != nil {
			s.logger.Warnf("ğŸ”§ ç´¢å¼•ä¿®å¤å†™å…¥å¤±è´¥: height=%d err=%v", height, err)
		}
		return
	}

	if s.logger != nil {
		s.logger.Infof("ğŸ”§ ç´¢å¼•è·¯å¾„å·²ä¿®å¤: height=%d oldPath=%s newPath=%s", height, originalPath, correctPath)
	}
}

// ç¼–è¯‘æ—¶æ£€æŸ¥æ¥å£å®ç°
var _ interfaces.InternalBlockQuery = (*Service)(nil)
