package repair

import (
	"context"
	"encoding/binary"
	"fmt"

	"google.golang.org/protobuf/proto"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// RepairGenesisIndex ä¿®å¤åˆ›ä¸–åŒºå—ç´¢å¼•
//
// ğŸ¯ **åˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤å™¨**ï¼šä» blocks æ–‡ä»¶é‡å»ºåˆ›ä¸–åŒºå—ç´¢å¼•
//
// ç­–ç•¥ï¼š
// 1. ä» blocks/0000000000/0000000000.bin è¯»å–åˆ›ä¸–åŒºå—æ–‡ä»¶
// 2. ååºåˆ—åŒ–å¹¶éªŒè¯åŒºå—
// 3. è®¡ç®—åŒºå—å“ˆå¸Œ
// 4. é‡å»º indices:height:0 å’Œ indices:hash:<hash> ç´¢å¼•
// 5. å¦‚æœ state:chain:tip é«˜åº¦ä¸º0æˆ–ä¸å­˜åœ¨ï¼Œä¸€å¹¶ä¿®å¤
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - store: BadgerDBå­˜å‚¨ï¼ˆç”¨äºå†™å…¥ç´¢å¼•ï¼‰
//   - fileStore: æ–‡ä»¶å­˜å‚¨ï¼ˆç”¨äºè¯»å–åŒºå—æ–‡ä»¶ï¼‰
//   - blockHashClient: åŒºå—å“ˆå¸Œè®¡ç®—æœåŠ¡å®¢æˆ·ç«¯
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥æ—¶è¿”å›é”™è¯¯ï¼Œnilè¡¨ç¤ºæˆåŠŸ
func RepairGenesisIndex(
	ctx context.Context,
	store storage.BadgerStore,
	fileStore storage.FileStore,
	blockHashClient core.BlockHashServiceClient,
	logger log.Logger,
) error {
	if logger != nil {
		logger.Info("ğŸ©¹ å¼€å§‹ä¿®å¤åˆ›ä¸–åŒºå—ç´¢å¼•...")
	}

	// 1. ä»æ–‡ä»¶ç³»ç»Ÿè¯»å–åˆ›ä¸–åŒºå—
	//
	// æ³¨æ„ï¼šWriter ä¾§å†™å…¥ blocks æ–‡ä»¶ä½¿ç”¨çš„æ˜¯ blocks/...ï¼ˆblocks/ ä¸ files/ åŒçº§ï¼‰
	// è¯¦è§ internal/core/persistence/writer/block.go
	blockFilePath := "blocks/0000000000/0000000000.bin"
	blockBytes, err := fileStore.Load(ctx, blockFilePath)
	if err != nil {
		if logger != nil {
			logger.Errorf("âŒ è¯»å–åˆ›ä¸–åŒºå—æ–‡ä»¶å¤±è´¥: path=%s err=%v", blockFilePath, err)
		}
		return fmt.Errorf("è¯»å–åˆ›ä¸–åŒºå—æ–‡ä»¶å¤±è´¥: %w", err)
	}

	if len(blockBytes) == 0 {
		if logger != nil {
			logger.Errorf("âŒ åˆ›ä¸–åŒºå—æ–‡ä»¶ä¸ºç©º: path=%s", blockFilePath)
		}
		return fmt.Errorf("åˆ›ä¸–åŒºå—æ–‡ä»¶ä¸ºç©º: path=%s", blockFilePath)
	}

	// 2. ååºåˆ—åŒ–åŒºå—
	genesisBlock := &core.Block{}
	if err := proto.Unmarshal(blockBytes, genesisBlock); err != nil {
		if logger != nil {
			logger.Errorf("âŒ ååºåˆ—åŒ–åˆ›ä¸–åŒºå—å¤±è´¥: err=%v", err)
		}
		return fmt.Errorf("ååºåˆ—åŒ–åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// éªŒè¯åŒºå—é«˜åº¦
	if genesisBlock.Header == nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—å¤´ä¸ºç©º")
	}
	if genesisBlock.Header.Height != 0 {
		if logger != nil {
			logger.Errorf("âŒ åŒºå—é«˜åº¦ä¸ä¸º0: height=%d", genesisBlock.Header.Height)
		}
		return fmt.Errorf("åŒºå—é«˜åº¦ä¸ä¸º0: height=%d", genesisBlock.Header.Height)
	}

	// 3. è®¡ç®—åŒºå—å“ˆå¸Œ
	req := &core.ComputeBlockHashRequest{
		Block: genesisBlock,
	}
	resp, err := blockHashClient.ComputeBlockHash(ctx, req)
	if err != nil {
		if logger != nil {
			logger.Errorf("âŒ è®¡ç®—åˆ›ä¸–åŒºå—å“ˆå¸Œå¤±è´¥: err=%v", err)
		}
		return fmt.Errorf("è®¡ç®—åˆ›ä¸–åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}
	if !resp.IsValid {
		return fmt.Errorf("åˆ›ä¸–åŒºå—ç»“æ„æ— æ•ˆ")
	}
	
	genesisHash := resp.Hash

	if len(genesisHash) != 32 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®: len=%d (expected=32)", len(genesisHash))
	}

	if logger != nil {
		logger.Infof("ğŸ” åˆ›ä¸–åŒºå—ä¿¡æ¯: height=0 hash=%x path=%s", genesisHash[:8], blockFilePath)
	}

	// 4. é‡å»ºç´¢å¼•
	//
	// indices:height:{h} å€¼æ ¼å¼å¿…é¡»ä¸ Query/Writer ä¿æŒä¸€è‡´ï¼š
	// blockHash(32) + filePathLen(1) + filePath(N) + fileSize(8)
	// è¯¦è§ï¼š
	// - internal/core/persistence/query/block/service.go
	// - internal/core/persistence/writer/block.go
	heightKey := []byte("indices:height:0")
	pathBytes := []byte(blockFilePath)
	if len(pathBytes) > 255 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—è·¯å¾„è¿‡é•¿ï¼Œæ— æ³•å†™å…¥é«˜åº¦ç´¢å¼•: pathLen=%d", len(pathBytes))
	}
	heightValue := make([]byte, 32+1+len(pathBytes)+8)
	copy(heightValue[0:32], genesisHash)
	heightValue[32] = byte(len(pathBytes))
	copy(heightValue[33:33+len(pathBytes)], pathBytes)
	binary.BigEndian.PutUint64(heightValue[33+len(pathBytes):41+len(pathBytes)], uint64(len(blockBytes)))

	if err := store.Set(ctx, heightKey, heightValue); err != nil {
		if logger != nil {
			logger.Errorf("âŒ å†™å…¥é«˜åº¦ç´¢å¼•å¤±è´¥: key=%s err=%v", string(heightKey), err)
		}
		return fmt.Errorf("å†™å…¥é«˜åº¦ç´¢å¼•å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("âœ… é«˜åº¦ç´¢å¼•å·²é‡å»º: key=%s value_len=%d", string(heightKey), len(heightValue))
	}

	// 4.2 indices:hash:<hash> = height(8 bytes)
	hashKey := []byte(fmt.Sprintf("indices:hash:%x", genesisHash))
	hashValue := make([]byte, 8)
	binary.BigEndian.PutUint64(hashValue, 0)

	if err := store.Set(ctx, hashKey, hashValue); err != nil {
		if logger != nil {
			logger.Errorf("âŒ å†™å…¥å“ˆå¸Œç´¢å¼•å¤±è´¥: key=%s err=%v", string(hashKey), err)
		}
		return fmt.Errorf("å†™å…¥å“ˆå¸Œç´¢å¼•å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("âœ… å“ˆå¸Œç´¢å¼•å·²é‡å»º: key=indices:hash:%x... height=0", genesisHash[:8])
	}

	// 4.3 å¦‚æœ state:chain:tip ä¸å­˜åœ¨æˆ–é«˜åº¦ä¸º0ï¼Œä¹Ÿä¸€å¹¶ä¿®å¤
	tipKey := []byte("state:chain:tip")
	tipData, _ := store.Get(ctx, tipKey)

	shouldRepairTip := false
	if len(tipData) < 8 {
		// tipä¸å­˜åœ¨æˆ–æ ¼å¼é”™è¯¯
		shouldRepairTip = true
		if logger != nil {
			logger.Infof("ğŸ” é“¾å°–ä¸å­˜åœ¨æˆ–æ ¼å¼é”™è¯¯: len=%d", len(tipData))
		}
	} else {
		tipHeight := binary.BigEndian.Uint64(tipData[:8])
		if tipHeight == 0 {
			// tipé«˜åº¦ä¸º0ï¼Œå¯èƒ½éœ€è¦ä¿®å¤å“ˆå¸Œéƒ¨åˆ†
			shouldRepairTip = true
			if logger != nil {
				logger.Infof("ğŸ” é“¾å°–é«˜åº¦ä¸º0ï¼Œæ£€æŸ¥å“ˆå¸Œéƒ¨åˆ†")
			}
		}
	}

	if shouldRepairTip {
		tipValue := make([]byte, 40)
		binary.BigEndian.PutUint64(tipValue[0:8], 0)
		copy(tipValue[8:40], genesisHash)

		if err := store.Set(ctx, tipKey, tipValue); err != nil {
			if logger != nil {
				logger.Warnf("âš ï¸ ä¿®å¤é“¾å°–å¤±è´¥ (éè‡´å‘½): err=%v", err)
			}
			// ä¸è¿”å›é”™è¯¯ï¼Œå› ä¸ºè¿™ä¸æ˜¯å…³é”®å¤±è´¥
		} else {
			if logger != nil {
				logger.Infof("âœ… é“¾å°–å·²ä¿®å¤: height=0 hash=%x", genesisHash[:8])
			}
		}
	}

	if logger != nil {
		logger.Infof("âœ… åˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤æˆåŠŸ: hash=%x", genesisHash[:8])
	}

	return nil
}

