// Package writer å®ç°åŒºå—æ•°æ®å†™å…¥é€»è¾‘
//
// ğŸ“¦ **åŒºå—æ•°æ®å†™å…¥ (Block Data Writing)**
//
// æœ¬æ–‡ä»¶å®ç°åŒºå—æ•°æ®çš„å†™å…¥é€»è¾‘ï¼ŒåŒ…æ‹¬åŒºå—åºåˆ—åŒ–ã€å“ˆå¸Œè®¡ç®—ã€
// æ–‡ä»¶å­˜å‚¨å’Œç´¢å¼•æ›´æ–°ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - åºåˆ—åŒ–åŒºå—æ•°æ®
// - è®¡ç®—åŒºå—å“ˆå¸Œ
// - å†™å…¥åŒºå—æ–‡ä»¶ï¼ˆå¦‚æœä½¿ç”¨æ–‡ä»¶å­˜å‚¨ï¼‰
// - å†™å…¥åŒºå—ç´¢å¼•ï¼ˆé«˜åº¦ç´¢å¼•ã€å“ˆå¸Œç´¢å¼•ï¼‰
package writer

import (
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"google.golang.org/protobuf/proto"
)

// writeBlockData å­˜å‚¨åŒºå—æ•°æ®
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// å°†åŒºå—æ•°æ®å†™å…¥å­˜å‚¨ï¼ŒåŒ…æ‹¬ï¼š
// - åŒºå—æ–‡ä»¶å­˜å‚¨ï¼ˆæ–‡ä»¶ç³»ç»Ÿï¼šblocks/{segment}/{height}.binï¼‰
// - åŒºå—ç´¢å¼•ï¼ˆBadgerDBï¼šé«˜åº¦ç´¢å¼•ã€å“ˆå¸Œç´¢å¼•ï¼‰
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. åºåˆ—åŒ–åŒºå—æ•°æ®
// 2. è®¡ç®—åŒºå—å“ˆå¸Œ
// 3. è®¡ç®—å­˜å‚¨è·¯å¾„ï¼ˆæŒ‰é«˜åº¦æ®µç»„ç»‡ï¼šæ¯1000ä¸ªä¸€æ®µï¼‰
// 4. å†™å…¥åŒºå—æ–‡ä»¶åˆ°æ–‡ä»¶ç³»ç»Ÿ
// 5. å†™å…¥åŒºå—ç´¢å¼•åˆ° BadgerDBï¼ˆindices:height:{height} â†’ {blockHash, filePath, fileSize}ï¼‰
// 6. å†™å…¥åŒºå—å“ˆå¸Œç´¢å¼•ï¼ˆindices:hash:{hash} â†’ heightï¼‰
//
// âš ï¸ **æ³¨æ„äº‹é¡¹**ï¼š
// - âœ… è®¾è®¡çº¦æŸï¼ˆå¯¹é½ _devï¼‰ï¼šåŒºå—åŸå§‹æ•°æ®è½ç›˜åˆ° blocks/ ç›®å½•ï¼ŒBadger ä»…å­˜ç´¢å¼•ä¸é“¾å…ƒæ•°æ®
// - ç´¢å¼•å€¼æ ¼å¼ï¼šblockHash(32å­—èŠ‚) + filePathé•¿åº¦(1å­—èŠ‚) + filePath(Nå­—èŠ‚) + fileSize(8å­—èŠ‚)
func (s *Service) writeBlockData(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	// 1. è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆä½¿ç”¨ gRPC æœåŠ¡ï¼‰
	if s.blockHashClient == nil {
		return fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}

	req := &core.ComputeBlockHashRequest{
		Block: block,
	}
	resp, err := s.blockHashClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return fmt.Errorf("è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	blockHash := resp.Hash

	// 2. åºåˆ—åŒ–åŒºå—æ•°æ®
	blockData, err := proto.Marshal(block)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–åŒºå—å¤±è´¥: %w", err)
	}

	// 3. è®¡ç®—å­˜å‚¨è·¯å¾„ï¼ˆæŒ‰é«˜åº¦æ®µç»„ç»‡ï¼Œæ¯1000ä¸ªä¸€æ®µï¼‰
	// æ ¼å¼ï¼šblocks/{heightSegment:010d}/{height:010d}.bin
	// ä¾‹å¦‚ï¼šblocks/0000000000/0000000001.bin, blocks/0000001000/0000001000.bin
	heightSegment := (block.Header.Height / 1000) * 1000
	fileName := fmt.Sprintf("%010d.bin", block.Header.Height)

	// 4. å†™å…¥åŒºå—æ–‡ä»¶åˆ°æ–‡ä»¶ç³»ç»Ÿ
	// è¯´æ˜ï¼šFileStore æ ¹ç›®å½•æ˜¯ {instance_data_dir}/filesï¼Œä½†å…è®¸é€šè¿‡ blocks/... è®¿é—®åŒçº§çš„ {instance_data_dir}/blocksã€‚
	blockFilePath := fmt.Sprintf("blocks/%010d/%s", heightSegment, fileName)
	if s.fileStore == nil {
		return fmt.Errorf("fileStore æœªåˆå§‹åŒ–")
	}
	blockDirPath := fmt.Sprintf("blocks/%010d", heightSegment)
	if err := s.fileStore.MakeDir(ctx, blockDirPath, true); err != nil {
		return fmt.Errorf("åˆ›å»ºåŒºå—ç›®å½•å¤±è´¥: %w", err)
	}
	if err := s.fileStore.Save(ctx, blockFilePath, blockData); err != nil {
		return fmt.Errorf("å†™å…¥åŒºå—æ–‡ä»¶å¤±è´¥: %w", err)
	}

	// 5. å­˜å‚¨åŒºå—ç´¢å¼•ï¼ˆé«˜åº¦ -> {blockHash, filePath, fileSize}ï¼‰
	// é”®æ ¼å¼ï¼šindices:height:{height}
	// å€¼æ ¼å¼ï¼šblockHash(32) + filePathLen(1) + filePath(N) + fileSize(8)
	filePathBytes := []byte(blockFilePath) // åœ¨ç´¢å¼•ä¸­å­˜å‚¨ blocks/...ï¼Œä¾¿äº Query å±‚ç›´æ¥ Load
	indexValue := make([]byte, 32+1+len(filePathBytes)+8)
	copy(indexValue[0:32], blockHash)
	indexValue[32] = byte(len(filePathBytes))
	copy(indexValue[33:33+len(filePathBytes)], filePathBytes)
	copy(indexValue[33+len(filePathBytes):41+len(filePathBytes)], uint64ToBytes(uint64(len(blockData))))

	heightKey := fmt.Sprintf("indices:height:%d", block.Header.Height)
	if err := tx.Set([]byte(heightKey), indexValue); err != nil {
		return fmt.Errorf("å­˜å‚¨åŒºå—é«˜åº¦ç´¢å¼•å¤±è´¥: %w", err)
	}

	// 6. å­˜å‚¨åŒºå—å“ˆå¸Œç´¢å¼•ï¼ˆå“ˆå¸Œ -> heightï¼‰
	hashKey := fmt.Sprintf("indices:hash:%x", blockHash)
	heightBytes := uint64ToBytes(block.Header.Height)
	if err := tx.Set([]byte(hashKey), heightBytes); err != nil {
		return fmt.Errorf("å­˜å‚¨åŒºå—å“ˆå¸Œç´¢å¼•å¤±è´¥: %w", err)
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… åŒºå—æ•°æ®å·²å­˜å‚¨(blocks/): height=%d, hash=%x, size=%d bytes, path=%s",
			block.Header.Height, blockHash[:8], len(blockData), blockFilePath)
	}

	return nil
}
