// Package writer å®ç°é“¾çŠ¶æ€æ›´æ–°é€»è¾‘
//
// â›“ï¸ **é“¾çŠ¶æ€æ›´æ–° (Chain State Update)**
//
// æœ¬æ–‡ä»¶å®ç°é“¾çŠ¶æ€çš„æ›´æ–°é€»è¾‘ï¼ŒåŒ…æ‹¬é“¾å°–å’ŒçŠ¶æ€æ ¹æ›´æ–°ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æ›´æ–°é“¾å°–ï¼ˆstate:chain:tipï¼‰
// - æ›´æ–°çŠ¶æ€æ ¹ï¼ˆstate:chain:rootï¼‰
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - é“¾å°–æ ¼å¼ï¼šheight(8å­—èŠ‚) + blockHash(32å­—èŠ‚)
// - çŠ¶æ€æ ¹æ ¼å¼ï¼šstateRoot(32å­—èŠ‚)
package writer

import (
	"context"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// writeChainState æ›´æ–°é“¾çŠ¶æ€
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æ›´æ–°é“¾çš„å½“å‰çŠ¶æ€ï¼ŒåŒ…æ‹¬é“¾å°–å’ŒçŠ¶æ€æ ¹ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆBlockHeader ä¸åŒ…å« Hash å­—æ®µï¼Œéœ€è¦è®¡ç®—ï¼‰
// 2. æ›´æ–°é“¾å°–ï¼ˆstate:chain:tipï¼‰
//   - å€¼æ ¼å¼ï¼šheight(8å­—èŠ‚) + blockHash(32å­—èŠ‚)
//
// 3. æ›´æ–°çŠ¶æ€æ ¹ï¼ˆstate:chain:rootï¼‰
//   - å€¼æ ¼å¼ï¼šstateRoot(32å­—èŠ‚)
//   - ä»åŒºå—å¤´çš„ StateRoot è·å–
//
// âš ï¸ **æ³¨æ„äº‹é¡¹**ï¼š
// - é“¾å°–å¿…é¡»åŸå­æ€§æ›´æ–°
// - åŒºå—å“ˆå¸Œéœ€è¦è®¡ç®—ï¼ˆBlockHeader ä¸åŒ…å« Hash å­—æ®µï¼‰
// - çŠ¶æ€æ ¹ä»åŒºå—å¤´çš„ StateRoot è·å–
func (s *Service) writeChainState(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	if s.blockHashClient == nil {
		return fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}

	// 1. è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆBlockHeader ä¸åŒ…å« Hash å­—æ®µï¼Œéœ€è¦è®¡ç®—ï¼Œä½¿ç”¨ gRPC æœåŠ¡ï¼‰
	req := &core.ComputeBlockHashRequest{
		Block: block,
	}
	resp, err := s.blockHashClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return fmt.Errorf("è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	blockHash := resp.Hash

	// 2. æ›´æ–°é“¾å°–ï¼ˆstate:chain:tipï¼‰
	// å€¼æ ¼å¼ï¼šheight(8å­—èŠ‚) + blockHash(32å­—èŠ‚)
	tipKey := []byte("state:chain:tip")
	tipValue := make([]byte, 8+32)
	copy(tipValue[0:8], uint64ToBytes(block.Header.Height))
	copy(tipValue[8:40], blockHash)
	if err := tx.Set(tipKey, tipValue); err != nil {
		return fmt.Errorf("æ›´æ–°é“¾å°–å¤±è´¥: %w", err)
	}

	// 3. æ›´æ–°çŠ¶æ€æ ¹ï¼ˆstate:chain:rootï¼‰
	// âš ï¸ **çŠ¶æ€æ ¹æ›´æ–°ç­–ç•¥**ï¼š
	// - ä¼˜å…ˆä½¿ç”¨åŒºå—å¤´ä¸­çš„ StateRootï¼ˆå¦‚æœå­˜åœ¨ï¼‰
	// - å¦‚æœåŒºå—å¤´ä¸­çš„ StateRoot ä¸ºç©ºï¼ŒçŠ¶æ€æ ¹ä¼šåœ¨äº‹åŠ¡æäº¤åé€šè¿‡ updateStateRootAfterUTXOChanges æ›´æ–°
	// - çŠ¶æ€æ ¹åæ˜ å½“å‰æ‰€æœ‰ UTXO çš„çŠ¶æ€ï¼Œåº”è¯¥åœ¨ UTXO å˜æ›´åç«‹å³æ›´æ–°
	if len(block.Header.StateRoot) > 0 && len(block.Header.StateRoot) == 32 {
		stateRootKey := []byte("state:chain:root")
		if err := tx.Set(stateRootKey, block.Header.StateRoot); err != nil {
			return fmt.Errorf("æ›´æ–°çŠ¶æ€æ ¹å¤±è´¥: %w", err)
		}
	} else {
		// åŒºå—å¤´ä¸­çš„ StateRoot ä¸ºç©ºæˆ–æ— æ•ˆï¼ŒçŠ¶æ€æ ¹ä¼šåœ¨äº‹åŠ¡æäº¤åæ›´æ–°
		if s.logger != nil {
			s.logger.Debug("âš ï¸ åŒºå—å¤´ä¸­çš„ StateRoot ä¸ºç©ºæˆ–æ— æ•ˆï¼Œå°†åœ¨äº‹åŠ¡æäº¤åæ›´æ–°")
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… é“¾çŠ¶æ€å·²æ›´æ–°: height=%d, hash=%x",
			block.Header.Height, blockHash[:8])
	}

	return nil
}
