// Package writer æä¾› DataWriter æœåŠ¡çš„æµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•æ–‡ä»¶**
//
// æœ¬æ–‡ä»¶æµ‹è¯• DataWriter æœåŠ¡çš„æ ¸å¿ƒåŠŸèƒ½ï¼Œéµå¾ªæµ‹è¯•è§„èŒƒï¼š
// - docs/system/standards/principles/testing-standards.md
//
// ğŸ¯ **æµ‹è¯•è¦†ç›–**ï¼š
// - æœåŠ¡åˆ›å»º
// - åŒºå—å†™å…¥ï¼ˆå•ä¸ªå’Œæ‰¹é‡ï¼‰
// - é«˜åº¦éªŒè¯
// - äº‹åŠ¡åŸå­æ€§
// - é”™è¯¯å¤„ç†
package writer

import (
	"context"
	"fmt"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/persistence/testutil"
	_ "github.com/weisyn/v1/internal/core/infrastructure/writegate" // æ³¨å†Œ WriteGate é»˜è®¤å®ç°ï¼Œé¿å…å•æµ‹ä¸­ writegate.Default() panic
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== æœåŠ¡åˆ›å»ºæµ‹è¯• ====================

// TestNewService_WithValidDependencies_ReturnsService æµ‹è¯•ä½¿ç”¨æœ‰æ•ˆä¾èµ–åˆ›å»ºæœåŠ¡
func TestNewService_WithValidDependencies_ReturnsService(t *testing.T) {
	// Arrange
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()

	// Act
	service := NewService(storage, fileStore, blockHashClient, txHashClient, logger)

	// Assert
	assert.NotNil(t, service)
}

// TestNewService_WithNilStorage_ReturnsService æµ‹è¯•ä½¿ç”¨ nil storage åˆ›å»ºæœåŠ¡
// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nilï¼Œå…è®¸åˆ›å»ºä½†ä¼šåœ¨ä½¿ç”¨æ—¶å¤±è´¥
func TestNewService_WithNilStorage_ReturnsService(t *testing.T) {
	// Arrange
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()

	// Act
	service := NewService(nil, fileStore, blockHashClient, txHashClient, logger)

	// Assert
	// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nilï¼Œå…è®¸åˆ›å»º
	assert.NotNil(t, service)
}

// ==================== åŒºå—å†™å…¥æµ‹è¯• ====================

// TestWriteBlock_WithGenesisBlock_WritesSuccessfully æµ‹è¯•å†™å…¥åˆ›ä¸–åŒºå—
func TestWriteBlock_WithGenesisBlock_WritesSuccessfully(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	genesisBlock := testutil.CreateBlock(0, nil)

	// Act
	err := service.WriteBlock(ctx, genesisBlock)

	// Assert
	assert.NoError(t, err)

	// éªŒè¯é“¾å°–å·²æ›´æ–°
	tipKey := []byte("state:chain:tip")
	tipData, err := storage.Get(ctx, tipKey)
	assert.NoError(t, err)
	assert.NotNil(t, tipData)
	assert.GreaterOrEqual(t, len(tipData), 8, "é“¾å°–æ•°æ®åº”è¯¥è‡³å°‘åŒ…å«8å­—èŠ‚é«˜åº¦")
}

// TestWriteBlock_WithSequentialBlocks_WritesSuccessfully æµ‹è¯•é¡ºåºå†™å…¥åŒºå—
func TestWriteBlock_WithSequentialBlocks_WritesSuccessfully(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// å…ˆå†™å…¥åˆ›ä¸–åŒºå—
	genesisBlock := testutil.CreateBlock(0, nil)
	err := service.WriteBlock(ctx, genesisBlock)
	require.NoError(t, err)

	// è®¡ç®—åˆ›ä¸–åŒºå—å“ˆå¸Œï¼ˆç”¨äºä¸‹ä¸€ä¸ªåŒºå—çš„ PreviousHashï¼‰
	hashResp, err := blockHashClient.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{Block: genesisBlock}, nil)
	require.NoError(t, err)
	genesisHash := hashResp.Hash

	// Act - å†™å…¥é«˜åº¦1çš„åŒºå—
	block1 := testutil.CreateBlock(1, genesisHash)
	err = service.WriteBlock(ctx, block1)

	// Assert
	assert.NoError(t, err)

	// éªŒè¯é“¾å°–å·²æ›´æ–°ä¸ºé«˜åº¦1
	tipKey := []byte("state:chain:tip")
	tipData, err := storage.Get(ctx, tipKey)
	assert.NoError(t, err)
	assert.NotNil(t, tipData)
}

// TestWriteBlock_WithInvalidHeight_ReturnsError æµ‹è¯•å†™å…¥æ— æ•ˆé«˜åº¦çš„åŒºå—
func TestWriteBlock_WithInvalidHeight_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// å…ˆå†™å…¥åˆ›ä¸–åŒºå—
	genesisBlock := testutil.CreateBlock(0, nil)
	err := service.WriteBlock(ctx, genesisBlock)
	require.NoError(t, err)

	// Act - å°è¯•å†™å…¥é«˜åº¦3çš„åŒºå—ï¼ˆè·³è¿‡é«˜åº¦1å’Œ2ï¼‰
	// æ³¨æ„ï¼šBlockHeader æ²¡æœ‰ Hash å­—æ®µï¼Œéœ€è¦é€šè¿‡ blockHashClient è®¡ç®—
	hashResp, err := blockHashClient.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{Block: genesisBlock}, nil)
	require.NoError(t, err)
	genesisHash := hashResp.Hash
	block3 := testutil.CreateBlock(3, genesisHash)
	err = service.WriteBlock(ctx, block3)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "æœŸæœ›")
}

// TestWriteBlock_WithDuplicateGenesisBlock_ReturnsError æµ‹è¯•é‡å¤å†™å…¥åˆ›ä¸–åŒºå—
func TestWriteBlock_WithDuplicateGenesisBlock_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	genesisBlock := testutil.CreateBlock(0, nil)
	err := service.WriteBlock(ctx, genesisBlock)
	require.NoError(t, err)

	// Act - å†æ¬¡å†™å…¥åˆ›ä¸–åŒºå—
	err = service.WriteBlock(ctx, genesisBlock)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—")
}

// TestWriteBlock_WithoutGenesisBlock_ReturnsError æµ‹è¯•æœªåˆå§‹åŒ–é“¾æ—¶å†™å…¥éåˆ›ä¸–åŒºå—
func TestWriteBlock_WithoutGenesisBlock_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// Act - å°è¯•å†™å…¥é«˜åº¦1çš„åŒºå—ï¼ˆé“¾æœªåˆå§‹åŒ–ï¼‰
	block1 := testutil.CreateBlock(1, testutil.RandomHash())
	err := service.WriteBlock(ctx, block1)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "åˆ›ä¸–åŒºå—")
}

// ==================== æ‰¹é‡å†™å…¥æµ‹è¯• ====================

// TestWriteBlocks_WithSequentialBlocks_WritesSuccessfully æµ‹è¯•æ‰¹é‡å†™å…¥é¡ºåºåŒºå—
func TestWriteBlocks_WithSequentialBlocks_WritesSuccessfully(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// å…ˆå†™å…¥åˆ›ä¸–åŒºå—
	genesisBlock := testutil.CreateBlock(0, nil)
	err := service.WriteBlock(ctx, genesisBlock)
	require.NoError(t, err)

	// è®¡ç®—åˆ›ä¸–åŒºå—å“ˆå¸Œ
	hashResp, err := blockHashClient.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{Block: genesisBlock}, nil)
	require.NoError(t, err)
	genesisHash := hashResp.Hash

	// åˆ›å»ºè¿ç»­åŒºå—
	blocks := []*core.Block{
		testutil.CreateBlock(1, genesisHash),
		testutil.CreateBlock(2, testutil.RandomHash()),
		testutil.CreateBlock(3, testutil.RandomHash()),
	}

	// Act
	err = service.WriteBlocks(ctx, blocks)

	// Assert
	assert.NoError(t, err)
}

// TestWriteBlocks_WithEmptyList_ReturnsError æµ‹è¯•æ‰¹é‡å†™å…¥ç©ºåˆ—è¡¨
func TestWriteBlocks_WithEmptyList_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// Act
	err := service.WriteBlocks(ctx, []*core.Block{})

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ä¸ºç©º")
}

// TestWriteBlocks_WithNonSequentialBlocks_ReturnsError æµ‹è¯•æ‰¹é‡å†™å…¥éè¿ç»­åŒºå—
func TestWriteBlocks_WithNonSequentialBlocks_ReturnsError(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// å…ˆå†™å…¥åˆ›ä¸–åŒºå—
	genesisBlock := testutil.CreateBlock(0, nil)
	err := service.WriteBlock(ctx, genesisBlock)
	require.NoError(t, err)

	// è®¡ç®—åˆ›ä¸–åŒºå—å“ˆå¸Œ
	hashResp, err := blockHashClient.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{Block: genesisBlock}, nil)
	require.NoError(t, err)
	genesisHash := hashResp.Hash

	// åˆ›å»ºéè¿ç»­åŒºå—ï¼ˆè·³è¿‡é«˜åº¦2ï¼‰
	blocks := []*core.Block{
		testutil.CreateBlock(1, genesisHash),
		testutil.CreateBlock(3, testutil.RandomHash()), // è·³è¿‡é«˜åº¦2
	}

	// Act
	err = service.WriteBlocks(ctx, blocks)

	// Assert
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ä¸è¿ç»­")
}

// ==================== é«˜åº¦è·å–æµ‹è¯• ====================

// TestWriteBlock_WithEmptyChain_HeightIsZero æµ‹è¯•ç©ºé“¾æ—¶å†™å…¥åˆ›ä¸–åŒºå—
// æ³¨æ„ï¼šgetCurrentHeight æ˜¯ç§æœ‰æ–¹æ³•ï¼Œé€šè¿‡ WriteBlock é—´æ¥æµ‹è¯•
func TestWriteBlock_WithEmptyChain_HeightIsZero(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	genesisBlock := testutil.CreateBlock(0, nil)

	// Act
	err := service.WriteBlock(ctx, genesisBlock)

	// Assert
	assert.NoError(t, err)

	// éªŒè¯é“¾å°–å·²æ›´æ–°ï¼ˆé«˜åº¦ä¸º0ï¼‰
	tipKey := []byte("state:chain:tip")
	tipData, err := storage.Get(ctx, tipKey)
	assert.NoError(t, err)
	assert.NotNil(t, tipData)
	assert.GreaterOrEqual(t, len(tipData), 8, "é“¾å°–æ•°æ®åº”è¯¥è‡³å°‘åŒ…å«8å­—èŠ‚é«˜åº¦")
}

// ==================== äº¤æ˜“ç´¢å¼•åˆ é™¤æµ‹è¯• ====================

// TestDeleteBlockTransactionIndices_WithValidBlock_DeletesSuccessfully æµ‹è¯•åˆ é™¤åŒºå—äº¤æ˜“ç´¢å¼•
func TestDeleteBlockTransactionIndices_WithValidBlock_DeletesSuccessfully(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// åˆ›å»ºå¸¦äº¤æ˜“çš„åŒºå—
	block := testutil.CreateBlock(0, nil)
	block.Body = &core.BlockBody{
		Transactions: []*transaction.Transaction{
			testutil.CreateTransaction(),
			testutil.CreateTransaction(),
		},
	}

	// å…ˆå†™å…¥åŒºå—ï¼ˆåˆ›å»ºäº¤æ˜“ç´¢å¼•ï¼‰
	err := service.WriteBlock(ctx, block)
	require.NoError(t, err)

	// éªŒè¯äº¤æ˜“ç´¢å¼•å·²åˆ›å»º
	txHash1, err := txHashClient.ComputeHash(ctx, &transaction.ComputeHashRequest{Transaction: block.Body.Transactions[0]}, nil)
	require.NoError(t, err)
	txKey1 := []byte(fmt.Sprintf("indices:tx:%x", txHash1.Hash))
	_, err = storage.Get(ctx, txKey1)
	assert.NoError(t, err, "äº¤æ˜“ç´¢å¼•åº”è¯¥å­˜åœ¨")

	// Act - åˆ é™¤äº¤æ˜“ç´¢å¼•
	err = service.DeleteBlockTransactionIndices(ctx, block)

	// Assert
	assert.NoError(t, err)

	// éªŒè¯äº¤æ˜“ç´¢å¼•å·²åˆ é™¤ï¼ˆMockBadgerStore åœ¨é”®ä¸å­˜åœ¨æ—¶å¯èƒ½è¿”å› nil, nilï¼‰
	data, err := storage.Get(ctx, txKey1)
	if err == nil {
		assert.Nil(t, data, "äº¤æ˜“ç´¢å¼•åº”è¯¥å·²è¢«åˆ é™¤ï¼ˆæ•°æ®åº”ä¸º nilï¼‰")
	} else {
		assert.Error(t, err, "äº¤æ˜“ç´¢å¼•åº”è¯¥å·²è¢«åˆ é™¤ï¼ˆåº”è¯¥è¿”å›é”™è¯¯ï¼‰")
	}
}

// TestDeleteBlockTransactionIndices_WithEmptyBlock_IsIdempotent æµ‹è¯•åˆ é™¤ç©ºåŒºå—çš„äº¤æ˜“ç´¢å¼•
func TestDeleteBlockTransactionIndices_WithEmptyBlock_IsIdempotent(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	block := testutil.CreateBlock(0, nil)
	block.Body = &core.BlockBody{
		Transactions: []*transaction.Transaction{},
	}

	// Act
	err := service.DeleteBlockTransactionIndices(ctx, block)

	// Assert
	assert.NoError(t, err, "åˆ é™¤ç©ºåŒºå—çš„äº¤æ˜“ç´¢å¼•åº”è¯¥æ˜¯å¹‚ç­‰çš„")
}

// TestDeleteBlockTransactionIndices_WithNilBody_Panics æµ‹è¯•åˆ é™¤ nil Body åŒºå—çš„äº¤æ˜“ç´¢å¼•
// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nil Bodyï¼Œä¼šåœ¨è®¿é—® block.Body.Transactions æ—¶ panic
func TestDeleteBlockTransactionIndices_WithNilBody_Panics(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	block := testutil.CreateBlock(0, nil)
	block.Body = nil

	// Act & Assert
	// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nil Bodyï¼Œä¼šåœ¨è®¿é—® block.Body.Transactions æ—¶ panic
	assert.Panics(t, func() {
		_ = service.DeleteBlockTransactionIndices(ctx, block)
	}, "åˆ é™¤ nil Body åŒºå—çš„äº¤æ˜“ç´¢å¼•åº”è¯¥ panic")
}

// ==================== è¾¹ç•Œæ¡ä»¶æµ‹è¯• ====================

// TestWriteBlock_WithNilBlock_Panics æµ‹è¯•å†™å…¥ nil åŒºå—
// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nilï¼Œä¼šåœ¨è®¿é—® block.Header æ—¶ panic
func TestWriteBlock_WithNilBlock_Panics(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	// Act & Assert
	// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nilï¼Œä¼šåœ¨è®¿é—® block.Header æ—¶ panic
	// è¿™é‡ŒéªŒè¯ä¼š panicï¼ˆä½¿ç”¨ recover æ•è·ï¼‰
	assert.Panics(t, func() {
		_ = service.WriteBlock(ctx, nil)
	}, "å†™å…¥ nil åŒºå—åº”è¯¥ panic")
}

// TestWriteBlock_WithNilBlockHeader_Panics æµ‹è¯•å†™å…¥ nil Header çš„åŒºå—
// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nil Headerï¼Œä¼šåœ¨è®¿é—® block.Header.Height æ—¶ panic
func TestWriteBlock_WithNilBlockHeader_Panics(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	blockHashClient := testutil.NewTestBlockHashClient()
	txHashClient := testutil.NewTestTransactionHashClient()
	service := NewService(storage, fileStore, blockHashClient, txHashClient, nil)

	block := &core.Block{
		Header: nil,
		Body:   &core.BlockBody{},
	}

	// Act & Assert
	// æ³¨æ„ï¼šå½“å‰å®ç°ä¸æ£€æŸ¥ nil Headerï¼Œä¼šåœ¨è®¿é—® block.Header.Height æ—¶ panic
	assert.Panics(t, func() {
		_ = service.WriteBlock(ctx, block)
	}, "å†™å…¥ nil Header çš„åŒºå—åº”è¯¥ panic")
}
