package repository

import (
	"context"
	"encoding/binary"
	"fmt"

	repositoryConfig "github.com/weisyn/v1/internal/config/repository"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"google.golang.org/protobuf/proto"
)

// ============================================================================
//                           ğŸ—ï¸ åŒºå—æ•°æ®æ“ä½œå®ç°
// ============================================================================

// å­˜å‚¨é”®å‰ç¼€å®šä¹‰
const (
	BlockKeyPrefix  = "block:"  // block:<blockHash> -> Block data
	HeightKeyPrefix = "height:" // height:<height> -> blockHash
)

// åŒºå—å­˜å‚¨æ ¸å¿ƒç»„ä»¶
type BlockStorage struct {
	storage                storage.BadgerStore
	blockHashServiceClient core.BlockHashServiceClient
	config                 *repositoryConfig.PerformanceConfig // æ€§èƒ½é…ç½®
}

// GetBlock æ ¹æ®åŒºå—å“ˆå¸Œè·å–åŒºå—
func (bs *BlockStorage) GetBlock(ctx context.Context, blockHash []byte) (*core.Block, error) {
	key := formatBlockKey(blockHash)
	data, err := bs.storage.Get(ctx, key)
	if err != nil {
		return nil, fmt.Errorf("è·å–åŒºå—æ•°æ®å¤±è´¥: %w", err)
	}

	if data == nil {
		return nil, fmt.Errorf("åŒºå—ä¸å­˜åœ¨")
	}

	var block core.Block
	if err := proto.Unmarshal(data, &block); err != nil {
		return nil, fmt.Errorf("ååºåˆ—åŒ–åŒºå—æ•°æ®å¤±è´¥: %w", err)
	}

	return &block, nil
}

// GetBlockByHeight æ ¹æ®åŒºå—é«˜åº¦è·å–åŒºå—
func (bs *BlockStorage) GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) {
	// é¦–å…ˆé€šè¿‡é«˜åº¦ç´¢å¼•è·å–åŒºå—å“ˆå¸Œ
	heightKey := formatHeightKey(height)
	blockHashData, err := bs.storage.Get(ctx, heightKey)
	if err != nil {
		return nil, fmt.Errorf("è·å–é«˜åº¦ç´¢å¼•å¤±è´¥: %w", err)
	}

	if blockHashData == nil {
		return nil, fmt.Errorf("æŒ‡å®šé«˜åº¦çš„åŒºå—ä¸å­˜åœ¨")
	}

	// ç„¶åé€šè¿‡åŒºå—å“ˆå¸Œè·å–å®Œæ•´åŒºå—
	return bs.GetBlock(ctx, blockHashData)
}

// StoreBlockInTransaction åœ¨äº‹åŠ¡ä¸­å­˜å‚¨åŒºå—
func (bs *BlockStorage) StoreBlockInTransaction(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	// 1. åºåˆ—åŒ–åŒºå—æ•°æ®
	blockData, err := proto.Marshal(block)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–åŒºå—å¤±è´¥: %w", err)
	}

	// 2. è®¡ç®—åŒºå—å“ˆå¸Œ
	blockHash, err := bs.computeBlockHashWithService(ctx, block)
	if err != nil {
		return fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// 3. å­˜å‚¨åŒºå—æ•°æ®
	blockKey := formatBlockKey(blockHash)
	if err := tx.Set(blockKey, blockData); err != nil {
		return fmt.Errorf("å­˜å‚¨åŒºå—æ•°æ®å¤±è´¥: %w", err)
	}

	// 4. å­˜å‚¨é«˜åº¦ç´¢å¼•
	heightKey := formatHeightKey(block.Header.Height)
	if err := tx.Set(heightKey, blockHash); err != nil {
		return fmt.Errorf("å­˜å‚¨é«˜åº¦ç´¢å¼•å¤±è´¥: %w", err)
	}

	return nil
}

// computeBlockHashWithService ä½¿ç”¨å“ˆå¸ŒæœåŠ¡è®¡ç®—åŒºå—å“ˆå¸Œ
func (bs *BlockStorage) computeBlockHashWithService(ctx context.Context, block *core.Block) ([]byte, error) {
	req := &core.ComputeBlockHashRequest{
		Block:            block,
		IncludeDebugInfo: false,
	}

	resp, err := bs.blockHashServiceClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("å“ˆå¸ŒæœåŠ¡è°ƒç”¨å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return nil, fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	return resp.Hash, nil
}

// æ ¼å¼åŒ–åŒºå—å­˜å‚¨é”®
func formatBlockKey(blockHash []byte) []byte {
	key := make([]byte, len(BlockKeyPrefix)+len(blockHash))
	copy(key, BlockKeyPrefix)
	copy(key[len(BlockKeyPrefix):], blockHash)
	return key
}

// æ ¼å¼åŒ–é«˜åº¦ç´¢å¼•é”®
func formatHeightKey(height uint64) []byte {
	key := make([]byte, len(HeightKeyPrefix)+8)
	copy(key, HeightKeyPrefix)
	binary.BigEndian.PutUint64(key[len(HeightKeyPrefix):], height)
	return key
}

// åºåˆ—åŒ–åŒºå—æ•°æ®
func serializeBlock(block *core.Block) ([]byte, error) {
	return proto.Marshal(block)
}

// ååºåˆ—åŒ–åŒºå—æ•°æ®
func deserializeBlock(data []byte) (*core.Block, error) {
	block := &core.Block{}
	err := proto.Unmarshal(data, block)
	return block, err
}

// uint64è½¬å­—èŠ‚æ•°ç»„
func uint64ToBytes(value uint64) []byte {
	bytes := make([]byte, 8)
	binary.BigEndian.PutUint64(bytes, value)
	return bytes
}

// å­—èŠ‚æ•°ç»„è½¬uint64
func bytesToUint64(bytes []byte) uint64 {
	return binary.BigEndian.Uint64(bytes)
}

// éªŒè¯åŒºå—æ•°æ®å®Œæ•´æ€§
func (m *Manager) validateBlock(block *core.Block) error {
	if block == nil {
		return fmt.Errorf("åŒºå—æ•°æ®ä¸ºç©º")
	}
	if block.Header == nil {
		return fmt.Errorf("åŒºå—å¤´ä¸ºç©º")
	}
	if block.Body == nil {
		return fmt.Errorf("åŒºå—ä½“ä¸ºç©º")
	}
	if len(block.Header.PreviousHash) != 32 && block.Header.Height != 0 {
		return fmt.Errorf("å‰ä¸€ä¸ªåŒºå—å“ˆå¸Œæ ¼å¼é”™è¯¯")
	}
	return nil
}

// getBlock è·å–æŒ‡å®šå“ˆå¸Œçš„åŒºå—
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šå“ˆå¸Œç²¾ç¡®æŸ¥è¯¢æ ¸å¿ƒ
// é€šè¿‡åŒºå—å“ˆå¸Œè·å–å®Œæ•´åŒºå—æ•°æ®ï¼Œæ”¯æŒå†å²æ•°æ®è¿½æº¯ã€‚
//
// å®ç°è¦ç‚¹ï¼š
// - ç²¾ç¡®åŒ¹é…ï¼šåŸºäºSHA256å“ˆå¸Œçš„ç²¾ç¡®æŸ¥è¯¢
// - é«˜æ€§èƒ½ï¼šç›´æ¥é”®å€¼æŸ¥è¯¢ï¼ŒO(1)æ—¶é—´å¤æ‚åº¦
// - å®Œæ•´æ•°æ®ï¼šè¿”å›åŒ…å«æ‰€æœ‰äº¤æ˜“çš„å®Œæ•´åŒºå—
func (m *Manager) getBlock(ctx context.Context, blockHash []byte) (*core.Block, error) {
	if m.logger != nil {
		m.logger.Debugf("æŸ¥è¯¢åŒºå— - blockHash: %x", blockHash)
	}

	// 1. éªŒè¯å“ˆå¸Œæ ¼å¼ï¼ˆ32å­—èŠ‚SHA256ï¼‰
	if len(blockHash) != 32 {
		return nil, fmt.Errorf("æ— æ•ˆçš„åŒºå—å“ˆå¸Œé•¿åº¦: %dï¼ŒæœŸæœ›32å­—èŠ‚", len(blockHash))
	}

	// 2. ä»å­˜å‚¨ä¸­æŸ¥è¯¢åŒºå—æ•°æ®
	blockKey := formatBlockKey(blockHash)
	blockData, err := m.badgerStore.Get(ctx, blockKey)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢åŒºå—æ•°æ®å¤±è´¥: %w", err)
	}
	if blockData == nil {
		return nil, fmt.Errorf("åŒºå—ä¸å­˜åœ¨")
	}

	// 3. ååºåˆ—åŒ–åŒºå—æ•°æ®
	block, err := deserializeBlock(blockData)
	if err != nil {
		return nil, fmt.Errorf("ååºåˆ—åŒ–åŒºå—å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Debugf("æˆåŠŸæŸ¥è¯¢åŒºå— - height: %d, txCount: %d", block.Header.Height, len(block.Body.Transactions))
	}

	return block, nil
}

// getBlockByHeight æŒ‰é«˜åº¦è·å–åŒºå—
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šé«˜åº¦ç´¢å¼•æŸ¥è¯¢æ ¸å¿ƒ
// é€šè¿‡åŒºå—é«˜åº¦è·å–åŒºå—æ•°æ®ï¼Œæ”¯æŒåŸºäºé«˜åº¦çš„é“¾å¼éªŒè¯ã€‚
//
// å®ç°è¦ç‚¹ï¼š
// - é«˜åº¦æ˜ å°„ï¼šé€šè¿‡HeightIndexè¿›è¡Œé«˜æ•ˆæŸ¥è¯¢
// - å”¯ä¸€æ€§ï¼šæ¯ä¸ªé«˜åº¦å¯¹åº”å”¯ä¸€åŒºå—
// - å®Œæ•´æ•°æ®ï¼šè¿”å›åŒ…å«æ‰€æœ‰äº¤æ˜“çš„å®Œæ•´åŒºå—
func (m *Manager) getBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) {
	if m.logger != nil {
		m.logger.Debugf("æŒ‰é«˜åº¦æŸ¥è¯¢åŒºå— - height: %d", height)
	}

	// 1. é€šè¿‡é«˜åº¦ç´¢å¼•è·å–åŒºå—å“ˆå¸Œ
	heightKey := formatHeightKey(height)
	blockHash, err := m.badgerStore.Get(ctx, heightKey)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢é«˜åº¦ç´¢å¼•å¤±è´¥: %w", err)
	}
	if blockHash == nil {
		return nil, fmt.Errorf("æŒ‡å®šé«˜åº¦çš„åŒºå—ä¸å­˜åœ¨: %d", height)
	}

	// 2. ä½¿ç”¨åŒºå—å“ˆå¸ŒæŸ¥è¯¢å®Œæ•´åŒºå—
	block, err := m.getBlock(ctx, blockHash)
	if err != nil {
		return nil, fmt.Errorf("é€šè¿‡å“ˆå¸ŒæŸ¥è¯¢åŒºå—å¤±è´¥: %w", err)
	}

	return block, nil
}

// getBlockRange è·å–åŒºå—é«˜åº¦èŒƒå›´
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šæ‰¹é‡åŒºå—æŸ¥è¯¢æ ¸å¿ƒ
// è·å–æŒ‡å®šé«˜åº¦èŒƒå›´å†…çš„æ‰€æœ‰åŒºå—ï¼Œæ”¯æŒåŒºå—åŒæ­¥ã€æ•°æ®åˆ†æã€‚
//
// å®ç°è¦ç‚¹ï¼š
// - èŒƒå›´æŸ¥è¯¢ï¼šæ”¯æŒæŒ‡å®šèµ·å§‹å’Œç»“æŸé«˜åº¦çš„è¿ç»­æŸ¥è¯¢
// - æ‰¹é‡ä¼˜åŒ–ï¼šä¸€æ¬¡æ€§è·å–å¤šä¸ªåŒºå—ï¼Œå‡å°‘æŸ¥è¯¢å¼€é”€
// - é¡ºåºè¿”å›ï¼šä¸¥æ ¼æŒ‰ç…§é«˜åº¦å‡åºè¿”å›åŒºå—åˆ—è¡¨
// - è¾¹ç•Œå¤„ç†ï¼šè‡ªåŠ¨å¤„ç†ä¸å­˜åœ¨çš„é«˜åº¦ï¼Œåªè¿”å›æœ‰æ•ˆåŒºå—
func (m *Manager) getBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error) {
	if m.logger != nil {
		m.logger.Debugf("æŸ¥è¯¢åŒºå—èŒƒå›´ - startHeight: %d, endHeight: %d", startHeight, endHeight)
	}

	// 1. éªŒè¯é«˜åº¦èŒƒå›´å‚æ•°
	if startHeight > endHeight {
		return nil, fmt.Errorf("èµ·å§‹é«˜åº¦ä¸èƒ½å¤§äºç»“æŸé«˜åº¦: start=%d, end=%d", startHeight, endHeight)
	}

	// ä»é…ç½®ä¸­è·å–æœ€å¤§æŸ¥è¯¢èŒƒå›´
	maxRangeSize := uint64(m.config.Performance.MaxBlockRangeSize)
	rangeSize := endHeight - startHeight + 1
	if rangeSize > maxRangeSize {
		return nil, fmt.Errorf("æŸ¥è¯¢èŒƒå›´è¿‡å¤§: %dï¼Œæœ€å¤§å…è®¸: %d", rangeSize, maxRangeSize)
	}

	// 2. æ‰¹é‡è·å–æŒ‡å®šèŒƒå›´å†…çš„åŒºå—
	blocks := make([]*core.Block, 0, rangeSize)

	for height := startHeight; height <= endHeight; height++ {
		block, err := m.getBlockByHeight(ctx, height)
		if err != nil {
			// å¦‚æœåŒºå—ä¸å­˜åœ¨ï¼Œè·³è¿‡å¹¶ç»§ç»­ï¼ˆè¾¹ç•Œå¤„ç†ï¼‰
			if m.logger != nil {
				m.logger.Debugf("è·³è¿‡ä¸å­˜åœ¨çš„åŒºå— - height: %d, error: %v", height, err)
			}
			continue
		}
		blocks = append(blocks, block)
	}

	if m.logger != nil {
		m.logger.Debugf("æˆåŠŸæŸ¥è¯¢åŒºå—èŒƒå›´ - è¯·æ±‚èŒƒå›´: %d-%d, å®é™…è·å–: %dä¸ªåŒºå—",
			startHeight, endHeight, len(blocks))
	}

	return blocks, nil
}

// getHighestBlock è·å–æœ€é«˜åŒºå—ä¿¡æ¯
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šé“¾çŠ¶æ€æŸ¥è¯¢æ ¸å¿ƒ
// è¿”å›å½“å‰åŒºå—é“¾çš„æœ€é«˜åŒºå—ä¿¡æ¯ï¼ˆé«˜åº¦å’Œå“ˆå¸Œï¼‰ï¼Œä¸ºç³»ç»Ÿç®¡ç†æä¾›å…³é”®ä¿¡æ¯ã€‚
//
// å®ç°è¦ç‚¹ï¼š
// - é“¾çŠ¶æ€è·å–ï¼šè¿”å›å½“å‰é“¾çš„æœ€æ–°çŠ¶æ€ä¿¡æ¯
// - è½»é‡çº§æŸ¥è¯¢ï¼šåªè¿”å›é«˜åº¦å’Œå“ˆå¸Œï¼Œä¸è¿”å›å®Œæ•´åŒºå—æ•°æ®
// - å®æ—¶çŠ¶æ€ï¼šåæ˜ å½“å‰é“¾çš„æœ€æ–°çŠ¶æ€
func (m *Manager) getHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error) {
	if m.logger != nil {
		m.logger.Debug("æŸ¥è¯¢æœ€é«˜åŒºå—")
	}

	// é€šè¿‡é“¾çŠ¶æ€ç®¡ç†è·å–æœ€é«˜åŒºå—ä¿¡æ¯
	state, err := m.getChainState(ctx)
	if err != nil {
		return 0, nil, fmt.Errorf("è·å–é“¾çŠ¶æ€å¤±è´¥: %w", err)
	}

	if state.HighestHeight == 0 && state.HighestHash == nil {
		// é“¾ä¸ºç©ºçš„æƒ…å†µ
		return 0, nil, nil
	}

	if m.logger != nil {
		m.logger.Debugf("æˆåŠŸæŸ¥è¯¢æœ€é«˜åŒºå— - height: %d, hash: %x", state.HighestHeight, state.HighestHash)
	}

	return state.HighestHeight, state.HighestHash, nil
}
